--- a/src/00-introduccion.html
+++ b/src/00-introduccion.html
@@ -13,8 +13,8 @@
       <strong><em>Lema: “Consolidar el camino”</em></strong> Habiendo atravesado
       sus primeros años de experiencia en patrulla, acantonamientos y
       campamentos, el/la explorador/a reconoce su lugar dentro del Batallón y
-      comienza a madurar con una visión más amplia el estilo de vida que -como
-      caminole propone el Movimiento Exploradoril.
+      comienza a madurar con una visión más amplia el estilo de vida que como
+      camino le propone el Movimiento Exploradoril.
     </p>
     <p>
       Consolidar significa afirmar nuestra espiritualidad exploradoril. Esto
@@ -48,10 +48,11 @@
       necesaria la reconstrucción de nuevas seguridades a partir del
       reconocimiento de las propias raíces, la profundización de la
       espiritualidad exploradoril y la tarea de asumir un lugar como
-      sujeto-en-construcción de sus propios proyectos y sueños. El acercamiento
-      a la persona de Jesús a través del testimonio de Don Bosco, y su reflejo en
-      las amistades, la familia y la comunidad exploradoril como parte de la
-      Iglesia animan con amor la vocación de servir a Dios en los hermanos.
+      sujeto&ndash;en&ndash;construcción de sus propios proyectos y sueños. El
+      acercamiento a la persona de Jesús a través del testimonio de Don Bosco, y
+      su reflejo en las amistades, la familia y la comunidad exploradoril como
+      parte de la Iglesia animan con amor la vocación de servir a Dios en los
+      hermanos.
     </p>
 
     <h2>EMBLEMA</h2>
@@ -62,7 +63,7 @@
       puede poner por otro. Tenemos que decubrir cuál es el proyecto de Dios
       para cada uno y comenzar a realizarlo. En nuestra vida no deben existir
       las aristas del orgullo, la envidia, la crítica destructiva, etc. Debemos
-      caracc-- terizarnos por nuestro amor y respeto hacia todos los demás.
+      caracterizarnos por nuestro amor y respeto hacia todos los demás.
     </p>
     <p>
       <strong>Los leños encendidos:</strong> Nos representan a cada uno de
@@ -81,8 +82,9 @@
       lazos fraternos, como verdadera familia que ilumina brindando amor a
       través de buenas acciones y opciones de fe cada vez más maduras que
       cotidianamente dan sentido a la vida. De esta manera, nuestra vocación de
-      ser Luz -como Jesús- nos invita a ser coherentes con nuestra fe iluminando
-      con acciones de servicio nuestra vida cotidiana que empieza por casa.
+      ser Luz &mdash;como Jesús&mdash; nos invita a ser coherentes con nuestra
+      fe iluminando con acciones de servicio nuestra vida cotidiana que empieza
+      por casa.
     </p>
     <p>
       <strong>Don Bosco:</strong> El rostro de Don Bosco aparece como parte del
@@ -132,8 +134,8 @@
     <h2>SIGNIFICADO DEL LIBRO</h2>
     <p>
       El trabajo en equipo favoreció el contacto con diferentes realidades
-      socio-culturales a partir del acercamiento a las diversas miradas de los
-      batallones. Este trabajo en conjunto nos permitió darnos cuenta que la
+      socio&ndash;culturales a partir del acercamiento a las diversas miradas de
+      los batallones. Este trabajo en conjunto nos permitió darnos cuenta que la
       elaboración de este material tenía muchas implicacias y que estaba
       destinado a diversas realidades relacionadas a la forma en que cada
       Batallón lleva adelante su “hacer” cotidiano. Por lo tanto, es importante
@@ -181,9 +183,9 @@
       invitando a vivir los valores de Jesús a través de los buenos consejos y
       las “palabritas al oído” que Don Bosco le repite a cada joven de hoy, a
       través de animadores y salesianos. De esta forma, la tarea de “Consolidar
-      el camino” implica recuperar la riqueza y re-valorar la pedagogía
-      preventiva poniendo con el ejemplo un estilo de vida en Iglesia-comunidad
-      que creemos vale la pena seguir.
+      el camino” implica recuperar la riqueza y revalorar la pedagogía
+      preventiva poniendo con el ejemplo un estilo de vida en
+      Iglesia&ndash;comunidad que creemos vale la pena seguir.
     </p>
     <h2>EJES TRANSVERSALES Y CONTENIDOS</h2>
     <p>
@@ -418,7 +420,7 @@
       exploradoriles profundas, de acuerdo a cada meta parcial.
     </p>
     <p>
-      El objetivo de la meta Rastreadores-Hogueras es CONSOLIDAR EL CAMINO
+      El objetivo de la meta Rastreadores&ndash;Hogueras es CONSOLIDAR EL CAMINO
       exploradoril, recuperando el trayecto recorrido e identificándose con la
       Iglesia, los valores y el lugar activo que cada explorador tiene en su
       vida y en su comunidad.
@@ -428,7 +430,7 @@
       permanente con el explorador en la vida de campamento.
     </p>
     <p>
-      Junto a los Rastreadores-Hogueras, trataremos de descubrir la gran
+      Junto a los Rastreadores&ndash;Hogueras, trataremos de descubrir la gran
       variedad de servcios que nos presenta el agua como tal, purifica, da vida,
       refresca, sacia, empuja, tranparenta. etc., y se relacionará con la
       capacidad de transformación que el encuentro con Cristo tiene en nuestras
@@ -442,7 +444,7 @@
         <th><strong>Consigna</strong></th>
         <th><strong>Eje</strong></th>
         <th><strong>Atravesado por...</strong></th>
-        <th><strong>Objetivo: Los Rastreadores-Hogueras...</strong></th>
+        <th><strong>Objetivo: Los Rastreadores&ndash;Hogueras...</strong></th>
       </tr>
       <tr>
         <td><strong>1.&nbsp;Confianza</strong></td>
@@ -697,8 +699,8 @@
           grupo, familia y sociedad. Descubrir que el bien común se construye
           entre todos y que cada uno tiene dones que son para ponerlos al
           servicio del otro. <br />… brindaron sus dones a través de un
-          compromiso crresponsable en el grupo, asumiendo las responsabili-
-          dades propias.
+          compromiso crresponsable en el grupo, asumiendo las responsabilidades
+          propias.
         </td>
       </tr>
       <tr>
@@ -745,8 +747,8 @@
           ... descubrieron que el servicio es la forma concreta de ser
           cristiano. <br />… valoraron el espíritu de servicio y colaboración de
           María en la misión de Jesús. ... adoptaron una forma servicial de ser
-          y actuar. <br />… pusieron en práctica el Siempre Listo con mayor con-
-          vicción y conciencia.
+          y actuar. <br />… pusieron en práctica el Siempre Listo con mayor
+          convicción y conciencia.
         </td>
       </tr>
       <tr>
@@ -780,14 +782,14 @@
       acompañamieto en la vida de nuestros/as chicos/as y jóvenes. No son temas
       aislados unos de otros, sino que de alguna manera estos contenidos tienden
       a relacionarse entre sí. Todos son parte de la misma realidad de los
-      Rastreadores-Hogueras.
+      Rastreadores&ndash;Hogueras.
     </p>
     <p>
-      Los Rastreadores-Hogueras se encuentran transitando una edad compleja, de
-      transción, donde la adolescencia les abre las puertas para conocer a
-      nuevas personas y grupos a través de la escuela secundaria. Es un momento
-      donde la vida se llena de preguntas y se siente en la necesidad de dar
-      respuesta a muchos llamados.
+      Los Rastreadores&ndash;Hogueras se encuentran transitando una edad
+      compleja, de transción, donde la adolescencia les abre las puertas para
+      conocer a nuevas personas y grupos a través de la escuela secundaria. Es
+      un momento donde la vida se llena de preguntas y se siente en la necesidad
+      de dar respuesta a muchos llamados.
     </p>
     <p>
       Luego de haber recorrido la etapa de ambientación, su compromiso e interés
@@ -835,23 +837,20 @@
     <p>
       Este nuevo espacio en las consignas está destinado a un tiempo formativo y
       reflexivo propio para los animadores que tienen que prestar el servicio de
-      animación de los Rastredores-Hogueras. Para revisar qué piensan, qué
+      animación de los Rastredores&ndash;Hogueras. Para revisar qué piensan, qué
       sienten cada uno en relación al tema que tendrán que abordar con los/as
       chicos/as, para evitar transmitirles los propios conflictos.
     </p>
     <p>
       Además te proponemos un texto del evangelio para orar y reflexionar, y que
-      esta cita ayu-
-    </p>
-    <p>
-      de e ilumine en tu vida y puedas ver esta temática de otra manera, con los
-      ojos de Dios.
+      esta cita ayude e ilumine en tu vida y puedas ver esta temática de otra
+      manera, con los ojos de Dios.
     </p>
     <h3>3) “ENTENDIÉNDOLOS”</h3>
     <p>
       En este espacio queremos ayudarte a “comprender” más aun a tus
-      Rastreadores-Hogueras, con un enfoque del contenido desde la psicología,
-      psicopedagía etc.
+      Rastreadores&ndash;Hogueras, con un enfoque del contenido desde la
+      psicología, psicopedagía etc.
     </p>
     <p>
       Este momento es el que contempla la diversidad de contextos y la situación
@@ -861,11 +860,12 @@
     <h3>4) “OBJETIVOS CUMPLIDOS”</h3>
     <p>Los objetivos generales los van a proponer las consignas.</p>
     <p>
-      El específico lo establecerán los animadores de Rastreadores-Hogueras,
-      respetando la diversidad y la situación particular del grupo. A partir de
-      los emergentes grupales, es dcir, aquello que les interesa profundizar en
-      la relación de los Rastreadores-Hogueras. ¿En qué situación real
-      fundamentaron la elección de la consigna?
+      El específico lo establecerán los animadores de
+      Rastreadores&ndash;Hogueras, respetando la diversidad y la situación
+      particular del grupo. A partir de los emergentes grupales, es dcir,
+      aquello que les interesa profundizar en la relación de los
+      Rastreadores&ndash;Hogueras. ¿En qué situación real fundamentaron la
+      elección de la consigna?
     </p>
     <p>
       El objetivo está expresado en pasado como algo que ya sucedió, de manera
@@ -876,10 +876,10 @@
     <p>
       Este es el momento de elegir que “actividad central” resulta más
       conveniente, según la realidad del grupo (gustos, actitudes, habilidades,
-      etc.). Esta actividad nos ayudará a seguir reflexionando sobre el contenido
-      de la consigna.
+      etc.). Esta actividad nos ayudará a seguir reflexionando sobre el
+      contenido de la consigna.
     </p>
-    <h3>6) EVALUACIÓN PARA LOS RASTREADORES-HOGUERAS</h3>
+    <h3>6) EVALUACIÓN PARA LOS RASTREADORES&ndash;HOGUERAS</h3>
     <p>
       La evaluación del proceso formativo, en función de los chicos/as y de los
       animadores porque se trata de un doble proceso formativo, que hay que
@@ -895,18 +895,18 @@
     <p>
       Por eso proponemos que <strong>la carpa</strong> sea el icono que
       represente el momento más personal de encuentro entre los
-      Rastreadores-Hogueras, donde se comparta lo trabajado en la consigna,
-      rezando y celebrando el proceso. También proponemos que la carpa sea un
-      lugar real del batallón para los Rastreadores-Hogueras que, por pequeño
-      que sea, pueda ser exclusivo para ellos. Incluso armar la carpa señalaría
-      un momento especial además de constituir una alternativa cuando no se
-      cuenta con espacio.
+      Rastreadores&ndash;Hogueras, donde se comparta lo trabajado en la
+      consigna, rezando y celebrando el proceso. También proponemos que la carpa
+      sea un lugar real del batallón para los Rastreadores&ndash;Hogueras que,
+      por pequeño que sea, pueda ser exclusivo para ellos. Incluso armar la
+      carpa señalaría un momento especial además de constituir una alternativa
+      cuando no se cuenta con espacio.
     </p>
     <h3>7) EVALUACIÓN PARA LOS ANIMADORES</h3>
     <p>
       Otro momento nuevo es la evaluación para el/los animadores, porque no solo
-      fue eductivo para los Rastreadores-Hogueras sino también para aquellos que
-      realizan el servicio de acompañarlos.
+      fue eductivo para los Rastreadores&ndash;Hogueras sino también para
+      aquellos que realizan el servicio de acompañarlos.
     </p>
     <p>
       <strong>Tomando mate</strong> <strong>:</strong> un tiempo gratuito para
@@ -919,8 +919,9 @@
     <p>
       Por eso proponemos que <strong>el mate</strong> sea el icono que
       represente el momento de encuentro entre los animadores de
-      Rastreadores-Hogueras, donde se comparta la vivencia de cada animador
-      durante el trabajo con la consigna, rezar y celebrar juntos el proceso.
+      Rastreadores&ndash;Hogueras, donde se comparta la vivencia de cada
+      animador durante el trabajo con la consigna, rezar y celebrar juntos el
+      proceso.
     </p>
     <p>
       Con todos estos elementos, y solo si cumplís con todos los pasos que te
