--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -43,8 +43,8 @@
         grupo
       </li>
       <li>
-        Algún Rastreador-Hoguera está pasando por algún momento difícil y el
-        grupo (por desconocimiento o incapacidad) no lo acompaña.
+        Algún Rastreador&ndash;Hoguera está pasando por algún momento difícil y
+        el grupo (por desconocimiento o incapacidad) no lo acompaña.
       </li>
       <li>
         Uno o más exploradores tiene mucha dificultad a la hora de participar en
@@ -86,13 +86,13 @@
       confianza. En la familiaridad con el grupo, en el compartir la vida
       (aunque sea un día a la semana). Cuando uno se da cuenta que es amdo (que
       se preocupan sinceramente, que solo quieren lo mejor para esa persona) la
-      confianza llega al instante. Si nuestro grupo de Rastreadores-Hogueras
-      confía en nosotros y nosotros respondemos responsablemente a esa
-      confianza, nuestra tarea educadora no solo va a ser mucho más sencilla
-      sino que será realmente salesiana. La confianza se gana con el testimonio
-      que damos, acompañando, aconsejando, sin caer en el innecesario
-      “amiguismo” con lo cual solo logramos desdibujar el papel formativo y
-      adulto que debemos presentar ante el grupo.
+      confianza llega al instante. Si nuestro grupo de
+      Rastreadores&ndash;Hogueras confía en nosotros y nosotros respondemos
+      responsablemente a esa confianza, nuestra tarea educadora no solo va a ser
+      mucho más sencilla sino que será realmente salesiana. La confianza se gana
+      con el testimonio que damos, acompañando, aconsejando, sin caer en el
+      innecesario “amiguismo” con lo cual solo logramos desdibujar el papel
+      formativo y adulto que debemos presentar ante el grupo.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- Confianza en lo poco y en lo mucho (Lc 16, 10-12)</h3>
@@ -114,8 +114,8 @@
     </p>
     <h2>ENTENDIENDOLOS</h2>
     <p>
-      En general, los Rastreadores-Hogueras, buscan afianzarse en el grupo y
-      profundizar sus amistades. Comienzan a descubrir intereses y vivencias
+      En general, los Rastreadores&ndash;Hogueras, buscan afianzarse en el grupo
+      y profundizar sus amistades. Comienzan a descubrir intereses y vivencias
       comunes que los llevan a relacionarse con los que son más afines. Tienen
       confianza con sus amigos más cercanos pero puede costar abrirse al resto
       del grupo. Necesitan dialogar con personas cercanas. El grupo exploradoril
@@ -401,9 +401,9 @@
         >“Muchas veces confiamos en un médico: está bien hacerlo, porque el
         médico está allí para curar; tenemos confianza en una persona: hermanos,
         hermanas, que nos pueden ayudar. Está bien tener esta confianza humana
-        entre nosotros. Pero nos olvidamos de la confianza en el Señor: ésta
-        es la clave del éxito en la vida. ¡La confianza en el Señor,
-        encomendémonos al Señor!”</em
+        entre nosotros. Pero nos olvidamos de la confianza en el Señor: ésta es
+        la clave del éxito en la vida. ¡La confianza en el Señor, encomendémonos
+        al Señor!”</em
       >
     </p>
     <br />
