--- a/src/02-compartir.html
+++ b/src/02-compartir.html
@@ -44,8 +44,8 @@
     <p>Es el momento propicio para esta consigna porque:</p>
     <ul>
       <li>
-        Los Rastreadores-Hogueras formaron muchos subgrupos dentro de la etapa o
-        patrulla.
+        Los Rastreadores&ndash;Hogueras formaron muchos subgrupos dentro de la
+        etapa o patrulla.
       </li>
       <li>Algún miembro del grupo está pasando por problemas muy difíciles.</li>
       <li>
@@ -86,7 +86,7 @@
       solo querer que el otro esté mejor y limitarnos a pedir una y otra vez por
       ello. Es fundamental materializarse, escuchar, dar el hombro. El
       explorador es miembro activo de su Iglesia, de su comunidad, y en nuestro
-      caso del grupo de Rastreadores-Hogueras.
+      caso del grupo de Rastreadores&ndash;Hogueras.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- 2 Corintios, 6-8: El que siembra</h3>
@@ -155,8 +155,9 @@
     <h3>ACTIVIDAD 1: ELIGIENDO CRUCES</h3>
     <h3>- Orientación:</h3>
     <p>
-      La actividad busca que el Rastreador-Hoguera descubra que el compartir en
-      comunidad implica ayudar al otro pero también animarse a ser ayudado.
+      La actividad busca que el Rastreador&ndash;Hoguera descubra que el
+      compartir en comunidad implica ayudar al otro pero también animarse a ser
+      ayudado.
     </p>
     <h3>- Actividad:</h3>
     <ol>
@@ -219,14 +220,15 @@
     </p>
 
     <p>
-      -Vea, amigo. Yo ya estoy cansado de que los hombres se me anden quejando
-      siempre. Parce que nadie está conforme con lo que yo le he destinado. Así
-      que desde ahora le dejo a cada uno que elija la cruz que tendrá que llevar.
-      Pero que después no me vengan con quejas. La que agarren tendrán que
-      cargarla para el resto del viaje y sin protestar. Y como usted está aquí,
-      será el primero a quien le doy la oportunidad de seleccionar la suya, vea,
-      acabo de recorrer el mundo retirando todas las cruces de los hombres, y
-      las he traído a este galpón grande. Levátese y elija la que le guste.
+      &mdash;Vea, amigo. Yo ya estoy cansado de que los hombres se me anden
+      quejando siempre. Parce que nadie está conforme con lo que yo le he
+      destinado. Así que desde ahora le dejo a cada uno que elija la cruz que
+      tendrá que llevar. Pero que después no me vengan con quejas. La que
+      agarren tendrán que cargarla para el resto del viaje y sin protestar. Y
+      como usted está aquí, será el primero a quien le doy la oportunidad de
+      seleccionar la suya, vea, acabo de recorrer el mundo retirando todas las
+      cruces de los hombres, y las he traído a este galpón grande. Levátese y
+      elija la que le guste.
     </p>
     <p>
       Sorprendido el hombre, mira y ve que efectivamente el galpón estaba que
@@ -281,7 +283,7 @@
     </p>
 
     <p>
-      -Ven, amigo. Le voy a decir una cosa. Esa cruz que usted eligió es
+      &mdash;Ven, amigo. Le voy a decir una cosa. Esa cruz que usted eligió es
       justamente la que ha vnido llevando hasta el presente. Si se fija bien,
       tiene sus iniciales y señas. Yo mismo se la he sacado esta noche y no me
       costó mucho traerla, porque ya estaba aquí. Así que de ahora en adelante
@@ -347,8 +349,8 @@
     </p>
     <p>
       Compartir las dificultades: son dos las actitudes que van juntas en el
-      grupo - Dejarse ayudar por el amigo compartiendo con él nuestra cruz y el
-      estar dispuesto a poner el hombro para que el otro se apoye-.
+      grupo &mdash; Dejarse ayudar por el amigo compartiendo con él nuestra cruz
+      y el estar dispuesto a poner el hombro para que el otro se apoye&mdash;.
     </p>
     <p>
       Cada uno tiene su propia cruz en la vida. Uno puede quedarse sólo con ella
@@ -376,9 +378,9 @@
     <h3>ACTIVIDAD 2: HACER UN PUENTE</h3>
     <p>
       <strong>- Orientación:</strong> Esta actividad busca que el
-      Rastreador-Hoguera, mediante lo lúdico, logre comprender sobre la
-      importancia de la unión del grupo frente a las dificultades. Que es nece-
-      sario construir juntos en el camino de su vida.
+      Rastreador&ndash;Hoguera, mediante lo lúdico, logre comprender sobre la
+      importancia de la unión del grupo frente a las dificultades. Que es
+      necesario construir juntos en el camino de su vida.
     </p>
     <h3>- Actividad:</h3>
     <ol>
