--- a/src/03-afectividad.html
+++ b/src/03-afectividad.html
@@ -237,12 +237,12 @@
     </p>
     <h4>- Actividad:</h4>
     <p>
-      Que cada uno elija tres personas que se parezcan en algo, las nombre en voz
-      alta, pero sin decir en qué se parecen para él. Todos los demás tratan de
-      descubrirlo arriesgando las posbles razones. Al final, el que los eligió
-      dice en que se parecían. Como variante, a modo de juego ir dando puntajes
-      al acertar e ir cambiando de “rubros” o aspectos de la persona sobre los
-      cuales es pueden buscar los parecidos. Luego plantear:
+      Que cada uno elija tres personas que se parezcan en algo, las nombre en
+      voz alta, pero sin decir en qué se parecen para él. Todos los demás tratan
+      de descubrirlo arriesgando las posbles razones. Al final, el que los
+      eligió dice en que se parecían. Como variante, a modo de juego ir dando
+      puntajes al acertar e ir cambiando de “rubros” o aspectos de la persona
+      sobre los cuales es pueden buscar los parecidos. Luego plantear:
     </p>
     <ul>
       <li>
@@ -301,8 +301,8 @@
       </p>
       <p>
         <em>
-          Al llegar a ese lugar, Jesús miró hacia arriba y le dijo: “Zaqueo, baja
-          pronto, porque hoy tengo que alojarme en tu casa.”
+          Al llegar a ese lugar, Jesús miró hacia arriba y le dijo: “Zaqueo,
+          baja pronto, porque hoy tengo que alojarme en tu casa.”
         </em>
       </p>
       <p><em> Zaqueo bajó rápidamente y lo recibió con alegría. </em></p>
@@ -472,9 +472,9 @@
       que se expresan a veces violentamente, cerrándose y aislándose, repitiendo
       situaciones familiares. También sentimientos de cariño, amistad, amor,
       etc., aparecen amistades íntimas, noviazgos. En la medida que tengamos
-      confianza y nos animemos a compartir nuestros sentimientos, segura-
+      confianza y nos animemos a compartir nuestros sentimientos, seguramente
+      crecerá el afecto y la unidad en el grupo.
     </p>
-    <p>mente crecerá el afecto y la unidad en el grupo.</p>
     <p>
       Solos no podemos superar todas las situaciones que se nos presentan, no
       hace falta esperar a una crisis para pedir ayuda. Es necesario que
@@ -509,9 +509,9 @@
       <p>
         <em>
           Jesús, conmoviéndose nuevamente, llegó al sepulcro, que era una cueva
-          con una piedra encima, y le dijo: “Quiten la piedra”. Marta, la hermana
-          del difunto, le respondió: “Señor, huele mal; ya hace cuatro días que
-          está muerto”.
+          con una piedra encima, y le dijo: “Quiten la piedra”. Marta, la
+          hermana del difunto, le respondió: “Señor, huele mal; ya hace cuatro
+          días que está muerto”.
         </em>
       </p>
       <p>
@@ -543,8 +543,8 @@
     <p>
       Darle a cada uno una imagen del círculo de personas. Que elijan una de
       ellas con la que se identifiquen y le pongan su nombre. Proponer que
-      piensen un momento en las personas que más quieren y que las ubiquen tam-
-      bién en el dibujo, poniéndole nombre.
+      piensen un momento en las personas que más quieren y que las ubiquen
+      también en el dibujo, poniéndole nombre.
     </p>
     <h5>Preguntar:</h5>
     <ul>
@@ -604,13 +604,10 @@
     </p>
     <p>
       Jesús es muy sencillo, alguien muy acogedor de los demás, alguien que
-      descansa en sus pro-
-    </p>
-    <p>
-      pios límites de ser humano, alguien que pone su seguridad no en poderes
-      especiales, sino en su sinceridad para vivir y para aportar su propia vida
-      de Hijo de Dios y en su sentido de amor y de justicia para convocar y para
-      encontrarse con sus hermanos.
+      descansa en sus propios límites de ser humano, alguien que pone su
+      seguridad no en poderes especiales, sino en su sinceridad para vivir y
+      para aportar su propia vida de Hijo de Dios y en su sentido de amor y de
+      justicia para convocar y para encontrarse con sus hermanos.
     </p>
     <p>
       Nuestro Jesús es un Jesús que goza en una rueda de mate y se anima a
@@ -645,8 +642,8 @@
       <p>
         Somos novios, pues los dos sentimos mutuo amor profundo y con eso ya
         ganamos lo más grande de este mundo.<br />
-        Nos amamos, nos besamos como novios, nos deseamos y hasta a veces - sin
-        motivo y sin razón - nos enojamos.
+        Nos amamos, nos besamos como novios, nos deseamos y hasta a veces
+        &mdash; sin motivo y sin razón &mdash; nos enojamos.
       </p>
       <p>
         Somos novios, mantenemos un cariño limpio y puro. <br />Como todos
@@ -808,7 +805,7 @@
       socialmente integrables y mutuamente enriquecedores.
     </p>
     <div class="god">
-      <h3>Palabra de Dios: Cartas 4, 1-16. El amado - La amada</h3>
+      <h3>Palabra de Dios: Cartas 4, 1-16. El amado &mdash; La amada</h3>
       <p><em> [El Amado] </em></p>
       <p>
         <em>
@@ -932,7 +929,7 @@
     <ul>
       <li>“Conocidos”</li>
       <li>“Compañeros”</li>
-      <li>“Amigos-Novios”</li>
+      <li>“Amigos&ndash;Novios”</li>
       <li>“Esposos”.</li>
     </ul>
     <p>
@@ -1045,8 +1042,8 @@
       <strong>El dormitorio del amor de pareja:</strong> Otra alternativa es que
       sea como el dormitorio donde no entra cualquiera, el lugar dormitaría,
       donde tenemos las cosas más valiosas, las que nos idetifican, nuestros
-      recuerdos y afectos. Un lugar para ir madurando nuestros afectos, aprende-
-      mos a dar y recibir, a querer y dejarnos querer planamente.
+      recuerdos y afectos. Un lugar para ir madurando nuestros afectos,
+      aprendemos a dar y recibir, a querer y dejarnos querer planamente.
     </p>
     <h5>Diferencias entre varones y mujeres:</h5>
     <p>
@@ -1081,9 +1078,9 @@
       mujeres.
     </p>
     <p>
-      El cara a cara “varón-mujer” lleva al descubrimiento y a la integración de
-      los valores del otro sexo. Uno y otro descubren la otra manera de ser
-      humano y al mismo tiempo descubre la propia manera de serlo.
+      El cara a cara “varón&ndash;mujer” lleva al descubrimiento y a la
+      integración de los valores del otro sexo. Uno y otro descubren la otra
+      manera de ser humano y al mismo tiempo descubre la propia manera de serlo.
     </p>
     <p>
       El varón estimula a la mujer a descubrir y realizar su dimensión
@@ -1193,7 +1190,7 @@
     </p>
     <h5>Placer y procreación:</h5>
     <p>
-      Hay una tendencia a separar cuerpoespíritu-sexo -amor, placer sexual-
+      Hay una tendencia a separar cuerpo, espíritu, sexo, amor, placer sexual,
       placer espiritual, y a quedarse con una de las partes de cada dupla. Así
       la sexualidad se vive como fractura, como conflicto permanente, como
       infelicidad. Nos equivocamos si separamos cosas que en realidad van
@@ -1355,8 +1352,8 @@
           vientre, un bloque de marfil, todo incrustado de zafiros. Sus piernas,
           columnas de alabastro, asentadas sobre bases de oro puro. Su aspecto
           es como el Líbano, esbelto como los cedros. Su paladar rebosa dulzura
-          y todo en él es una delicia. Así es mi amado, así es mi amigo, hijas de
-          Jerusalén.»
+          y todo en él es una delicia. Así es mi amado, así es mi amigo, hijas
+          de Jerusalén.»
         </em>
       </p>
     </div>
