--- a/src/04-amistad.html
+++ b/src/04-amistad.html
@@ -47,7 +47,7 @@
       </li>
       <li>
         Existe cierta enemistad entre los subgrupos dentro del grupo de
-        rastreadores-hogueras.
+        rastreadores&ndash;hogueras.
       </li>
     </ul>
     <h3>- Orientación:</h3>
@@ -76,15 +76,16 @@
     </ul>
     <h2>ALGUNAS COSAS CLARAS…</h2>
     <p>
-      Si bien es importante la buena relación entre los rastreadores-hogueras y
-      sus animadores, tenemos que tener en cuenta que los animadores no pueden
-      tratar con ellos de par a par. Así como en la escuela comúnmente los
-      profesores no salen a bailar con sus alumnos o no comparten las mismas
-      actividades fuera de horario, es necesario que exista un “sano equilibrio”
-      entre cercanía y distancia que brinde claridad a los adolescentes.
-      Recordemos que se trata de una relación asimétrica, donde los animadores
-      ocupan el lugar de “guías” o “hermanos mayores” de sus patrulleros. Con lo
-      cual los adolescentes suelen idealizar bastante a sus animadores.
+      Si bien es importante la buena relación entre los
+      rastreadores&ndash;hogueras y sus animadores, tenemos que tener en cuenta
+      que los animadores no pueden tratar con ellos de par a par. Así como en la
+      escuela comúnmente los profesores no salen a bailar con sus alumnos o no
+      comparten las mismas actividades fuera de horario, es necesario que exista
+      un “sano equilibrio” entre cercanía y distancia que brinde claridad a los
+      adolescentes. Recordemos que se trata de una relación asimétrica, donde
+      los animadores ocupan el lugar de “guías” o “hermanos mayores” de sus
+      patrulleros. Con lo cual los adolescentes suelen idealizar bastante a sus
+      animadores.
     </p>
     <p>
       Muchas veces cuando se trata de patrullas mixtas, una relación de amistad
@@ -95,7 +96,7 @@
       chicos y el Batallón en su conjunto.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
-    <h3>- Yo los llamo amigos (Jn. 15,11-14)</h3>
+    <h3>&mdash; Yo los llamo amigos (Jn. 15,11-14)</h3>
     <p>
       <em
         >«Les he dicho esto para que mi gozo sea el de ustedes, y ese gozo sea
@@ -114,8 +115,8 @@
       castiga. Pero volvamos al Evangelio y veamos ¿qué nos manda Jesús? “Este
       es mi mandmiento: Ámense los unos los otros, como yo los he amado.” Dios
       nos manda que nos amemos y dejemos de generar divisiones por cosas que no
-      tienen sentido. Somos hijos de un mismo Padre y por lo tanto hermanos entre
-      nosotros.
+      tienen sentido. Somos hijos de un mismo Padre y por lo tanto hermanos
+      entre nosotros.
     </p>
     <p>
       Casi profetizando sobre sí mismo Jesús dice que no hay mayor amor que dar
@@ -134,28 +135,35 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
 
-    <p>Que los rastreadores-hogueras hayan:</p>
-    <p>
-      Descubierto que cada amigo que tienen en la vida los perfecciona y
-      enriquece, en la medida en que el intercambio entre lo que cada uno da de
-      sí mismo y recibe del otro gratuitamente. Logrado que en el grupo se
-      relacionen más y cada uno se brinde a los demás dando lugar a formar
-      nuevas amistades.
-    </p>
-    <p>Comenzado transformar un grupo de compañeros en un grupo de amigos.</p>
+    <p>Que los rastreadores&ndash;hogueras hayan:</p>
+    <ul>
+      <li>
+        Descubierto que cada amigo que tienen en la vida los perfecciona y
+        enriquece, en la medida en que el intercambio entre lo que cada uno da
+        de sí mismo y recibe del otro gratuitamente.
+      </li>
+      <li>
+        Logrado que en el grupo se relacionen más y cada uno se brinde a los
+        demás dando lugar a formar nuevas amistades.
+      </li>
+      <li>
+        Comenzado transformar un grupo de compañeros en un grupo de amigos.
+      </li>
+    </ul>
 
     <h2>ACTIVIDADES</h2>
-    <p>
-      <strong
-        >1 – Amigo invisible 2 – Puente autotrabado 3 – Salida de
-        patrulla</strong
-      >
-    </p>
+
+    <ol>
+      <li>Amigo invisible</li>
+      <li>Puente autotrabado</li>
+      <li>Salida de patrulla</li>
+    </ol>
+
     <h3>ACTIVIDAD N° 1 – AMIGO INVISIBLE</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad busca que los rastradores-hogueras sean más solidarios entre
-      ellos sin esperar nada a cambio.
+      La actividad busca que los rastradores&ndash;hogueras sean más solidarios
+      entre ellos sin esperar nada a cambio.
     </p>
     <h3>- Actividad:</h3>
     <p>Apenas comienzan las actividades presentar el juego.</p>
@@ -210,12 +218,9 @@
       hacía. Llegado el momento de la despedida, estaba cnando por última vez
       con sus amigos, cuando se levantó y uno a uno les fue lavando los pies con
       sus manos, enseñándoles a servir a todos los hermanos. Esa misma noche
-      bendijo el pan,
-    </p>
-    <p>
-      lo partió y se lo repartió, enseñándoles a compartir. Y es través de ellos
-      nos dijo a todos que entre todos hagamos lo mismo y más aún que lo hagamos
-      en su memoria.
+      bendijo el pan, lo partió y se lo repartió, enseñándoles a compartir. Y es
+      través de ellos nos dijo a todos que entre todos hagamos lo mismo y más
+      aún que lo hagamos en su memoria.
     </p>
     <p>
       Jesús es un amigo que nos acompaña incondicionalmente. Tenemos que tomar
@@ -283,15 +288,12 @@
     </p>
     <p>
       La alegría no solo la encontramos en grandes fiestas, contando chistes
-      todo el día o viviendo
-    </p>
-    <p>
-      en una continua carcajada; sino que debemos interpretarla como un
-      sentimiento mucho más profundo y verdadero, buscándola en nuestros
-      corazones, en el corazón de nuestros amigos, sintiéndola como una
-      fragancia que compartimos con quienes nos rodean. La alegría explora-
-      doril surge fundamentalmente de mi amistad con Jesús, de estar en gracia
-      de Dios.
+      todo el día o viviendo en una continua carcajada; sino que debemos
+      interpretarla como un sentimiento mucho más profundo y verdadero,
+      buscándola en nuestros corazones, en el corazón de nuestros amigos,
+      sintiéndola como una fragancia que compartimos con quienes nos rodean. La
+      alegría exploradoril surge fundamentalmente de mi amistad con Jesús, de
+      estar en gracia de Dios.
     </p>
     <p>
       La alegría debemos compartirla con nuestros hermanos. Los cantos, la buena
@@ -368,10 +370,9 @@
       <p>
         <em
           >«Un día en que Jesús oraba a solas y sus discípulos estaban con él,
-          les preguntó: “¿Quién</em
+          les preguntó: “¿Quién dice la gente que soy yo?”.»</em
         >
       </p>
-      <p><em>dice la gente que soy yo?”.»</em></p>
       <h4><em>La tranfiguración (Mt 17, 1-7)</em></h4>
       <p>
         <em
@@ -412,8 +413,8 @@
       </p>
       <p>
         <em>
-          Jesús se acercó a ellos, y tocándolos, les dijo: “Levántense, no tengan
-          miedo”.»
+          Jesús se acercó a ellos, y tocándolos, les dijo: “Levántense, no
+          tengan miedo”.»
         </em>
       </p>
       <h4><em>La Pascua con amigos (Mt 26, 17-18)</em></h4>
@@ -431,7 +432,7 @@
           en tu casa con mis discípulos´”.»</em
         >
       </p>
-      <p>- Las Bodas de Caná (Jn. 2,1-2)</p>
+      <p>&mdash; Las Bodas de Caná (Jn. 2,1-2)</p>
       <p>
         <em>
           «Tres días después se celebraron unas bodas en Caná de Galilea, y la
@@ -439,7 +440,7 @@
           discípulos.»
         </em>
       </p>
-      <p>- Mc. 2, 23</p>
+      <p>&mdash; Mc. 2, 23</p>
       <p>
         <em
           >«Un sábado en que Jesús atravesaba unos sembrados, sus discípulos
@@ -484,24 +485,25 @@
       vínculo de amistad con la otra.
     </p>
     <p><strong>Preguntar:</strong></p>
-    <p>¿Somos amigos en nuestro grupo?</p>
-    <p>¿En qué cosas tenemos que crecer juntos?</p>
-    <p>Comentarlas a partir de las preguntas:</p>
-    <p>¿Jesús tenía amigos?</p>
-    <p>¿Qué hacían juntos?</p>
-    <p>¿Podemos ser amigos de Jesús?</p>
-    <p>¿Podemos unirnos a Él como las dos partes del puente?</p>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
-      <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
+      <li>¿Somos amigos en nuestro grupo?</li>
+      <li>¿En qué cosas tenemos que crecer juntos?</li>
+      <li>Comentarlas a partir de las preguntas:</li>
+      <li>¿Jesús tenía amigos?</li>
+      <li>¿Qué hacían juntos?</li>
+      <li>¿Podemos ser amigos de Jesús?</li>
+      <li>¿Podemos unirnos a Él como las dos partes del puente?</li>
+    </ul>
+    <ul>
+      <li><strong>Reflexión:</strong> Ver actividad N°1.</li>
+      <li><strong>Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDAD N° 3 - SALIDA DE PATRULLA</h3>
     <h3>- Orientaciones:</h3>
     <p>
       La actividad busca que la amistad que se vive en la patrulla se refuerce
-      fuera de las activida-
+      fuera de las actividades de los sábados.
     </p>
-    <p>des de los sábados.</p>
     <h3>- Actividad:</h3>
     <p>
       Ponerse de acuerdo para salir todo el grupo o por patrullas. Puede ser una
@@ -527,11 +529,13 @@
       verdadera amistad y descubrir la importancia de ser amigos no sólo en
       horario de actividades. Luego profundizar la reflexión:
     </p>
-    <p>¿Por qué queremos actuar así?</p>
-    <p>¿En qué se fundamenta la ‘amistad como cristianos?</p>
+    <ul>
+      <li>¿Por qué queremos actuar así?</li>
+      <li>¿En qué se fundamenta la ‘amistad como cristianos?</li>
+    </ul>
     <h3>
-      - Leer el Evangelio de “Yo los llamo amigos” (Jn. 15, 11-14) y relacionar
-      con lo anterior.
+      &mdash; Leer el Evangelio de “Yo los llamo amigos” (Jn. 15, 11-14) y
+      relacionar con lo anterior.
     </h3>
     <p>
       <em>Presentar el relato de “Amigos de Don Bosco y María Mazzarello”</em>
@@ -587,8 +591,8 @@
       <li>¿Qué enseñanza nos dejan?</li>
     </ul>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
-      <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
+      <li><strong>Reflexión:</strong> Ver actividad N°1.</li>
+      <li><strong>Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h2>EVALUACIÓN</h2>
     <h3><em>La Carpa</em></h3>
@@ -600,7 +604,7 @@
     </p>
 
     <dl>
-      <dt>AMIGO-ESPONJA:</dt>
+      <dt>AMIGO&ndash;ESPONJA:</dt>
       <dd>
         Se caracteriza por ocupar todos los espacios de tu vida y lentamente,
         asorber tus días con su presencia. Suele instalarse en la casa de su
@@ -608,9 +612,9 @@
       </dd>
 
       <dd>
-        El amigo-esponja, generalmente critica a tus otros amigos e incluso a tu
-        propia familia. Pretende que sólo vivas para él y sólo a él reconozcas
-        como ídolo.
+        El amigo&ndash;esponja, generalmente critica a tus otros amigos e
+        incluso a tu propia familia. Pretende que sólo vivas para él y sólo a él
+        reconozcas como ídolo.
       </dd>
 
       <dt>AMIGOVIO:</dt>
@@ -661,7 +665,7 @@
         pedirá tu mejor pilcha o, en el peor de los cases, vaciará tu heladera
         para nunca más volver. En el peor de los casos, vuelve y pregunta si tu
         vieja volvió a preparar “ese postre que le sale tan rico”. Rasgo delator
-        del amigo-interesado:
+        del amigo&ndash;interesado:
       </dd>
       <dd>
         Regale tarjetitas los 20 de julio con frases obvias del tipo: gracias
@@ -712,8 +716,8 @@
       En ronda y en clima de oración invitamos a todos a que puedan
       comprometerse delante del grupo con una actitud concreta de apertura a los
       miembros del grupo que más les cueste integrarse. Diciendo “Desde hoy me
-      comprometo a … para que como rastreadores-hogueras podamos sentirnos cada
-      día más amigos.”
+      comprometo a … para que como rastreadores&ndash;hogueras podamos sentirnos
+      cada día más amigos.”
     </p>
     <h3><em>Tomando mate</em></h3>
     <p>Completamos las siguientes frases a modo de evaluación:</p>
