--- a/src/05-familia.html
+++ b/src/05-familia.html
@@ -48,36 +48,31 @@
     <p>¿Se siente un clima de familia en el grupo?</p>
     <h3>- Orientación:</h3>
     <p>
-      Si las respuestas a las preguntas revelan dificultades que los chicos están
-      teniendo en el inte-
-    </p>
-    <p>
-      rior de sus familias, sería apropiado que la elijas para trabajar. Algunos
-      de los ejes que se desarrollarán en esta consigna serán:
+      Si las respuestas a las preguntas revelan dificultades que los chicos
+      están teniendo en el interior de sus familias, sería apropiado que la
+      elijas para trabajar. Algunos de los ejes que se desarrollarán en esta
+      consigna serán:
     </p>
     <p>
       La familia y el hogar comprenden a una célula que conforma la Patria, es
       por ello que el amor y la unión deben reinar en cada casa y con cada
       integrante de la familia. La familia juega un papel fundamental en el
-      desarrollo social de nuestros chicos. La relación padres-hijos/as va a
-      sentar las bases sobre la que se construirán los cimientos de los demás
+      desarrollo social de nuestros chicos. La relación padres&ndash;hijos/as va
+      a sentar las bases sobre la que se construirán los cimientos de los demás
       vínculos que establezcan los adolescentes en el resto de su entorno.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos qué te pasa con este tema?”</p>
     <h3>- Dinámica</h3>
     <ul>
+      <li>¿Cómo es tu vínculo con tus padres y con el resto de tu familia?</li>
+      <li>¿Qué valores reconoces que hayas adoptado de tu familia?</li>
       <li>
-        - ¿Cómo es tu vínculo con tus padres y con el resto de tu familia?
-      </li>
-      <li>- ¿Qué valores reconoces que hayas adoptado de tu familia?</li>
-      <li>
-        - ¿De qué modo o en que situaciones recordás que te los hayan
-        transmitido?
+        ¿De qué modo o en que situaciones recordás que te los hayan transmitido?
       </li>
       <li>
-        - ¿Estas situaciones se dieron a través del ejemplo en el día a día, o
-        por mandatos familiares simplemente?
+        ¿Estas situaciones se dieron a través del ejemplo en el día a día, o por
+        mandatos familiares simplemente?
       </li>
     </ul>
     <h3>- Reflexión</h3>
@@ -97,9 +92,9 @@
     <p>
       Será importante apreciar que como animador te toca una tarea muy
       importante, en la medida que probablemente te tengas que posicionar en la
-      figura de contención de tus chicos, ya sea por inconvenientes familiares, o
-      porque representes a un hermano mayor, o al hermano que no tienen, o por X
-      motivos que te lleven a colocarte en ese lugar.
+      figura de contención de tus chicos, ya sea por inconvenientes familiares,
+      o porque representes a un hermano mayor, o al hermano que no tienen, o por
+      X motivos que te lleven a colocarte en ese lugar.
     </p>
     <p>
       Por eso, y para tranquilidad tuya podrás respaldarte y fortalecer el
@@ -114,7 +109,7 @@
       crea la libertad de los hijos de Dios.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
-    <h3>- Efesios 6:1-4</h3>
+    <h3>&mdash; Efesios 6:1-4</h3>
     <p>
       <em
         >«Hijos, obedezcan a sus padres. Ustedes son de Cristo, y eso es lo que
@@ -127,10 +122,10 @@
     </p>
     <h3>- Reflexión:</h3>
     <ul>
-      <li>- ¿Qué te hace pensar esta lectura?</li>
-      <li>- ¿A qué te recuerda?</li>
+      <li>¿Qué te hace pensar esta lectura?</li>
+      <li>¿A qué te recuerda?</li>
       <li>
-        - ¿Qué lugar pensás que te concierne como animador teniendo en cuenta el
+        ¿Qué lugar pensás que te concierne como animador teniendo en cuenta el
         mensaje que deja esta lectura? Honrar a nuestros padres, cumplir su
         voluntad, darle el honor que ellos se merecen. Es algo un poco difícil
         ya que el “yo” a veces no nos deja. Pensamos que ellos no saben lo que
@@ -170,9 +165,11 @@
       como familia y al movimiento como una gran familia exploradoril.
     </p>
     <h2>ACTIVIDADES</h2>
-    <h3>1- Día compartido con la familia</h3>
-    <h3>2- Como la patria</h3>
-    <h3>3- Construcciones de campamento</h3>
+    <ol>
+      <li>Día compartido con la familia</li>
+      <li>Como la patria</li>
+      <li>Construcciones de campamento</li>
+    </ol>
     <h3>ACTIVIDAD N° 1: DÍA COMPARTIDO CON LA FAMILIA</h3>
     <h3>- Orientación:</h3>
     <p>
@@ -210,8 +207,8 @@
       Había una vez una señora que se llamaba doña Patrocinio y que lavaba para
       afuera y cocinaba para adentro. La mujer era una criolla más bien gordita,
       y cuando se reía era una gloria: como si la risa le naciera de los pechos.
-      Daba gusto. Doña Patrocinio tenía cinco hijos ya mozos, bien plantados y de
-      bastante pinta; no había muchacha del barrio que no tejiera alguna
+      Daba gusto. Doña Patrocinio tenía cinco hijos ya mozos, bien plantados y
+      de bastante pinta; no había muchacha del barrio que no tejiera alguna
       esperanza con alguno de ellos.
     </p>
     <p>
@@ -220,24 +217,24 @@
       alegría de esta mujer era tener a sus cinco muchachos reunidos en torno a
       la mesa. Alegría que solía durar poco porque...
     </p>
-    <ul>
-      <li>- Mamita... ¿Me tenés planchada la camisa blanca?</li>
-      <li>- Me voy yendo a la cancha, viejita...</li>
-      <li>- Yo tengo reunión en el sindicato; salud a todos...</li>
-      <li>- Ando mal de fondos, mamá. ¿No me tirás unos pesitos?</li>
-      <li>
-        - Bueno... me voy a dormir la siesta... El mayor nunca había dado
-        problemas. Era el que más recordaba la figura serera del padre, de modo
-        que intentaba imitarlo. Se sentía responsable; era el ejemplo de los
-        demás hermanos. Siempre había sido un chico serio. Jamás había traído
-        malas notas. Era metódico: todo lo tenía anotado. Su mayor orgullo era
-        ser eficiente. Jamás había tenido que pedir ayuda a nadie.
-      </li>
-    </ul>
+
+    <p>&mdash; Mamita... ¿Me tenés planchada la camisa blanca?</p>
+    <p>&mdash; Me voy yendo a la cancha, viejita...</p>
+    <p>&mdash; Yo tengo reunión en el sindicato; salud a todos...</p>
+    <p>&mdash; Ando mal de fondos, mamá. ¿No me tirás unos pesitos?</p>
+    <p>
+      &mdash; Bueno... me voy a dormir la siesta... El mayor nunca había dado
+      problemas. Era el que más recordaba la figura serera del padre, de modo
+      que intentaba imitarlo. Se sentía responsable; era el ejemplo de los demás
+      hermanos. Siempre había sido un chico serio. Jamás había traído malas
+      notas. Era metódico: todo lo tenía anotado. Su mayor orgullo era ser
+      eficiente. Jamás había tenido que pedir ayuda a nadie.
+    </p>
+
     <p>
       El segundo de los hijos era escritor y había alcanzado cierta fama con sus
-      libros. En ellos contaba fabulosas historias de caballos alados,
-      palacios de cristal y hadas milagrosas.
+      libros. En ellos contaba fabulosas historias de caballos alados, palacios
+      de cristal y hadas milagrosas.
     </p>
     <p>
       Vivía corriendo de un lugar a otro, buscando aparecer en diarios, revistas
@@ -255,8 +252,8 @@
       jamás tenía para terminar el mes. Si alguien pretendía distraerlo, él
       mostraba con cuentas y números que no podía descuidarse un instante. Que
       siempre estaba al borde de la ruina. El hijo número cuatro era obrero.
-      Trabajaba en una pequeña industria, y siempre vivía a los tira y afloja con
-      el patrón. Si había aumento, trabajaba. Si no había aumento, paraba.
+      Trabajaba en una pequeña industria, y siempre vivía a los tira y afloja
+      con el patrón. Si había aumento, trabajaba. Si no había aumento, paraba.
       Naturalmete, entre el obrero y el patrón de la fábrica no había más que
       contrariedad; a ver cuál de los dos vencía. Entonces el patrón quería
       sacarse de encima a este hombre. Pero el muchacho se amparaba en mil
@@ -276,73 +273,73 @@
       Entonces los hermanos mayores decidieron ponerle punto final a esta
       situación con el menor. Como excepción, haciéndose lugar entre sus
       obligaciones, los cuatro decidieron reunirse a debatir qué hacer con el
-      hermano inútil. Por eso una noche, mientras doña Patrocinio cocinaba,
-      los cuatro hermanos se reunieron en puntas de pie en el comedor, para
-      hablar en voz baja,
+      hermano inútil. Por eso una noche, mientras doña Patrocinio cocinaba, los
+      cuatro hermanos se reunieron en puntas de pie en el comedor, para hablar
+      en voz baja,
     </p>
-    <ul>
-      <li>- Aquí, el que no trabaja, no come -dijo uno,</li>
-      <li>- Es como un animalito… -dijo otro.</li>
-      <li>- Es un riesgo para la economía", -comentó otro.</li>
-      <li>
-        -A mi modo de ver, hay que darle con un caño por la cabeza", -sostuvo
-        otro.
-      </li>
-    </ul>
+
+    <p>&mdash; Aquí, el que no trabaja, no come &mdash;dijo uno,</p>
+    <p>&mdash; Es como un animalito… &mdash;dijo otro.</p>
+    <p>&mdash; Es un riesgo para la economía", &mdash;comentó otro.</p>
+    <p>
+      &mdash;A mi modo de ver, hay que darle con un caño por la cabeza",
+      &mdash;sostuvo otro.
+    </p>
+
     <p>
       Así estaban, cuando entró doña Patrocinio. La mujer quedó perpleja. Dejó
       sobre el aparador lo que traía entre manos, y se sentó, a la cabecera de
       la mesa. Entonces dijo sonriendo a cada hijo:
     </p>
-    <ul>
-      <li>
-        - Esto es un sueño", Esto es casi", ¡un milagro"! Mis hijos han dejado
-        sus ocupaciones para reunirse en la casa de la madre", ¡No saben cuánto
-        pedí que se realizara alguna vez éste sueño! Los cuatro muchachos se
-        miraban de reojo, y carraspeaban molestos, seguramente la madre no
-        maliciaba el tema que estaban por tratar." Entonces el mayor hizo un
-        gesto, y habló:
-      </li>
-      <li>
-        - Antes de que te equivoques, mamá, quiero avisarte que… Pero la madre
-        puso suavemente sus dedos sobre la boca del mayor,
-      </li>
-      <li>
-        -Perdonáme que te tape la boca, hijo querido, Pero yo quisiera, si me
-        dejan, contarles algo. ¿Me permiten? Los muchachos hicieron que sí con
-        la cabeza.
-      </li>
-    </ul>
+
+    <p>
+      &mdash; Esto es un sueño", Esto es casi", ¡un milagro"! Mis hijos han
+      dejado sus ocupaciones para reunirse en la casa de la madre", ¡No saben
+      cuánto pedí que se realizara alguna vez éste sueño! Los cuatro muchachos
+      se miraban de reojo, y carraspeaban molestos, seguramente la madre no
+      maliciaba el tema que estaban por tratar." Entonces el mayor hizo un
+      gesto, y habló:
+    </p>
+    <p>
+      &mdash; Antes de que te equivoques, mamá, quiero avisarte que… Pero la
+      madre puso suavemente sus dedos sobre la boca del mayor,
+    </p>
+    <p>
+      &mdash;Perdonáme que te tape la boca, hijo querido, Pero yo quisiera, si
+      me dejan, contarles algo. ¿Me permiten? Los muchachos hicieron que sí con
+      la cabeza.
+    </p>
+
     <p>Se hizo silencio, y la mujer habló con voz emocionada:</p>
-    <ul>
-      <li>
-        - Mis hijitos queridos… Ustedes, con su hermano menor, que no está aquí,
-        son cinco hermanos, Como estos cinco dedos de mi mano derecha…
-      </li>
-    </ul>
+
+    <p>
+      &mdash; Mis hijitos queridos… Ustedes, con su hermano menor, que no está
+      aquí, son cinco hermanos, Como estos cinco dedos de mi mano derecha…
+    </p>
+
     <p>
       Doña Patrocinio levantó lentamente su mano. Era una mano ajada por el
       lavado, roja e hinchada.
     </p>
     <ul>
       <li>
-        - Hace muy poco, pelando papas, me corté la yema de este dedo, ¡Qué
-        hondo fue ese corte! Me costó largo rato detener la salida de la sangre.
-        Durante varios días yo sentí en esta mano una sola presencia: la del
-        dedo cortado ¡A los sanos ni los sentía…! ¡Sólo al enfermo! Y los demás
-        hacían el trabajo del lastimado, y los demás protegían al herido… Los
-        hijos estaban mudos escuchando aquella voz de llanto.
+        &mdash; Hace muy poco, pelando papas, me corté la yema de este dedo,
+        ¡Qué hondo fue ese corte! Me costó largo rato detener la salida de la
+        sangre. Durante varios días yo sentí en esta mano una sola presencia: la
+        del dedo cortado ¡A los sanos ni los sentía…! ¡Sólo al enfermo! Y los
+        demás hacían el trabajo del lastimado, y los demás protegían al herido…
+        Los hijos estaban mudos escuchando aquella voz de llanto.
       </li>
     </ul>
     <p>Y de los ojos empezaron a chorrear las lágrimas.</p>
     <ul>
       <li>
-        - Ustedes son… ¡Son mi mano derecha...! Mis dedos sanos, ¿me comprenden?
-        y alguna vez, cuando se casen y tengan hijos, van a entender mejor estas
-        palabras. Van a sentir en la carne cuál es el hijo débil, cuál es el que
-        está lastimado. Y van a descuidar a las demás ovejas del rebaño…por
-        cuidar a la oveja perdida… Entonces vino un silencio largo. Cada uno
-        pensó cuántas veces su madre había dejado todo lo demás por una
+        &mdash; Ustedes son… ¡Son mi mano derecha...! Mis dedos sanos, ¿me
+        comprenden? y alguna vez, cuando se casen y tengan hijos, van a entender
+        mejor estas palabras. Van a sentir en la carne cuál es el hijo débil,
+        cuál es el que está lastimado. Y van a descuidar a las demás ovejas del
+        rebaño…por cuidar a la oveja perdida… Entonces vino un silencio largo.
+        Cada uno pensó cuántas veces su madre había dejado todo lo demás por una
         enfermedad, por un accidente, por una comisaría, por un hecho
         importante. Y entonces cada uno advirtió que sí; alguna vez cada uno
         había sido un dedo lastimado. Cada hermano entendió algo que se da por
@@ -406,37 +403,36 @@
     </p>
     <ul>
       <li>
-        • En la vida de familia que se desarrolla principalmente en la casa: en
+        En la vida de familia que se desarrolla principalmente en la casa: en
         las situaciones de convivencia, en el trato mutuo, en el diálogo entre
         padres e hijos y entre los hermanos.
       </li>
       <li>
-        • Lo barrial, lo vecinal, las relaciones cotidianas surgen de nuestras
+        Lo barrial, lo vecinal, las relaciones cotidianas surgen de nuestras
         casas, de la casa de al lado, de la de más allá, Nos da idea de
         comunidad.
       </li>
       <li>
-        • La Iglesia como casa: la casa-comunidad como ámbito de fraternidad,
-        abierta a otras "casas".
+        La Iglesia como casa: la casa&ndash;comunidad como ámbito de
+        fraternidad, abierta a otras "casas".
       </li>
       <li>
-        • La casa nos habla de la cultura, las cosas que se aprenden en el hogar
+        La casa nos habla de la cultura, las cosas que se aprenden en el hogar
         nos quedan para siempre. Aquello que vivimos actualmente nos marca para
         toda la vida. La casa es transmisora y fuente conservadora de cultura,
         de la cultura de la vida.
       </li>
       <li>
-        • Podemos descubrir a un "Jesús de entrecasa", cotidiano, mucho más
-        metido en la vida, que en el templo y el culto. Podemos tutearnos con
-        Jesús y sentirlo aliado, codo a codo, cercano. El Jesús de lo cotidiano
-        de las relaciones del día a día.
+        Podemos descubrir a un "Jesús de entrecasa", cotidiano, mucho más metido
+        en la vida, que en el templo y el culto. Podemos tutearnos con Jesús y
+        sentirlo aliado, codo a codo, cercano. El Jesús de lo cotidiano de las
+        relaciones del día a día.
       </li>
     </ul>
     <p>
       Leer los artículos 92 y 93 de los Principios Doctrinales que tratan la
-      temática de Hogar mencio-
+      temática de Hogar mencionados en la caratula de la consigna.
     </p>
-    <p>nados en la caratula de la consigna.</p>
     <h3>Palabra de Dios (Hechos 2,43-47). La primera comunidad</h3>
     <p>
       <em
@@ -567,8 +563,8 @@
       <em
         >“Si alguno dice: “Yo amo a Dios”, y al mismo tiempo odia a su hermano,
         es un mentiroso. Pues si uno ama a su hermano, a quien ve, tampoco puede
-        amar a Dios, a quien no ve. Jesucristo nos ha dado este mandamiento:
-        que el que ama a Dios, ame también a su hermano”.</em
+        amar a Dios, a quien no ve. Jesucristo nos ha dado este mandamiento: que
+        el que ama a Dios, ame también a su hermano”.</em
       >
     </p>
     <h2>EVALUACIÓN</h2>
@@ -609,18 +605,18 @@
       trabajo de la consigna.
     </p>
     <ul>
-      <li>-La preparación de la consigna fue...</li>
+      <li>La preparación de la consigna fue...</li>
       <li>
-        -La preparación de los elementos de cada encuentro (tiempos, lugares,
+        La preparación de los elementos de cada encuentro (tiempos, lugares,
         materiales, etc) fue…
       </li>
-      <li>-Me costó…</li>
-      <li>-Lo que más me gustó fue...</li>
-      <li>-Creo que faltó...</li>
-      <li>-Con ella descubrí...</li>
-      <li>-Lo que me sorprendió...</li>
+      <li>Me costó…</li>
+      <li>Lo que más me gustó fue...</li>
+      <li>Creo que faltó...</li>
+      <li>Con ella descubrí...</li>
+      <li>Lo que me sorprendió...</li>
       <li>
-        -Lo que siento que necesito seguir trabajando con los
+        Lo que siento que necesito seguir trabajando con los
         Rastreadores/Hogueras es…
       </li>
     </ul>
