--- a/src/06-dialogo.html
+++ b/src/06-dialogo.html
@@ -41,8 +41,8 @@
     <p>Es el momento propicio para esta consigna porque:</p>
     <ul>
       <li>
-        >> Los Rastreadores-Hogueras no parecen aprovechar los tiempos libres
-        para conversar entre ellos, usando el tiempo para estar en sus
+        >> Los Rastreadores&ndash;Hogueras no parecen aprovechar los tiempos
+        libres para conversar entre ellos, usando el tiempo para estar en sus
         celulares, auriculares, etc.
       </li>
       <li>
@@ -58,11 +58,11 @@
       Necesitamos dialogar para poder expresar lo que nos pasa, cuanto estamos
       contentos, cuando necesitamos ayuda o una palabra de aliento. La
       comunicación es vital para uan relación fraterna y saludable de nuestro
-      grupo de Rastreadores-Hogueras. Para poder llegar al diálogo es necsario
-      que nos conozcamos a nosotros mismos, mirarnos constante y objetivamente.
-      Además, en un grupo no puede haber amistad sin haber diálogo, un animador
-      no puede educar sin diálogo ,y este solo puede aparecer cuando tenemos una
-      sincera iniciativa de conocer al otro.
+      grupo de Rastreadores&ndash;Hogueras. Para poder llegar al diálogo es
+      necsario que nos conozcamos a nosotros mismos, mirarnos constante y
+      objetivamente. Además, en un grupo no puede haber amistad sin haber
+      diálogo, un animador no puede educar sin diálogo ,y este solo puede
+      aparecer cuando tenemos una sincera iniciativa de conocer al otro.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos qué te pasa con este tema?”</p>
@@ -142,21 +142,21 @@
     <h3>- Reflexión</h3>
     <p>
       Como animadores tenemos la necesidad de “sacarnos el calzado” para entrar
-      en otro, en nuestro grupo de Rastreadores-Hogueras, en nuestra comunidad.
-      Descalzarnos es tener la valentía de ponernos en el lugar del prójimo, de
-      conocerlo. Este acto simbólico se concreta en el diálogo, cuando somos
-      capaces de escuchar. Es estar atento, fijarse en lo que les pasa a los
-      demás. Es una manera concreta de estar Siempre Listo. Es lo primero que
-      aparece al ofrcerse en servicio a los demás. Sin atender no se puede
-      entender y sin entender no podemos educar. Si no estamos atentos y no
-      tenemos esta actitud de diálogo (animarnos a sacarnos el calzado) nunca
+      en otro, en nuestro grupo de Rastreadores&ndash;Hogueras, en nuestra
+      comunidad. Descalzarnos es tener la valentía de ponernos en el lugar del
+      prójimo, de conocerlo. Este acto simbólico se concreta en el diálogo,
+      cuando somos capaces de escuchar. Es estar atento, fijarse en lo que les
+      pasa a los demás. Es una manera concreta de estar Siempre Listo. Es lo
+      primero que aparece al ofrcerse en servicio a los demás. Sin atender no se
+      puede entender y sin entender no podemos educar. Si no estamos atentos y
+      no tenemos esta actitud de diálogo (animarnos a sacarnos el calzado) nunca
       vamos a poder escuchar lo que el otro nos quiere decir. ¿Cuáles son los
       miedos y prejuicios que nos impiden llegar a quien tenemos al lado? ¿Cómo
       superarlos? El inicio en la búsqueda de respuesta a estos interrogantes es
       sencillo: empezar a dialogar.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
-    <h3>- La mujer que convence a Jesús (Mt. 15, 21-28)</h3>
+    <h3>&mdash; La mujer que convence a Jesús (Mt. 15, 21-28)</h3>
     <p>
       <em
         >«Jesús partió de allí y se retiró al país de Tiro y de Sidón. Entonces
@@ -166,27 +166,24 @@
         discípulos se acercaron y le pidieron: “Señor, atiéndela, porque nos
         persigue con sus gritos”. Jesús respondió: “Yo he sido enviado solamente
         a las ovejas perdidas del pueblo de Israel”. Pero la mujer fue a
-        postrarse ante él y le dijo: “¡Señor, socórreme!”. Jesús le dijo: “No está
-        bien tomar el pan de los hijos, para tirárselo a los cachorros”. Ella
-        respondió: “¡Y, sin embargo, Señor, los cachorros comen las migas que
-        caen de la mesa de sus dueños!”. Entonces Jesús le dijo: “Mujer, ¡qué
-        grande es tu fe! ¡Que se cumpla tu deseo!”. Y en ese momento su hija
-        quedó curada.»</em
+        postrarse ante él y le dijo: “¡Señor, socórreme!”. Jesús le dijo: “No
+        está bien tomar el pan de los hijos, para tirárselo a los cachorros”.
+        Ella respondió: “¡Y, sin embargo, Señor, los cachorros comen las migas
+        que caen de la mesa de sus dueños!”. Entonces Jesús le dijo: “Mujer,
+        ¡qué grande es tu fe! ¡Que se cumpla tu deseo!”. Y en ese momento su
+        hija quedó curada.»</em
       >
     </p>
     <h3>- Reflexión:</h3>
     <p>
       Para contextualizar correctamente esta cita bíblica, es necesario aclarar
       que Mateo presenta a esta mujer con el apelativo de “cananea”. En la época
-      los habitantes de Canaán son con-
-    </p>
-    <p>
-      siderados gente llena de pecados y “paganos”. Nos encontramos, en un
-      principio, una dura respuesta de Jesús frente al pedido de ayuda de la
-      mujer. Pone distancia, parece desconfiar. Sin embargo, el desenlace es
-      claro, tras un resumido diálogo entre estas dos supuestas pesonas
-      antagónicas (y de creencias diferentes) Jesús rompe sus propios prejuicios
-      y acude a servir a la mujer.
+      los habitantes de Canaán son considerados gente llena de pecados y
+      “paganos”. Nos encontramos, en un principio, una dura respuesta de Jesús
+      frente al pedido de ayuda de la mujer. Pone distancia, parece desconfiar.
+      Sin embargo, el desenlace es claro, tras un resumido diálogo entre estas
+      dos supuestas pesonas antagónicas (y de creencias diferentes) Jesús rompe
+      sus propios prejuicios y acude a servir a la mujer.
     </p>
     <h2>ENTENDIENDOLOS</h2>
     <p>
@@ -202,18 +199,20 @@
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <ul>
       <li>
-        - Los Rastreadores / Hogueras lograron comprender que la comunicación es
+        Los Rastreadores / Hogueras lograron comprender que la comunicación es
         una necesidad, un servicio y una forma de compartir.
       </li>
       <li>
-        - Tuvieron una actitud de escucha y lograron expresarse libremente en el
+        Tuvieron una actitud de escucha y lograron expresarse libremente en el
         grupo y con otras personas de la comunidad.
       </li>
     </ul>
     <h2>ACTIVIDADES CENTRALES</h2>
-    <h3>1-Mensaje Escrito</h3>
-    <h3>2-Los rectángulos</h3>
-    <h3>3-Sin palabras</h3>
+    <ol>
+      <li>Mensaje Escrito</li>
+      <li>Los rectángulos</li>
+      <li>Sin palabras</li>
+    </ol>
     <h3>Actividad especial: encuentro con otro grupo</h3>
     <h3>ACTIVIDAD N° 1:</h3>
     <h3>- Orientación:</h3>
@@ -289,9 +288,8 @@
     </p>
     <p>
       De a poco vamos aprendiendo a expresarnos y desarrollando la capacidad de
-      poner en pala-
+      poner en palabras nuestros sentimientos y experiencias.
     </p>
-    <p>bras nuestros sentimientos y experiencias.</p>
     <p>
       Cuando intentamos dialogar podemos caer en dos actitudes que no ayudan
       para nada: qudarnos aislados hablando siempre sobre nosotros mismos o
@@ -327,22 +325,23 @@
         a mí, que soy samaritana?”. Los judíos, en efecto, no se trataban con
         los samaritanos. Jesús le respondió: “Si conocieras el don de Dios y
         quién es el que te dice: Dame de beber, tú misma se lo hubieras pedido,
-        y él te habría dado agua viva”. “Señor - le dijo ellano tienes nada
-        para sacar el agua y el pozo es profundo. ¿De dónde scas esa agua viva?
-        ¿Eres acaso más grande que nuestro padre Jacob, que nos ha dado este
-        pozo, donde él bebió, lo mismo que sus hijos y sus animales?”. Jesús le
-        respondió: “El que beba de esta agua tendrá nuevamente sed, pero el que
-        beba del agua que yo le daré, nunca más volverá a tener sed. El agua que
-        yo le daré se convertirá en él en manantial que brotará hasta la Vida
-        eterna.” “Señor- le dijo la mujer- dame de esa agua para que no tenga más
-        sed y no necesite venir hasta aquí a sacarla.” Jesús le respondió: “Ve,
-        llama a tu marido y vuelve aquí.” La mujer respondió: “No tengo marido”.
-        Jesús continuó: Tienes razón al decir que no tienes marido, porque has
-        tenido cinco y el que ahora tienes no es tu marido; en eso has dicho la
-        verdad.La mujer le dijo: “Señor, veo que eres un profeta. Nuestros padres
-        adoraron en esta montña, y ustedes dicen que es en Jerusalén donde se
-        debe adorar.” Jesús le respondió: “Créeme, mujer, llega la hora en que
-        ni en esta montaña ni en Jerusalén</em
+        y él te habría dado agua viva”. “Señor &mdash; le dijo ellano tienes
+        nada para sacar el agua y el pozo es profundo. ¿De dónde scas esa agua
+        viva? ¿Eres acaso más grande que nuestro padre Jacob, que nos ha dado
+        este pozo, donde él bebió, lo mismo que sus hijos y sus animales?”.
+        Jesús le respondió: “El que beba de esta agua tendrá nuevamente sed,
+        pero el que beba del agua que yo le daré, nunca más volverá a tener sed.
+        El agua que yo le daré se convertirá en él en manantial que brotará
+        hasta la Vida eterna.” “Señor &mdash;le dijo la mujer&mdash; dame de esa
+        agua para que no tenga más sed y no necesite venir hasta aquí a
+        sacarla.” Jesús le respondió: “Ve, llama a tu marido y vuelve aquí.” La
+        mujer respondió: “No tengo marido”. Jesús continuó: Tienes razón al
+        decir que no tienes marido, porque has tenido cinco y el que ahora
+        tienes no es tu marido; en eso has dicho la verdad.La mujer le dijo:
+        “Señor, veo que eres un profeta. Nuestros padres adoraron en esta
+        montña, y ustedes dicen que es en Jerusalén donde se debe adorar.” Jesús
+        le respondió: “Créeme, mujer, llega la hora en que ni en esta montaña ni
+        en Jerusalén</em
       >
     </p>
     <p>
@@ -512,26 +511,26 @@
       intepretarse de maneras diferentes, por lo que hay que ser cuidadoso
       cuando se las utilizan para que no se cambie el mensaje que se transmite.
       En la medida que las personas se van conociendo, estos gestos y
-      expresiones son cada vez más profundos y con mayor significado. En el grupo
-      nos vamos conociendo por ejemplo las miradas y llega un punto que con solo
-      mirar a un amigo nos damos cuenta cómo está.
+      expresiones son cada vez más profundos y con mayor significado. En el
+      grupo nos vamos conociendo por ejemplo las miradas y llega un punto que
+      con solo mirar a un amigo nos damos cuenta cómo está.
     </p>
     <h3>Palabra de Dios: Reflexionar antes de hablar (Proverbios 18, 1-2)</h3>
     <h3>ACTIVIDAD ESPECIAL: ENCUENTRO CON OTRO GRUPO</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que los Rastreadores-Hogueras reconozcan y pierdan
-      miedos o prejucios frente a otros grupos. Reconocer este encuentro como
-      acción de apertura, pero también de formación de la identidad propia de
-      cada grupo. Una posibilidad muy interesante, a modo de avanzar un poco más
-      en la consigna del Dialogo, es ponerse de acuerdo con algún otro grupo de
-      chicos de edades parecidas y preparar para hacer actividades juntos. Puede
-      ser algún otro grupo de la casa, parroquia o colegio, que no sea del mismo
-      movimiento de exploradores. Tratar que sea un grupo que no se conozcan
-      mucho, como para que con estas actividades pueda conocerse y compartir sus
-      cosas, y reltivamente cercano como para que la comunicación que se origine
-      pueda continuar. Es muy importante que no sea algo masivo sino de grupo a
-      grupo.
+      Esta actividad busca que los Rastreadores&ndash;Hogueras reconozcan y
+      pierdan miedos o prejucios frente a otros grupos. Reconocer este encuentro
+      como acción de apertura, pero también de formación de la identidad propia
+      de cada grupo. Una posibilidad muy interesante, a modo de avanzar un poco
+      más en la consigna del Dialogo, es ponerse de acuerdo con algún otro grupo
+      de chicos de edades parecidas y preparar para hacer actividades juntos.
+      Puede ser algún otro grupo de la casa, parroquia o colegio, que no sea del
+      mismo movimiento de exploradores. Tratar que sea un grupo que no se
+      conozcan mucho, como para que con estas actividades pueda conocerse y
+      compartir sus cosas, y reltivamente cercano como para que la comunicación
+      que se origine pueda continuar. Es muy importante que no sea algo masivo
+      sino de grupo a grupo.
     </p>
     <h3>- Reflexión:</h3>
     <p>
@@ -564,9 +563,9 @@
     </p>
     <p>
       Entre los cristianos, ya hay una gran Verdad que todos compartimos y que
-      es más que sficiente para poner por encima de cualquier diferencia, con más
-      razón en los grupos de una misma parroquia, capilla, colegio o incluso en
-      el mismo movimiento de exploradores.
+      es más que sficiente para poner por encima de cualquier diferencia, con
+      más razón en los grupos de una misma parroquia, capilla, colegio o incluso
+      en el mismo movimiento de exploradores.
     </p>
     <p>
       Un grupo que se aísla, que se piensa que es el mejor, que cree que no
