--- a/src/07-oracion.html
+++ b/src/07-oracion.html
@@ -36,7 +36,9 @@
     </ol>
     <h2>ELECCIÓN DE LA CONSIGNA:</h2>
     <p>“¿Es ahora el momento adecuado para esta consigna?’”</p>
-    <p>Elegí esta consigna porque observo que los rastreadores-hogueras:</p>
+    <p>
+      Elegí esta consigna porque observo que los rastreadores&ndash;hogueras:
+    </p>
     <p>
       Suelen tener una agenda repleta de actividades y los momentos de oración
       no suelen
@@ -117,23 +119,23 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
-      Que los rastreadores-hogueras puedan darse cuenta de la integración entre
-      la oración y la vida cotidiana comprendiendo que pueden descubrir la
+      Que los rastreadores&ndash;hogueras puedan darse cuenta de la integración
+      entre la oración y la vida cotidiana comprendiendo que pueden descubrir la
       presencia de Dios en diferentes momentos, situaciones y lugares.
     </p>
     <p>
-      Que los rastreadores-hogueras logren valorar el estilo de oración que
-      propone la espiritualidad salesiana y latinoamericana.
+      Que los rastreadores&ndash;hogueras logren valorar el estilo de oración
+      que propone la espiritualidad salesiana y latinoamericana.
     </p>
     <p>
-      Que los rastreadores-hogueras redescubran la celebración de la Misa como
-      una de las más hermosas formas de oración y encuentro de su comunidad con
-      el Dios que nos ama.
+      Que los rastreadores&ndash;hogueras redescubran la celebración de la Misa
+      como una de las más hermosas formas de oración y encuentro de su comunidad
+      con el Dios que nos ama.
     </p>
     <p>
-      Que los rastreadores-hogueras puedan unirse como grupo en el diálogo con
-      Dios, descubriedo la importancia de la oración comunitaria. Poder rezar en
-      forma personal, como forma de relación profunda con Dios.
+      Que los rastreadores&ndash;hogueras puedan unirse como grupo en el diálogo
+      con Dios, descubriedo la importancia de la oración comunitaria. Poder
+      rezar en forma personal, como forma de relación profunda con Dios.
     </p>
     <h2>ACTIVIDADES</h2>
     <p>
@@ -199,9 +201,8 @@
     <p>
       No hay oración sin Fe. Es una forma de vivir nuestra fe. La oración debe
       formar parte de la vida de todos los días, para permitir que la verdadera
-      fe eche raíces... La oración de fe no consiste solamente en decir
-      "Señor, Señor», sino en disponer el corazón para hacer la voluntad del
-      Padre.
+      fe eche raíces... La oración de fe no consiste solamente en decir "Señor,
+      Señor», sino en disponer el corazón para hacer la voluntad del Padre.
     </p>
     <p>Con la oración, todo bautizado trabaja por la venida de Cristo.</p>
     <p>
@@ -235,8 +236,8 @@
     </p>
     <p>
       El contemplativo vive en la convicción y en la alegría de que la vida
-      personal y la historia de la humanidad son el lugar en el que
-      Dios-construye su Reino, venciendo todo obstáculo de mal y de pecado. El
+      personal y la historia de la humanidad son el lugar en el que Dios
+      construye su Reino, venciendo todo obstáculo de mal y de pecado. El
       contemplativo en lo cotidiano, mientras come, estudia, o hace cualquier
       cosa, es consciente, aunque en aquel instante no lo piense, de que está en
       manos del Señor de la vida. Esto genera en él alegría, paz, optimismo,
@@ -270,8 +271,8 @@
       una manera especial. Desde una pequeña flor hasta la inmensidad del mar,
       desde una suave brisa hasta una tormenta eléctrica, todo en la naturaleza
       nos muestra a Dios, nos hace tenerlo más cerca y nos permite una
-      experiencia de oración exploradoril. Así como las obras de arte reflejan la
-      mano del artista que las creo, la naturaleza refleja la mano de nuestro
+      experiencia de oración exploradoril. Así como las obras de arte reflejan
+      la mano del artista que las creo, la naturaleza refleja la mano de nuestro
       Padre creador. Por eso la contemplación de la naturaleza es un medio de
       oración y encuentro con Dios.
     </p>
@@ -307,8 +308,8 @@
     <p>
       Insistir, creer firmemente que seremos escuchados y pedir con insistencia
       es pedir con verddera fe. Para pedir con fe se requiere una honda
-      humildad; debemos reconocer que “necesitamos la fuerza de Dios”. "Pidan
-      y se les dará, golpeen y se les abrirá."
+      humildad; debemos reconocer que “necesitamos la fuerza de Dios”. "Pidan y
+      se les dará, golpeen y se les abrirá."
     </p>
     <p>
       La celebración comunitaria es la experiencia donde se comparte la búsqueda
@@ -318,8 +319,8 @@
       Una de las dos grandes celebraciones que marcan el ritmo de la vida
       cristiana nos habla de la alegría de compartir entre hermanos, de la
       fraternidad, de la solidaridad, de la unión: es la Eucaristía. La otra nos
-      muestra la alegría del reencuentro, la posibilidad de cambiar, la genero-
-      sidad del perdón gratuito de Dios: es la Reconciliación.
+      muestra la alegría del reencuentro, la posibilidad de cambiar, la
+      generosidad del perdón gratuito de Dios: es la Reconciliación.
     </p>
     <p>
       La presencia liberadora de Dios da un tono especial a la Eucaristía y a la
@@ -347,10 +348,10 @@
     </p>
     <p>
       La meditación no es sólo el silencio, la calma o la tranquilidad. La
-      meditación no se acaba al reflexionar con atención sobre un hecho. No basta
-      tampoco con ahondar profundamente detro la propia personalidad. Silencio,
-      reflexión y buscar en las profundidades de la persona, son sólo actitudes
-      preparatorias de la meditación.
+      meditación no se acaba al reflexionar con atención sobre un hecho. No
+      basta tampoco con ahondar profundamente detro la propia personalidad.
+      Silencio, reflexión y buscar en las profundidades de la persona, son sólo
+      actitudes preparatorias de la meditación.
     </p>
     <p>
       Meditar es, después de haber ahondado en la vida, ponernos cara a cara con
@@ -367,9 +368,9 @@
       un salmo. Otros parten de un hecho de la vida cotidiana, de un diálogo con
       otra persona o de una experiencia personal. Otros toman pie de la música o
       letra de un cantautor o de un poeta moderno, o también de un libro de
-      ciencias naturales, historia o filosofía. Cada uno está llamado a descubrir
-      su meditación. No importa que se arranque de un lado o del otro, con tal
-      que en todo caso vida y palabra de Dios se encuentren.
+      ciencias naturales, historia o filosofía. Cada uno está llamado a
+      descubrir su meditación. No importa que se arranque de un lado o del otro,
+      con tal que en todo caso vida y palabra de Dios se encuentren.
     </p>
     <p>
       En los momentos de oración compartida cada uno puede ir expresando junto
@@ -389,12 +390,12 @@
     <p>
       Rezando de a varios se descubre la fuerza de la oración «Donde dos o más
       estén reunidos en mi nombre». Es fundamental la idea de «nosotros» (Padre
-      «Nuestro», agradece«mos», pedi«- mos», etc.)
+      «Nuestro», agradece«mos», pedi«mos», etc.)
     </p>
     <p>
-      La oración ayuda a conocerse más, a unir al grupo. Nos reconocemos hijos de
-      Dios y hermanos entre nosotros. Como Iglesia, somos Pueblo de hijos, Pueblo
-      de hermanos.
+      La oración ayuda a conocerse más, a unir al grupo. Nos reconocemos hijos
+      de Dios y hermanos entre nosotros. Como Iglesia, somos Pueblo de hijos,
+      Pueblo de hermanos.
     </p>
     <p>
       La importancia de la oración espontánea en el grupo se va construyendo
@@ -437,8 +438,8 @@
     <p>
       Agradecer, pedir, ofrecer, meditar, contemplar y proclamar con alegría la
       obra de salvación que Dios obra en lo cotidiano de los patios de nuestra
-      vida es el camino que Jesús hizo y nosotros revivimos con el estilo de
-      Don Bosco.
+      vida es el camino que Jesús hizo y nosotros revivimos con el estilo de Don
+      Bosco.
     </p>
     <h3>Palabra de Dios: Orar en todo tiempo (Romanos 12, 12)</h3>
     <p>
@@ -532,13 +533,8 @@
     <p>
       <em
         >«Jesús agregó: “Supongamos que algunos de ustedes tienen un amigo y
-        recurre a él a me-</em
-      >
-    </p>
-    <p>
-      <em
-        >dianoche, para decirle: `Amigo, préstame tres panes, porque uno de mis
-        amigos llegó de</em
+        recurre a él a medianoche, para decirle: `Amigo, préstame tres panes,
+        porque uno de mis amigos llegó de</em
       >
     </p>
     <p>
@@ -550,13 +546,8 @@
     <p>
       <em
         >la puerta está cerrada, y mis hijos y yo estamos acostados. No puedo
-        levantarme para dárte-</em
-      >
-    </p>
-    <p>
-      <em
-        >los´. Yo les aseguro que, aunque él no se levante para dárselos por ser
-        su amigo, se levantará</em
+        levantarme para dártelos´. Yo les aseguro que, aunque él no se levante
+        para dárselos por ser su amigo, se levantará</em
       >
     </p>
     <p>
@@ -591,8 +582,8 @@
     </p>
     <p>
       <em
-        >buenas a sus hijos, cuánto más el Padre del cielo dará el Espíritu Santo
-        a aquellos que se lo</em
+        >buenas a sus hijos, cuánto más el Padre del cielo dará el Espíritu
+        Santo a aquellos que se lo</em
       >
     </p>
     <p><em>pidan”».</em></p>
@@ -608,20 +599,15 @@
     <p>
       <em
         >esta parábola: “Dos hombres subieron al Templo para orar; uno era
-        fariseo y el otro, publi-</em
-      >
-    </p>
-    <p>
-      <em
-        >cano. El fariseo, de pie, oraba así: `Dios mío, te doy gracias porque
-        no soy como los demás hombres, que son ladrones, injustos y adúlteros;
-        ni tampoco como ese publicano. Ayuno dos veces por semana y pago la
-        décima parte de todas mis entradas´. En cambio, el publicano,
-        manteniéndose a distancia, no se animaba siquiera a levantar los ojos al
-        cielo, sino que se golpeaba el pecho, diciendo: ` ¡Dios mío, ten piedad
-        de mí, que soy un pecador!’. Les asguro que este último volvió a su casa
-        justificado, pero no el primero. Porque todo el que se ensalza será
-        humillado y el que se humilla será ensalzado”»</em
+        fariseo y el otro, publicano. El fariseo, de pie, oraba así: `Dios mío,
+        te doy gracias porque no soy como los demás hombres, que son ladrones,
+        injustos y adúlteros; ni tampoco como ese publicano. Ayuno dos veces por
+        semana y pago la décima parte de todas mis entradas´. En cambio, el
+        publicano, manteniéndose a distancia, no se animaba siquiera a levantar
+        los ojos al cielo, sino que se golpeaba el pecho, diciendo: ` ¡Dios mío,
+        ten piedad de mí, que soy un pecador!’. Les asguro que este último
+        volvió a su casa justificado, pero no el primero. Porque todo el que se
+        ensalza será humillado y el que se humilla será ensalzado”»</em
       >
     </p>
     <p>
@@ -648,13 +634,8 @@
     <p>
       <em
         >a presentarse a los sacerdotes”. Y en el camino quedaron purificados.
-        Uno de ellos, al com-</em
-      >
-    </p>
-    <p>
-      <em
-        >probar que estaba curado, volvió atrás alabando a Dios en voz alta y se
-        arrojó a los pies</em
+        Uno de ellos, al comprobar que estaba curado, volvió atrás alabando a
+        Dios en voz alta y se arrojó a los pies</em
       >
     </p>
     <p>
@@ -665,8 +646,8 @@
     </p>
     <p>
       <em
-        >“¿Cómo, no quedaron purificados los diez? Los otros nueve, ¿dónde están?
-        ¿Ninguno volvió a</em
+        >“¿Cómo, no quedaron purificados los diez? Los otros nueve, ¿dónde
+        están? ¿Ninguno volvió a</em
       >
     </p>
     <p>
@@ -678,15 +659,15 @@
     <h3>ACTIVIDADES N° 2 – PARTICIPANDO DE CELEBRACIONES</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende despertar la sensación de sentirse Iglesia-comunidad
-      a partir de la participación activa en actividades que reflejen la fe de
-      nuestro pueblo.
+      La actividad pretende despertar la sensación de sentirse
+      Iglesia&ndash;comunidad a partir de la participación activa en actividades
+      que reflejen la fe de nuestro pueblo.
     </p>
     <h3>- Actividad:</h3>
     <p>
       Presentar la realización de alguna procesión religiosas, peregrinaciones,
-      encuentros especiales u otras expresiones comunitarias de fe que
-      organice la parroquia, el colegio, la diócesis, etc.
+      encuentros especiales u otras expresiones comunitarias de fe que organice
+      la parroquia, el colegio, la diócesis, etc.
     </p>
     <p>
       Ponerse de acuerdo para participar y según el tipo de celebración que sea,
@@ -713,12 +694,12 @@
       ¿Por qué celebramos en comunidad y no solos?
     </p>
     <h3>
-      - Leer el Evangelio de "Dos o más reunidos en mi nombre" (MI. 18, 19-20) Y
-      comentarlo.
+      &mdash; Leer el Evangelio de "Dos o más reunidos en mi nombre" (MI. 18,
+      19-20) Y comentarlo.
     </h3>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1</li>
-      <li><strong>- Palabra de Dios:</strong> Ver actividad N°1</li>
+      <li><strong>Reflexión:</strong> Ver actividad N°1</li>
+      <li><strong>Palabra de Dios:</strong> Ver actividad N°1</li>
     </ul>
     <h3>ACTIVIDADES N° 3 – RECLAMOS POPULARES</h3>
     <h3>- Orientaciones:</h3>
@@ -741,7 +722,8 @@
       <li>
         <strong
           ><em
-            >- Leer el Evangelio de "Pidan y se les dará" (Lc. 11, 6-13)</em
+            >&mdash; Leer el Evangelio de "Pidan y se les dará" (Lc. 11,
+            6-13)</em
           ></strong
         >
         Y relacionarlo con lo conversado. Preguntar:¿Cómo es nuestra oración?
@@ -765,8 +747,8 @@
       ¿Quiénes se acordaron de hacer al menos una señal de la cruz al acostarse?
     </p>
     <p>
-      ¿Cuántas veces dijimos la palabra "gracias" (en la semana o en el mismo día
-      del encuentro)
+      ¿Cuántas veces dijimos la palabra "gracias" (en la semana o en el mismo
+      día del encuentro)
     </p>
     <p>
       ¿Es porque nadie merecía ser agradecido? Describí las imágenes religiosas
@@ -780,15 +762,16 @@
       quieran agradecer a Dios y algo que quieran pedir a Dios. Las preguntas
       pueden ser: ¿Qué cosa buena te pasó esta semana y querés agradecerle a
       Dios? ¿Qué querés que le pida a Dios por vos? Una vez que se reunieron los
-      papeles, en clima de oración comunitaria, los rastreadores-hgueras leerán
-      algunos de ellos (tres o cuatro por cada compañía). Para cerrar harán una
-      oración donde ofrezcan todo el trabajo a Jesús, en ella pueden agradecer
-      las gracias recibidas por el Batallón y luego pedirle a Dios por las
-      intenciones escritas y por las intenciones que los chicos quieran agregar.
+      papeles, en clima de oración comunitaria, los rastreadores&ndash;hogueras
+      leerán algunos de ellos (tres o cuatro por cada compañía). Para cerrar
+      harán una oración donde ofrezcan todo el trabajo a Jesús, en ella pueden
+      agradecer las gracias recibidas por el Batallón y luego pedirle a Dios por
+      las intenciones escritas y por las intenciones que los chicos quieran
+      agregar.
     </p>
     <h3>- Se actúa o Tu compromiso:</h3>
     <p>
-      Para cerrar, los rastreadores-hogueras se pondrán de a dos. Cada uno
+      Para cerrar, los rastreadores&ndash;hogueras se pondrán de a dos. Cada uno
       escribirá tres intenciones personales o familiares en un papel y se lo
       entregará a su pareja para que durante un mes rece por él. De esta manera
       todos estarán rezando por todos fortaleciendo la unidad del grupo en el
