--- a/src/11-verdad.html
+++ b/src/11-verdad.html
@@ -26,8 +26,9 @@
     <p>Es el momento propicio para esta consigna porque:</p>
     <ul>
       <li>
-        >> Los Rastreadores-Hogueras fueron descubiertos mintiendo para poder
-        “zafar” de alguna situación>> El grupo mantiene cosas ocultas entre sí
+        >> Los Rastreadores&ndash;Hogueras fueron descubiertos mintiendo para
+        poder “zafar” de alguna situación>> El grupo mantiene cosas ocultas
+        entre sí
       </li>
       <li>
         >> No han parecido preocuparse ante algún hecho de injusticia
@@ -37,15 +38,15 @@
     <h3>- Orientación:</h3>
     <p>
       La verdad hay que anunciarla siempre, tanto en palabras como en actitudes.
-      No puede haber lealtad ni fidelidad si hay mentira. Para que haya confianza
-      se necesita que haya sinceridad. No se es sincero "a medias". Decir una
-      parte de la verdad y ocultar las otras es también una forma de mentir. El
-      explorador es veraz, la veracidad no es simplemente decir verdades sino
-      también tener una determinada conducta que se mantiene en diferentes
-      situaciones y ambientes, es decir, "ser coherente". También hay que tener
-      en cuenta que no existe una verdad definitiva, mucho menos “mi verdad”. La
-      verdad no es única ni propia, necesitamos del otro para profundizarla e ir
-      acercándonos más a ella.
+      No puede haber lealtad ni fidelidad si hay mentira. Para que haya
+      confianza se necesita que haya sinceridad. No se es sincero "a medias".
+      Decir una parte de la verdad y ocultar las otras es también una forma de
+      mentir. El explorador es veraz, la veracidad no es simplemente decir
+      verdades sino también tener una determinada conducta que se mantiene en
+      diferentes situaciones y ambientes, es decir, "ser coherente". También hay
+      que tener en cuenta que no existe una verdad definitiva, mucho menos “mi
+      verdad”. La verdad no es única ni propia, necesitamos del otro para
+      profundizarla e ir acercándonos más a ella.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos qué te pasa con este tema?”</p>
@@ -69,8 +70,7 @@
       ¿Qué características tendría la Verdad según el Papa Francisco? Ante todo,
       no existe una vedad única, hay que captar lo positivo del otro. No hay que
       buscar una verdad que divida, la verdad debe ser constructiva. Es un doble
-      compromiso: denunciar lo injusto y asumir la responsabilidad de
-      mejorarlo
+      compromiso: denunciar lo injusto y asumir la responsabilidad de mejorarlo
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- La verdad los hará libres (Jn 8, 31-32)</h3>
@@ -122,9 +122,9 @@
     <h3>ACTIVIDAD N° 1: RADIOGRAFÍA DEL GRUPO</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que el Rastreador-Hoguera reflexione la importancia de
-      optar por la verdad. Verdad que también se traduce en ser sincero con
-      uno mismo.
+      Esta actividad busca que el Rastreador&ndash;Hoguera reflexione la
+      importancia de optar por la verdad. Verdad que también se traduce en ser
+      sincero con uno mismo.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -264,8 +264,8 @@
     <p>
       <strong>Optar por la verdad:</strong> Decir la verdad es una forma de
       amar, dejamos de ser egoístas y comezamos a pensar en el otro. La
-      sinceridad consiste simplemente en reflejar la realidad de lo que pasa, sin
-      alterarla ni interferirla con otras cosas.
+      sinceridad consiste simplemente en reflejar la realidad de lo que pasa,
+      sin alterarla ni interferirla con otras cosas.
     </p>
     <p>
       Los hombres no podrían vivir juntos si no tuvieran confianza recíproca, es
@@ -294,7 +294,7 @@
     <h3>ACTIVIDAD 2: TELÉFONO DESCOMPUESTO</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que el Rastreador-Hoguera reflexione sobre la
+      Esta actividad busca que el Rastreador&ndash;Hoguera reflexione sobre la
       importancia de no distosionar la verdad, ya que la verdad no solo es parte
       de la promesa exploradoril, es parte del mensaje cristiano.
     </p>
@@ -387,8 +387,8 @@
     <p>
       En Jesucristo la verdad de Dios se manifestó en plenitud. "lleno de gracia
       y de verdad", él es la "luz del mundo". El cree en él, no permanece en las
-      tinieblas. El discípulo de Jesús, “permanece en su palabra", para
-      conocer "la verdad que hace libre".
+      tinieblas. El discípulo de Jesús, “permanece en su palabra", para conocer
+      "la verdad que hace libre".
     </p>
     <p>
       Es nuestra misión anunciar la verdad, no solo una verdad humana y racional
@@ -409,8 +409,8 @@
     <h3>ACTIVIDAD N° 3: REPRESENTACIONES A MEDIAS. JAIME DE NEVARES</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca introducir la figura de Jaime de Nevares, como ejemplo
-      cercano a testimonio de una verdad comprometida y que denuncia la
+      Esta actividad busca introducir la figura de Jaime de Nevares, como
+      ejemplo cercano a testimonio de una verdad comprometida y que denuncia la
       injusticia.
     </p>
     <h3>- Actividad:</h3>
@@ -516,8 +516,8 @@
     <p>
       En el año 1969 intervino frente a los abusos que se cometían con los
       obreros de El Chacón. Fue frontal en su enfrentamiento con el gobierno de
-      facto que había entonces. Se negó a bendecir la capilla de El Chacón
-      hasta que no se hiciera justicia con los obreros.
+      facto que había entonces. Se negó a bendecir la capilla de El Chacón hasta
+      que no se hiciera justicia con los obreros.
     </p>
     <p>
       Años después, junto con los sacerdotes de la diócesis deciden no asistir
