--- a/src/12-fe.html
+++ b/src/12-fe.html
@@ -33,17 +33,17 @@
     <p>“¿Es ahora el momento adecuado para esta consigna?’”</p>
     <p>Elegiste esta consigna porque…</p>
     <p>
-      Los rastreadores-hogueras creen que la fe no es algo necesario en sus
-      vidas.
+      Los rastreadores&ndash;hogueras creen que la fe no es algo necesario en
+      sus vidas.
     </p>
     <p>
-      Los rastreadores-hogueras tienen una imagen normativa de la fe, la cual
-      prohíbe hacer
+      Los rastreadores&ndash;hogueras tienen una imagen normativa de la fe, la
+      cual prohíbe hacer
     </p>
     <p>cosas que ellos disfrutan. (Salir a bailar, etc.)</p>
     <p>
-      Los rastreadores-hogueras asocian la fe al aburrimiento, el rezar todo el
-      día y a la cara
+      Los rastreadores&ndash;hogueras asocian la fe al aburrimiento, el rezar
+      todo el día y a la cara
     </p>
     <p>amargada.</p>
     <h3>- Orientación:</h3>
@@ -74,9 +74,9 @@
       <li>2) Compartir con sus pares animadores estos recuerdos.</li>
       <li>
         3) Realizar un autoexamen y detección de los propios conflictos de fe en
-        la actualidad. ¿Qué significa para vos la fe y en qué cosas se refleja en
-        tu vida? ¿Qué significa hoy, para vos, ser como explorador una persona de
-        fe? ¿Qué prioridad tiene la fe en tu vida?
+        la actualidad. ¿Qué significa para vos la fe y en qué cosas se refleja
+        en tu vida? ¿Qué significa hoy, para vos, ser como explorador una
+        persona de fe? ¿Qué prioridad tiene la fe en tu vida?
       </li>
     </ol>
     <h2>ALGUNAS COSAS CLARAS…</h2>
@@ -91,21 +91,21 @@
     <p>
       <em
         >«Y la Palabra se hizo carne y habitó entre nosotros. Y nosotros hemos
-        visto su gloria, la gloria que recibe del Padre como Hijo único, lleno de
-        gracia y de verdad.» Reflexión: Nuestro Dios, en Jesús, se hizo humano.
-        Tenemos un Dios que sale al encuentro de la historia de la humanidad y
-        se queda con nosotros. Nuestra fe se basa en el encuentro con Jesús.
-        Este encuentro nos cambia la vida, nos sana, nos renueva, nos alienta a
-        seguir adelate y superar dificultades. ¿Dónde lo encontramos a Jesús? En
-        el prójimo, en la Eucaristía, en el abrazo de la Reconciliación, en
-        nuestra vida de familia, en nuestras amistades, en el Batallón y las
-        personas que nos quieren. Creemos en “Dios con nosotros”, que se entregó
-        en la cruz, pero vive y le da sentido a nuestras vidas para seguir
-        amando y haciendo el bien por lo dmás. Por Jesús, creemos que nuestra
-        misión en este mundo es amar. Cada vez que obramos llevando con nosotros
-        sus sentimientos, nos hacemos Iglesia (comunidad) y nos sentimos
-        hermanados porque su Espíritu Santo sopla el aliento de vida y alegría
-        sobre nosotros.</em
+        visto su gloria, la gloria que recibe del Padre como Hijo único, lleno
+        de gracia y de verdad.» Reflexión: Nuestro Dios, en Jesús, se hizo
+        humano. Tenemos un Dios que sale al encuentro de la historia de la
+        humanidad y se queda con nosotros. Nuestra fe se basa en el encuentro
+        con Jesús. Este encuentro nos cambia la vida, nos sana, nos renueva, nos
+        alienta a seguir adelate y superar dificultades. ¿Dónde lo encontramos a
+        Jesús? En el prójimo, en la Eucaristía, en el abrazo de la
+        Reconciliación, en nuestra vida de familia, en nuestras amistades, en el
+        Batallón y las personas que nos quieren. Creemos en “Dios con nosotros”,
+        que se entregó en la cruz, pero vive y le da sentido a nuestras vidas
+        para seguir amando y haciendo el bien por lo dmás. Por Jesús, creemos
+        que nuestra misión en este mundo es amar. Cada vez que obramos llevando
+        con nosotros sus sentimientos, nos hacemos Iglesia (comunidad) y nos
+        sentimos hermanados porque su Espíritu Santo sopla el aliento de vida y
+        alegría sobre nosotros.</em
       >
     </p>
     <h2>ENTENDIÉNDOLOS</h2>
@@ -128,17 +128,17 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
-      Los rastreadores-hogueras lograron descubrir una imagen de Dios libre de
-      prejuicios y falsas concepciones.
+      Los rastreadores&ndash;hogueras lograron descubrir una imagen de Dios
+      libre de prejuicios y falsas concepciones.
     </p>
     <p>
-      Los rastreadores-hogueras pudieron incorporar la necesidad de tener una fe
-      basada en obras, que brinda respuestas a sus vidas y los mueve a actuar en
-      consecuencia.
+      Los rastreadores&ndash;hogueras pudieron incorporar la necesidad de tener
+      una fe basada en obras, que brinda respuestas a sus vidas y los mueve a
+      actuar en consecuencia.
     </p>
     <p>
-      Los rastreadores-hogueras comenzaron a vivir la fe desde un compromiso
-      concreto y coherente reconociendo a Dios en lo cotidiano.
+      Los rastreadores&ndash;hogueras comenzaron a vivir la fe desde un
+      compromiso concreto y coherente reconociendo a Dios en lo cotidiano.
     </p>
     <h2>ACTIVIDADES</h2>
     <p>
@@ -151,7 +151,7 @@
     <h3>ACTIVIDAD N° 1 - LAS TORTAS DEL TIEMPO</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad busca que los rastreadores-hogueras puedan reconocer la
+      La actividad busca que los rastreadores&ndash;hogueras puedan reconocer la
       presencia de Dios durante las actividades que llevan a cabo diariamente.
     </p>
     <h3>- Actividad:</h3>
@@ -161,8 +161,8 @@
       llegar a la conclusión por ejemplo de que un chico dedica el 20% de su
       tiempo a divertirse, el 25% a estudiar, el 30% a dormir, etc. Construir un
       nuevo gráfico en un afiche que represente el promedio de las gráficas
-      individules del grupo. Analizar y conversar sobre los gráficos personales y
-      comunitarios. No limitar el análisis a que hayan puesto o no una porción
+      individules del grupo. Analizar y conversar sobre los gráficos personales
+      y comunitarios. No limitar el análisis a que hayan puesto o no una porción
       de ''fe'', sino ver si en cada una de las porciones que pusieron se
       encuentran con Dios.
     </p>
@@ -194,8 +194,7 @@
       creyente y comprometida de los acontecimientos y la presencia de Dios en
       ellos. Es una verdadera expresión de la fe comunitaria. Hoy, su
       intepretación y discernimiento comunitario nos permiten comprender la
-      realidad desde la profundidad de su misterio dentro del proyecto de
-      Dios.
+      realidad desde la profundidad de su misterio dentro del proyecto de Dios.
     </p>
     <p>
       Todo esto implica un ejercicio de la comunidad en la que estamos para
@@ -261,9 +260,9 @@
       Vivir nuestra fe implica hacer realidad el Reino de Dios y no simplemente
       conocerlo inteletualmente. Si hablamos de los valores, de los modelos, de
       los afectos y de las experiencias de vida, la fe de los creyentes es
-      concreta y provocante. Lo ha afirmarlo con seguridad Jesús. Lo ha recordado
-      siempre la Iglesia, resistiendo tenazmente contra todo intento de
-      desvirtuar la Encarnación. Ser mártir es ser testigo de Jesúcristo.
+      concreta y provocante. Lo ha afirmarlo con seguridad Jesús. Lo ha
+      recordado siempre la Iglesia, resistiendo tenazmente contra todo intento
+      de desvirtuar la Encarnación. Ser mártir es ser testigo de Jesúcristo.
     </p>
     <p>
       Las dificultades nacen cuando se plantea la relación entre la experiencia
@@ -296,9 +295,9 @@
       ¿Cómo es Dios? No lo sabemos, pero descubrimos su imagen a través de las
       personas, que son creadas "a su imagen y semejanza". La presencia de Dios
       en cada persona nos hace sponer que todo el amor que descubramos en ella
-      es un reflejo del amor de Dios. Podemos ir desde un Dios poderoso como rey,
-      justo como un juez, un Dios "Papá" como le llamaba Jesús escandalizando a
-      los judíos de su época que lo sentían mucho más lejano.
+      es un reflejo del amor de Dios. Podemos ir desde un Dios poderoso como
+      rey, justo como un juez, un Dios "Papá" como le llamaba Jesús
+      escandalizando a los judíos de su época que lo sentían mucho más lejano.
     </p>
     <p>
       Si creemos en un Dios que es amor, busquemos en qué personas descubrimos
@@ -457,9 +456,9 @@
     <p>
       Por eso, las expresiones artísticas de cada época acompañan estos procesos
       y recorriendo las obras de arte podemos tener una visión sobre cómo era la
-      fe en cada sociedad. Influencidos fuertemente por cada cultura, los hombres
-      seguimos buscando las imágenes de Dios que mejor expresen la experiencia
-      de fe de nuestra vida.
+      fe en cada sociedad. Influencidos fuertemente por cada cultura, los
+      hombres seguimos buscando las imágenes de Dios que mejor expresen la
+      experiencia de fe de nuestra vida.
     </p>
     <p>
       Hoy mismo, cada grupo y comunidad tiene sus propios criterios,
@@ -528,8 +527,9 @@
     <h3>ACTIVIDAD N° 2-LÍNEA DE VIDA</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende que los rastreadores-hogueras puedan reconocer la
-      presencia de Dios a lo largo de los hechos más significativos de sus vidas.
+      La actividad pretende que los rastreadores&ndash;hogueras puedan reconocer
+      la presencia de Dios a lo largo de los hechos más significativos de sus
+      vidas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -558,9 +558,9 @@
     <h3>ACTIVIDAD N° 3-LAS DIFICULTADES</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad procura que los rastreadores-hogueras vean de qué manera
-      sintieron la presencia de Dios en los momentos más difíciles de su vida
-      y de la vida del grupo.
+      La actividad procura que los rastreadores&ndash;hogueras vean de qué
+      manera sintieron la presencia de Dios en los momentos más difíciles de su
+      vida y de la vida del grupo.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -631,7 +631,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad busca descubrir cómo el Espíritu Santo anima al grupo y a
-      cada uno de los rastreadores-hogueras en sus labores cotidianas.
+      cada uno de los rastreadores&ndash;hogueras en sus labores cotidianas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -676,14 +676,14 @@
         cotidiana, pero con perspectiva trascendente, invitamos al grupo a leer
         el siguiente relato acerca del “Reino de Dios”. El reino de Dios es como
         un hombre que alrededor de su casa tiene un jardín lleno de flores de
-        todos los colores. Nuestro mundo es como ese gran jardín lleno de flores,
-        donde nos sembró un Dios jardinero muy bueno que nos quiere mucho. Él
-        nos permite crecer libremente. Nos riega con bendiciones y nos deja
-        algunos gusanitos que si bien a primera vista molestan con el tiempo se
-        convierten en mariposas, como todos aquellos problemas que transformamos
-        en desafíos. Somos flores muy diferentes, las hay de todos de todos los
-        colores, tamaños, formas y perfumes, pero todos pasamos por los mismos
-        inviernos y primaveras y convivimos bajo el mismo
+        todos los colores. Nuestro mundo es como ese gran jardín lleno de
+        flores, donde nos sembró un Dios jardinero muy bueno que nos quiere
+        mucho. Él nos permite crecer libremente. Nos riega con bendiciones y nos
+        deja algunos gusanitos que si bien a primera vista molestan con el
+        tiempo se convierten en mariposas, como todos aquellos problemas que
+        transformamos en desafíos. Somos flores muy diferentes, las hay de todos
+        de todos los colores, tamaños, formas y perfumes, pero todos pasamos por
+        los mismos inviernos y primaveras y convivimos bajo el mismo
       </li>
     </ul>
     <p>sol y la misma lluvia.</p>
@@ -694,8 +694,8 @@
       ambiente. Esa es nuestra misión en el jardín de la vida.
     </p>
     <p>
-      Una mañana estaba caminando por el jardín cuando de pronto vio una flor que
-      asomaba entre un matorral. Se acercó, la observó lentamente, olió su
+      Una mañana estaba caminando por el jardín cuando de pronto vio una flor
+      que asomaba entre un matorral. Se acercó, la observó lentamente, olió su
       perfume, estiró su mano y suavemente la cortó.
     </p>
     <p>
@@ -713,24 +713,24 @@
       ¡Estemos “siempre listos” para que nos llame!
     </p>
     <p>
-      Al cortarla, esa flor pareciera muerta, muerta al jardín que ya no la tiene
-      entre los suyos. Las otras flores sienten el vacío. Pero su fuerte perfume
-      queda en el jardín, sigue flotando en el ambiente. Es que nuestros seres
-      queridos trascienden el débil hilo que separa la vida de la muerte. Sus
-      historias se transforman en presente en cada uno de nosotros. Su memoria
-      nos acompaña y nos acompañará por siempre.
+      Al cortarla, esa flor pareciera muerta, muerta al jardín que ya no la
+      tiene entre los suyos. Las otras flores sienten el vacío. Pero su fuerte
+      perfume queda en el jardín, sigue flotando en el ambiente. Es que nuestros
+      seres queridos trascienden el débil hilo que separa la vida de la muerte.
+      Sus historias se transforman en presente en cada uno de nosotros. Su
+      memoria nos acompaña y nos acompañará por siempre.
     </p>
     <p>
       Entonces volvió a su casa con la flor en sus manos y lo puso en un lugar
       especial de su casa, junto con muchas otras flores.
     </p>
     <p>
-      El jardinero llevó, con ternura y delicadeza, la flor en sus propias manos.
-      Se la llevó a su prpia casa, casa grande que Dios tiene preparada. La flor
-      no está muerta. Allí lo espera otra vida, una nueva vida en un lugar
-      especial donde las flores nunca se marchitan, sino que siguen perfumando
-      eternamente. Las otras flores no podemos verlo, pero estamos seguros que
-      allí está. Tenemos una fe ciega en nuestro fiel jardinero.
+      El jardinero llevó, con ternura y delicadeza, la flor en sus propias
+      manos. Se la llevó a su prpia casa, casa grande que Dios tiene preparada.
+      La flor no está muerta. Allí lo espera otra vida, una nueva vida en un
+      lugar especial donde las flores nunca se marchitan, sino que siguen
+      perfumando eternamente. Las otras flores no podemos verlo, pero estamos
+      seguros que allí está. Tenemos una fe ciega en nuestro fiel jardinero.
     </p>
     <p>
       Está junto con otras tantas flores. Junto con las flores de todos aquellos
