--- a/src/13-conciencia.html
+++ b/src/13-conciencia.html
@@ -86,8 +86,8 @@
     </p>
     <p>
       Esta frase busca interiorizarse en el propio termino de conciencia el cual
-      se define en téminos generales como el conocimiento que alguien tiene de sí
-      mismo y de su entorno, pero también se refiere a la moral o bien a la
+      se define en téminos generales como el conocimiento que alguien tiene de
+      sí mismo y de su entorno, pero también se refiere a la moral o bien a la
       recepción normal de los estímulos del mundo interior y exterior. Por lo
       cual para tomar postura sobre una idea o hecho hay que tener conocimiento
       y por lo tanto informarse y conocer antes de emitir juicios de valor.
@@ -128,9 +128,9 @@
       <em
         >«Jesús estaba viendo a los ricos echar dinero en los cofres de las
         ofrendas, y vio también a una viuda pobre que echaba dos moneditas de
-        cobre. Entonces dijo: “De veras les digo que esta viuda pobre ha dado más
-        que todos, pues todos dan ofrendas de los que les sobra, pero ella, en
-        su pobreza, ha dado todo lo que tenía para vivir”.»</em
+        cobre. Entonces dijo: “De veras les digo que esta viuda pobre ha dado
+        más que todos, pues todos dan ofrendas de los que les sobra, pero ella,
+        en su pobreza, ha dado todo lo que tenía para vivir”.»</em
       >
     </p>
     <h3>- Reflexión:</h3>
@@ -145,20 +145,21 @@
         Dios. Es lo que significa su ofrenda al Templo. Está lejos de Él una
         condena a los ricos, al contrario, segramente se sintió a gusto al ver
         cómo los que cuentan con los medios necesarios, ponen en práctica la
-        hermosa virtud de la magnificencia. ¡Qué sería del Templo, de las grandes
-        obras de la Iglesia si no hubiera gente generosa a lo grande! Además,
-        está muy lejos de Cristo esa clase de favoritismos por unos o por otros.
-        Y es que Dios no mira las apariencias como los hombres, precisamente
-        porque no mira las apariencias se impresionó por el gesto de esa mujer
-        pobre, lo ha dado todo para Dios, ¡todo lo que tenía para su existencia!
-        Y Cristo no se ha quedado indiferente ante tan grandioso gesto. Si hasta
-        lo ha comunicado a sus apóstoles como diciedo: “aprended de esa mujer lo
-        que es creer de veras en Dios”. Darlo todo. Y hay tanta gente que lo da
-        todo en nuestro mundo del siglo XXI y, quizás sería importante abrir más
-        los ojos y no dejarnos impresionar por las apariencias sino mirar con la
-        mirada de Cristo y obrar con la generosidad de esa viuda. Porque para
-        Dios ella no ha quedado desamparada. Porque a los que así obran Dios no
-        los abandona, sino que se conmueve de amor ante sus pequeños actos
+        hermosa virtud de la magnificencia. ¡Qué sería del Templo, de las
+        grandes obras de la Iglesia si no hubiera gente generosa a lo grande!
+        Además, está muy lejos de Cristo esa clase de favoritismos por unos o
+        por otros. Y es que Dios no mira las apariencias como los hombres,
+        precisamente porque no mira las apariencias se impresionó por el gesto
+        de esa mujer pobre, lo ha dado todo para Dios, ¡todo lo que tenía para
+        su existencia! Y Cristo no se ha quedado indiferente ante tan grandioso
+        gesto. Si hasta lo ha comunicado a sus apóstoles como diciedo: “aprended
+        de esa mujer lo que es creer de veras en Dios”. Darlo todo. Y hay tanta
+        gente que lo da todo en nuestro mundo del siglo XXI y, quizás sería
+        importante abrir más los ojos y no dejarnos impresionar por las
+        apariencias sino mirar con la mirada de Cristo y obrar con la
+        generosidad de esa viuda. Porque para Dios ella no ha quedado
+        desamparada. Porque a los que así obran Dios no los abandona, sino que
+        se conmueve de amor ante sus pequeños actos
       </li>
     </ul>
     <p>
@@ -176,10 +177,10 @@
       operaciones formles, lo que implica que ya son capaces de formular y
       comprobar hipótesis, estableciendo crítcas sobre los valores familiares y
       sociales que les permiten evaluar lo que consideran bueno o malo, pudiendo
-      percibir los conflictos que provienen de sus diferentes roles (hijo, amigo,
-      estudiante, ciudadanos de una sociedad, comunidad etc.) Así pues, el logro
-      de la autonomía y la formación de la identidad se convierten en los
-      procesos fundamentales de esta etapa. Aunque pareciera no ser así, las
+      percibir los conflictos que provienen de sus diferentes roles (hijo,
+      amigo, estudiante, ciudadanos de una sociedad, comunidad etc.) Así pues,
+      el logro de la autonomía y la formación de la identidad se convierten en
+      los procesos fundamentales de esta etapa. Aunque pareciera no ser así, las
       reglas, los valores y límites ofrecidos por los padres son evluados y
       asimilados muchas veces por los adolescentes, quienes ya no requieren
       supervisión directa de estos y tratan a toda costa de crear sus propias
@@ -230,8 +231,8 @@
       Tener preparadas hojas con varias preguntas sobre los problemas de la
       realidad actual de la parroquia, barrio, ciudad o país. Algunas
       orientaciones para la encuesta: Seleccionar preguntas que sean rápidas de
-      contestar, que no necesiten escribir mucho y qué se puedan luego clasificar
-      y obtener resultados. Pueden ser del estilo "multiple choice",
+      contestar, que no necesiten escribir mucho y qué se puedan luego
+      clasificar y obtener resultados. Pueden ser del estilo "multiple choice",
       enmeraciones de elementos, ordenar según prioridades, afirmaciones para
       decidirse por verddero o falso. Es conveniente tener una ficha impresa con
       las preguntas y espacio para las diferentes repuestas (las preguntas sobre
@@ -273,7 +274,7 @@
       <strong>Segunda Parte</strong>
     </p>
     <ul>
-      <li><em>- Si dijo el maestro- un pecado de indiferencia.</em></li>
+      <li><em>- Si dijo el maestro&mdash; un pecado de indiferencia.</em></li>
       <li><em>- ¿Y qué pecado puede ser ese?</em></li>
       <li>
         <em
@@ -339,10 +340,11 @@
     </p>
     <p>
       <strong>Para cerrar las encuestas:</strong> Reunirse y juntar las
-      respuestas de la encuesta que hayan traído los chicos. Clasificar todas las
-      respuestas obtenidas, con el mismo criterio con que lo hicieron la semana
-      anterior.En base a los resultados obtenidos relacionar con lo conversado
-      en el encuentro anterior y preguntar:- ¿Se imaginaban esas respuestas?
+      respuestas de la encuesta que hayan traído los chicos. Clasificar todas
+      las respuestas obtenidas, con el mismo criterio con que lo hicieron la
+      semana anterior.En base a los resultados obtenidos relacionar con lo
+      conversado en el encuentro anterior y preguntar:- ¿Se imaginaban esas
+      respuestas?
     </p>
     <ul>
       <li>- ¿La gente es consciente de lo que pasa? ¿Y ustedes?</li>
@@ -363,8 +365,8 @@
       del Estado, falta de salud, inseguridad, dentro de estas situciones
       globales, aparecen los rostros de las personas que las viven y las sufren:
       Padres de familia que no tienen para alimentar a sus hijos, niños que
-      mueren de enfermedades perfectamente evitables, jóvenes que no
-      encuentran de qué trabajar y ganarse la vida, personas
+      mueren de enfermedades perfectamente evitables, jóvenes que no encuentran
+      de qué trabajar y ganarse la vida, personas
     </p>
     <p>
       que trabajan todo el día para alcanzar unos pocos pesos, chicos de la
@@ -383,11 +385,11 @@
       que está mal, ya es una manera importante de amar. Luego ver qué podemos
       hacer para consolar, aliviar y revertir el sufrimiento, la debilidad y la
       pobreza marginante. En nuestra patria, Jesús vive en el pobre, allí se nos
-      manifiesta y se une con nosotros, desde allí nos salva y nos redime de toda
-      esclavitud, desde allí nos hace hermanos suyos e hijos de Dios, desde allí
-      nos hace herencia suya y pueblo suyo, desde allí nos moviliza para que
-      construyamos juntos su Reino, aquí en este presente y hacia el futuro de
-      nuestros hijos.
+      manifiesta y se une con nosotros, desde allí nos salva y nos redime de
+      toda esclavitud, desde allí nos hace hermanos suyos e hijos de Dios, desde
+      allí nos hace herencia suya y pueblo suyo, desde allí nos moviliza para
+      que construyamos juntos su Reino, aquí en este presente y hacia el futuro
+      de nuestros hijos.
     </p>
     <p>
       <strong>Honrados ciudadanos:</strong> Lejos de ser indiferente, a lo largo
@@ -446,9 +448,9 @@
       Hasta cierto momento de su vida, Don Bosco no conocía más que la pobreza
       del campo. No sabía qué es la miseria de los suburbios de las grandes
       ciudades. Al llegar a la ciudad Don Cfasso le dice «Ve, mira a tu
-      alrededor y actúa." Ya en los primeros domingos anduvo por la ciudad,
-      para hacerse una idea sobre las condiciones morales en las que se movían
-      los jóvenes.
+      alrededor y actúa." Ya en los primeros domingos anduvo por la ciudad, para
+      hacerse una idea sobre las condiciones morales en las que se movían los
+      jóvenes.
     </p>
     <p>
       Quedó turbado. Los suburbios eran zonas donde fermentaban los cinturones
@@ -620,8 +622,8 @@
     <h3>- Orientación:</h3>
     <p>
       Esta actividad busca que los Rastreadores/Hogueras distingan la diferencia
-      de dar y compartir, de identificar que no es lo mismo dar lo que sobra
-      que lo que hace falta.
+      de dar y compartir, de identificar que no es lo mismo dar lo que sobra que
+      lo que hace falta.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -686,9 +688,9 @@
       sobrevivir. Sin la plata" o "no puedo"; con ese criterio el rico embargo,
       pronto se dieron cuenta que la btendría que comprarse todo lo que quisiera
       y neficencia no bastaba; era preciso luchar por eso no está bien: cuando
-      hay personas (y mula justicia social, por instituciones y leyes que
-      chas) que no tienen para lo más mínimo, los garantizaran los derechos
-      humanos. gastos superfluos no están de acuerdo con el Esta opción tiene dos
+      hay personas (y mula justicia social, por instituciones y leyes que chas)
+      que no tienen para lo más mínimo, los garantizaran los derechos humanos.
+      gastos superfluos no están de acuerdo con el Esta opción tiene dos
       momentos que no proyecto de Dios. Hay que preguntarse si es pueden ser
       desatendidos ni ser vistos como algo realmente necesario o es simplemente
       excluyentes. Por un lado la asistencia a los para satisfacer un deseo
@@ -696,9 +698,9 @@
     </p>
     <p>
       Las diferencias entre lo necesario y lo suque ellos no pueden esperar y
-      por otro la prperfluo son difíciles de precisar y es fruto de moción humana
-      que conduce a descubrir los un largo proceso de maduración y de sensi-
-      mecanismos que generan estas situaciones e
+      por otro la prperfluo son difíciles de precisar y es fruto de moción
+      humana que conduce a descubrir los un largo proceso de maduración y de
+      sensi- mecanismos que generan estas situaciones e
     </p>
     <p>
       bilidad ante el dolor y las necesidades de los intentar cambiarlos. La
@@ -706,9 +708,9 @@
     </p>
     <p>
       Seguramente hay muchas cosas a las que nes es un elemento fundamental para
-      la prnos atamos y parecería que no se puede vivención y superación de
-      las nuevas pobrezas vir sin ellas, y cuando tomamos conciencia de y un
-      aporte especifico y original que podemos la realidad las entendemos de otra
+      la prnos atamos y parecería que no se puede vivención y superación de las
+      nuevas pobrezas vir sin ellas, y cuando tomamos conciencia de y un aporte
+      especifico y original que podemos la realidad las entendemos de otra
       manera y dar desde nuestro carisma salesiano. nos despojamos de ellas.
       Olvidar, abandonar o negar el vínculo entre
     </p>
@@ -721,7 +723,8 @@
     <p>transformar las situaciones y vivencias de in-</p>
     <p>justicia.</p>
     <p>
-      Hacer una nueva historieta donde el padre le enseñe una cosa buena al hijo.
+      Hacer una nueva historieta donde el padre le enseñe una cosa buena al
+      hijo.
     </p>
     <ul>
       <li>
@@ -759,13 +762,13 @@
     </p>
     <p>
       No debemos estar ajenos a todo aquello que interfiera en el buen vivir, el
-      Explorador debe analizar siempre desde la "óptica cristiana", toda
-      aquella situación que desvíe sus sanos intereses.
+      Explorador debe analizar siempre desde la "óptica cristiana", toda aquella
+      situación que desvíe sus sanos intereses.
     </p>
     <p>
       Debe demostrar amor a la Patria respetando las leyes, cumpliendo con sus
-      obligaciones diarias, ayudando al progreso, sembrando en sus hijos el
-      amor a la cultura de su país.
+      obligaciones diarias, ayudando al progreso, sembrando en sus hijos el amor
+      a la cultura de su país.
     </p>
     <p>
       No debemos quedarnos callados, ni de brazos cruzados cuando la injusticia
@@ -778,9 +781,9 @@
       <em
         >«Jesús estaba viendo a los ricos echar dinero en los cofres de las
         ofrendas, y vio también a una viuda pobre que echaba dos moneditas de
-        cobre. Entonces dijo: “De veras les digo que esta viuda pobre ha dado más
-        que todos, pues todos dan ofrendas de los que les sobra, pero ella, en
-        su pobreza, ha dado todo lo que tenía para vivir.”»</em
+        cobre. Entonces dijo: “De veras les digo que esta viuda pobre ha dado
+        más que todos, pues todos dan ofrendas de los que les sobra, pero ella,
+        en su pobreza, ha dado todo lo que tenía para vivir.”»</em
       >
     </p>
     <h2>EVALUACIÓN</h2>
