--- a/src/14-critica.html
+++ b/src/14-critica.html
@@ -30,8 +30,8 @@
       por cultivar una educación personalizada, personalizante y liberadora.
       <strong>Inc. 40.</strong> Tiene siempre presentes sus objetivos
       fundamentales, para hacer de cada miembro un sujeto activo de su propia
-      historia y educación, y responsable al mismo tiempo de la educación de
-      los demás en espíritu de comunidad y familia.
+      historia y educación, y responsable al mismo tiempo de la educación de los
+      demás en espíritu de comunidad y familia.
     </p>
     <h2>ELECCIÓN DE LA CONSIGNA:</h2>
     <p>¿Es ahora el momento adecuado para esta consigna?’”</p>
@@ -45,13 +45,13 @@
     </p>
     <p>Elegiste esta consigna porque…</p>
     <p>
-      Los rastreadores-hogueras suelen repetir lógicas y pensamientos difundidos
-      por los medios de comunicación, sin ser coherentes con su fe de cristianos
-      y su estilo de vida exploradoril.
+      Los rastreadores&ndash;hogueras suelen repetir lógicas y pensamientos
+      difundidos por los medios de comunicación, sin ser coherentes con su fe de
+      cristianos y su estilo de vida exploradoril.
     </p>
     <p>
-      Los rastreadores-hogueras no cuentan con herramientas suficientes para
-      hacer juicios críticos sobre su realidad social y suelen desarrollar
+      Los rastreadores&ndash;hogueras no cuentan con herramientas suficientes
+      para hacer juicios críticos sobre su realidad social y suelen desarrollar
       prejuicios relacionados con el sentido común o la incorporación de
       interpretaciones que realizan algunos adultos.
     </p>
@@ -68,17 +68,17 @@
     <p>“¿Y a vos que te pasa con este tema?”</p>
     <p>
       Dialogar con los animadores acerca de cuáles son las modas que influyen
-      sobre este grupo de rastreadores-hogueras. Pueden ser formas de vestir,
-      hablar, sentir, los hobbies, etc. Estblecer un paralelismo con cuáles
-      fueron las modas que vivieron los animadores cuando tenían la edad de los
-      rastreadores-hogueras y responder comparando el hoy con el ayer ¿de dónde
-      venían esas modas? ¿qué impacto tuvieron en nuestras vidas? ¿de qué manera
-      nos sentímos integrados o excluidos del grupo cuando cumplíamos con “la
-      moda” de ese momento? ¿Cuán influenciables éramos cuando teníamos la edad
-      de los chicos? ¿Qué publicidades de los medios de comunicación nos imponen
-      modelos de belleza o de éxito? ¿Qué queremos decir cuando describimos a
-      nuestra sociedad como materialista o consumista? Ejemplifiquen con
-      situaciones de la vida cotidiana.
+      sobre este grupo de rastreadores&ndash;hogueras. Pueden ser formas de
+      vestir, hablar, sentir, los hobbies, etc. Estblecer un paralelismo con
+      cuáles fueron las modas que vivieron los animadores cuando tenían la edad
+      de los rastreadores&ndash;hogueras y responder comparando el hoy con el
+      ayer ¿de dónde venían esas modas? ¿qué impacto tuvieron en nuestras vidas?
+      ¿de qué manera nos sentímos integrados o excluidos del grupo cuando
+      cumplíamos con “la moda” de ese momento? ¿Cuán influenciables éramos
+      cuando teníamos la edad de los chicos? ¿Qué publicidades de los medios de
+      comunicación nos imponen modelos de belleza o de éxito? ¿Qué queremos
+      decir cuando describimos a nuestra sociedad como materialista o
+      consumista? Ejemplifiquen con situaciones de la vida cotidiana.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- Mc. 8,34b-36</h3>
@@ -129,9 +129,9 @@
     </ol>
     <h2>ENTENDIÉNDOLOS</h2>
     <p>
-      Nadie está ajeno a la influencia de los medios masivos de comunicación, sin
-      embargo, por su propia inseguridad y por la importancia que le dan a la
-      imagen, los adolescentes se encuetran más sometidos a la moda y al
+      Nadie está ajeno a la influencia de los medios masivos de comunicación,
+      sin embargo, por su propia inseguridad y por la importancia que le dan a
+      la imagen, los adolescentes se encuetran más sometidos a la moda y al
       bombardeo de mensajes que transmiten la TV e internet. Los medios de
       comunicación, además de informar son formadores de opinión. Los
       adolescetes muchas veces incorporan ideas pasivamente sin someterlas a
@@ -159,7 +159,7 @@
     <p>
       La actividad pretende provocar la curiosidad, romper con el sentido común
       y despertar el epíritu crítico a través de la problematización y el
-      cuestionamiento de situaciones que los rastreadores-hogueras
+      cuestionamiento de situaciones que los rastreadores&ndash;hogueras
       experimentan en su vida cotidiana.
     </p>
     <h3>- Actividad:</h3>
@@ -201,8 +201,8 @@
     <h3>- Reflexión:</h3>
     <p>
       Cuando juzgamos lo bueno o malo de algo, partimos siempre de una formación
-      ética previa. Ello significa que el resultado de un juicio no depende de la
-      técnica de análisis o investigación
+      ética previa. Ello significa que el resultado de un juicio no depende de
+      la técnica de análisis o investigación
     </p>
     <p>
       que hagamos que simplemente nos dará datos más o menos objetivos acerca de
@@ -280,9 +280,9 @@
     <h3>ACTIVIDAD N° 2. SER PROFETAS HOY</h3>
     <h3>-Orientaciones:</h3>
     <p>
-      La actividad pretende familiarizar a los rastreadores-hogueras con la
-      vocación de profetas que tenemos desde el Bautismo. Para ello, parte del
-      mensaje de los profetas del AT con la intención de hacer eco en la
+      La actividad pretende familiarizar a los rastreadores&ndash;hogueras con
+      la vocación de profetas que tenemos desde el Bautismo. Para ello, parte
+      del mensaje de los profetas del AT con la intención de hacer eco en la
       realidad que hoy viven los adolescentes.
     </p>
     <h3>-Actividad:</h3>
@@ -317,13 +317,13 @@
     <h3>Palabra de Dios: Los crímenes de Jerusalén. (Ez. 22, 23-29)</h3>
     <p>
       <em
-        >«La palabra del Señor me llegó en estos términos: Hijo de hombre, dile a
-        Jerusalén: Tú eres una tierra que no ha sido purificada, sobre la que no
-        ha llovido en el día de la ira. Hay una conjuración de profetas en medio
-        de ella. Como un león rugiente que despedaza la presa, han devorado a la
-        gente, se han apoderado de la riqueza y objetos preciosos y han
-        multiplicado las viudas de la ciudad. Sus sacerdotes han violado mi Ley,
-        han profanado mis cosas santas; no han separado lo sagrado de lo
+        >«La palabra del Señor me llegó en estos términos: Hijo de hombre, dile
+        a Jerusalén: Tú eres una tierra que no ha sido purificada, sobre la que
+        no ha llovido en el día de la ira. Hay una conjuración de profetas en
+        medio de ella. Como un león rugiente que despedaza la presa, han
+        devorado a la gente, se han apoderado de la riqueza y objetos preciosos
+        y han multiplicado las viudas de la ciudad. Sus sacerdotes han violado
+        mi Ley, han profanado mis cosas santas; no han separado lo sagrado de lo
         profano, ni han hecho conocer la diferencia entre lo puro y lo impuro;
         han cerrado sus ojos a mis sábados y yo he sido profanado en medio de
         ellos. Sus jefes, en medio de la ciudad, son como lobos que despedazan
@@ -331,8 +331,8 @@
         acumular ganancias. Sus profetas los recbren con cal, proponiendo falsas
         visiones y predicciones engañosas. Ellos dicen: “Así habla el Señor”,
         cuando el Señor no había hablado. Los terratenientes practican la
-        extorsión, cometen robos, explotan al pobre y al indigente, y
-        atropellan al extranjero, con todo derecho.»</em
+        extorsión, cometen robos, explotan al pobre y al indigente, y atropellan
+        al extranjero, con todo derecho.»</em
       >
     </p>
     <h2>EVALUACIÓN</h2>
@@ -341,8 +341,8 @@
     </p>
     <p>
       Comenzar explicando quiénes eran los profetas y su misión de anunciar la
-      venida del Redentor, pidiéndole al pueblo que prepare su corazón
-      superando las injusticias.
+      venida del Redentor, pidiéndole al pueblo que prepare su corazón superando
+      las injusticias.
     </p>
     <p>
       Explicar que se trata de un texto bíblico, escuchar la letra de la canción
