--- a/src/15-identidad.html
+++ b/src/15-identidad.html
@@ -17,8 +17,8 @@
       <strong>Inc.29</strong> Este respeto se basa en nuestra condición de hijos
       de Dios y hermanos de Cristo. Se lleva a cabo en el respeto de la libertad
       del joven, de su ritmo de crecimiento, maduración y desarrollo y de la
-      promoción de las capacidades y cualidades personales, a fin de que llegue a
-      desarrollarse como hombre y cristiano auténtico.
+      promoción de las capacidades y cualidades personales, a fin de que llegue
+      a desarrollarse como hombre y cristiano auténtico.
       <strong>Inc. 30</strong> Hoy más que nunca los adolescentes y jóvenes
       quieren ser protagonistas de su propia historia. Por eso, no se los debe
       obligar a recibir pasivamente todo, sino que se los debe etimular a
@@ -35,7 +35,8 @@
       demás.
     </p>
     <p>
-      ¿Tienen la suficiente confianza como para charlar estos temas tan cruciales?
+      ¿Tienen la suficiente confianza como para charlar estos temas tan
+      cruciales?
     </p>
     <p>
       Necesitan orientación, ayuda, confianza y no temor, miedo, falsa
@@ -44,8 +45,8 @@
     <p>
       Sienten un interés creciente y la necesidad de conocer al otro sexo, de
       explorar sus caraterísticas. Así surgen los “amigovios”, “amigos con
-      derechos,”“chapes”, “transas” etc... Muchas veces lo que sólo puede ser
-      un momento en el crecimiento se transforma en el fin último.
+      derechos,”“chapes”, “transas” etc... Muchas veces lo que sólo puede ser un
+      momento en el crecimiento se transforma en el fin último.
     </p>
     <h3>- Orientación:</h3>
     <p>
@@ -91,8 +92,8 @@
     </p>
     <p>los chicos estos recuerdos.</p>
     <p>
-      Profundizando un poco más: ¿Qué significaba en aquel momento tener algo con
-      alguien?
+      Profundizando un poco más: ¿Qué significaba en aquel momento tener algo
+      con alguien?
     </p>
     <p>
       ¿Qué significa hoy para vos? ¿Si estás en pareja qué lugar ocupa esa
@@ -108,8 +109,8 @@
     <p>
       <strong>...De los miedos nacen los corajes;</strong> y de las dudas, las
       certezas. Los sueños anuncian otra realidad posible y los delirios, otra
-      razón. Al fin y al cabo, somos lo que hacemos para cambiar lo que somos. La
-      identidad no es una pieza de museo, quietecita en la vitrina, sino la
+      razón. Al fin y al cabo, somos lo que hacemos para cambiar lo que somos.
+      La identidad no es una pieza de museo, quietecita en la vitrina, sino la
       siempre asombrosa síntesis de las contradicciones nuestras de cada día.
     </p>
     <p>
@@ -149,9 +150,9 @@
     <p>
       <em
         >«Mientras Jesús estaba en Jerusalén, en la fiesta de la Pascua, muchos
-        creyeron en el al ver señles milagrosas que hacía. Pero Jesús no confiaba
-        en ellos, porque los conocía a todos. No necesitaba que nadie le dijera
-        nada acerca de la gente, pues el mismo conocía el corazón del
+        creyeron en el al ver señles milagrosas que hacía. Pero Jesús no
+        confiaba en ellos, porque los conocía a todos. No necesitaba que nadie
+        le dijera nada acerca de la gente, pues el mismo conocía el corazón del
         hombre.»</em
       >
     </p>
@@ -208,9 +209,9 @@
       identidad, autoimagen y autoestima.
     </p>
     <p>
-      Y, <strong>dificultad,</strong> porque los adolescentes están siempre en la
-      encrucijada al ser una persona desclasada (no es niño ni adulto), con una
-      tremenda inseguridad provocada precisamente por su falta de identidad.
+      Y, <strong>dificultad,</strong> porque los adolescentes están siempre en
+      la encrucijada al ser una persona desclasada (no es niño ni adulto), con
+      una tremenda inseguridad provocada precisamente por su falta de identidad.
     </p>
     <p>
       Los adolescentes en su mayoría son erráticos e impredecibles, se irritan
@@ -299,21 +300,21 @@
       busca a Mercedes y se desahoga a los golpes con ella. ¡Pobre mamá! Él
       maltrata a la madre por este rechazo que hace, pero Laura no puede aceptar
       en ninguna forma. Se leen en sus ojos el dolor y la desilusión. Pensaba
-      encontrar en Manuel Mora un verdadero protector y en cambio ha dado con
-      un tirano.
+      encontrar en Manuel Mora un verdadero protector y en cambio ha dado con un
+      tirano.
     </p>
     <p><strong>La entrega:</strong></p>
     <ul>
       <li>- ¡Mamá!- ¿Qué quieres, Laura?</li>
       <li>
         -Mamá, tengo que hablarte. Ya no creo que me cure, la muerte no está
-        lejos. Yo misma le ofrecí a Jesús mi vida por ti, a fin de que me obtenga
-        la gracia de que vos vuelvas a Él. Sabes que te quiero con toda mi alma.
-        Después de todo, ¿para qué sirve ya mi vida? Con tal que vuelvas a
-        Dios... Mamá, me voy. ¡Qué alegría si pudiese gozar sabiendo que has
-        vuelto al Señor! Mercedes, su madre, está deshecha. Entonces, ¿es por
-        ella que sufre su pequeña? ¿Es por ella que va a morir? Temía ser
-        reprochada, pero Laura no sabe de estas cosas. Sólo sabe amar y las
+        lejos. Yo misma le ofrecí a Jesús mi vida por ti, a fin de que me
+        obtenga la gracia de que vos vuelvas a Él. Sabes que te quiero con toda
+        mi alma. Después de todo, ¿para qué sirve ya mi vida? Con tal que
+        vuelvas a Dios... Mamá, me voy. ¡Qué alegría si pudiese gozar sabiendo
+        que has vuelto al Señor! Mercedes, su madre, está deshecha. Entonces,
+        ¿es por ella que sufre su pequeña? ¿Es por ella que va a morir? Temía
+        ser reprochada, pero Laura no sabe de estas cosas. Sólo sabe amar y las
         verdades que el amor sugiere son, muchas veces, más terribles y
         dolorosas que cualquier clase de reproche. ¡Laura! ¡Mi querida Laura!
         Sí, te lo prometo. Lo juro ante el Señor y ante ti ¡Dios mío!
@@ -353,8 +354,8 @@
       asumirla. Esta imagen la integra una gran variedad de otras imágenes:
       relgiosa, social, sexual, corporal, etc. En los primeros años el niño y la
       niña elaboran la imagen corporal y comienzan a gestar la aceptación de
-      ella hasta llegar a la identificación personal con la propia sexualidad. En
-      la adolescencia vuelve nuevamente el interés por la imagen del cuerpo,
+      ella hasta llegar a la identificación personal con la propia sexualidad.
+      En la adolescencia vuelve nuevamente el interés por la imagen del cuerpo,
       pero esta vez en forma consciente y relacionada con la sexualidad
       erótica-genital. Al proponerse modelos socialmente valorados nace la
       imagen ideal del cuerpo. Pero cuando su realidad difiere de esa imagen
@@ -381,8 +382,8 @@
         adolescente debe percibir como modelos de sexualdad e identificarse con
         ellos. También la sociedad actúa como condicionante de la identidad
         sexual con sus estimulaciones, alabanzas, normas y condenas de lo que
-        debe ser la masculnidad o femineidad. Entonces la adecuada identificación
-        sexual significa:
+        debe ser la masculnidad o femineidad. Entonces la adecuada
+        identificación sexual significa:
       </li>
       <li>• Percibirse y aceptarse como varón o mujer</li>
       <li>• Sentirse perteneciente a ese sexo.</li>
@@ -514,8 +515,8 @@
       asumirla. Esta imagen la integra una gran variedad de otras imágenes:
       relgiosa, social, sexual, corporal, etc. En los primeros años el niño y la
       niña elaboran la imagen corporal y comienzan a gestar la aceptación de
-      ella hasta llegar a la identificación personal con la propia sexualidad. En
-      la adolescencia vuelve nuevamente el interés por la imagen del cuerpo,
+      ella hasta llegar a la identificación personal con la propia sexualidad.
+      En la adolescencia vuelve nuevamente el interés por la imagen del cuerpo,
       pero esta vez en forma consciente y relacionada con la sexualidad
       erótica-genital. Al proponerse modelos socialmente valorados nace la
       imagen ideal del cuerpo. Pero cuando su realidad difiere de esa imagen
@@ -526,8 +527,8 @@
     <ul>
       <li>• Aceptar tener cuerpo de varón o de mujer.</li>
       <li>
-        • Aceptar el propio cuerpo así como está conformado: flaco, gordo, rubio,
-        etc.
+        • Aceptar el propio cuerpo así como está conformado: flaco, gordo,
+        rubio, etc.
       </li>
       <li>
         • Aceptar las partes íntimas del cuerpo: genitales, senos, vello, etc.
@@ -542,8 +543,8 @@
         adolescente debe percibir como modelos de sexualdad e identificarse con
         ellos. También la sociedad actúa como condicionante de la identidad
         sexual con sus estimulaciones, alabanzas, normas y condenas de lo que
-        debe ser la masculnidad o femineidad. Entonces la adecuada identificación
-        sexual significa:
+        debe ser la masculnidad o femineidad. Entonces la adecuada
+        identificación sexual significa:
       </li>
     </ul>
     <ul>
@@ -619,8 +620,8 @@
     <h3>ACTIVIDAD N°3: ADOLESCENTE UNISEX</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que los Rastreadores/Hogueras identifiquen los valores
-      y virtudes que poseen de ser hombres y mujeres respectivamente.
+      Esta actividad busca que los Rastreadores/Hogueras identifiquen los
+      valores y virtudes que poseen de ser hombres y mujeres respectivamente.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -648,8 +649,8 @@
       Luego solicitar que cada uno complete un cuadro indicando las distintas
       reacciones de un varón y de una mujer en las mismas situaciones. Enumerar
       algunas situaciones como ser ruptura de noviazgo, fracaso en examen,
-      organización de una salida, elección de novio/novia, relación de
-      amistad, elección de una prenda de
+      organización de una salida, elección de novio/novia, relación de amistad,
+      elección de una prenda de
     </p>
     <p>
       vestir, etc. Invitar a poner en común el trabajo con las siguientes
@@ -736,8 +737,8 @@
     </p>
     <p>
       mente fuerzas ciegas e instintivas. La sexualidad es una realidad
-      abarcadora (<<toca» a toda la persona; no debemos reducirla a
-      «genitalidad» como muchos hacen).
+      abarcadora («toca» a toda la persona; no debemos reducirla a «genitalidad»
+      como muchos hacen).
     </p>
     <p>
       Se constata cómo la sexualidad comporta igualmente diferencias
@@ -763,8 +764,8 @@
     <p>El cuerpo, regalo de Dios:</p>
     <p>
       La sexualidad es una fuerza que abarca todos los aspectos de la persona e
-      influye en todo lo que somos y hacemos en todos los momentos de la vida. Es
-      un regalo de Dios:
+      influye en todo lo que somos y hacemos en todos los momentos de la vida.
+      Es un regalo de Dios:
     </p>
     <p>
       Dios creó al hombre varón y mujer "a propósito". Los creó tal cual son
@@ -781,11 +782,11 @@
     <h3>- Palabra de Dios Génesis 2,18-24. Formar un sólo ser</h3>
     <p>
       <em
-        >«Luego, Dios el Señor dijo: “No es bueno que el hombre este solo. Le voy
-        a hacer alguien que sea una ayuda adecuada para él”. Y Dios, el Señor
-        formó de la tierra todos los animales y todas las aves, y se los llevó
-        al hombre para que les pusiera nombre. El hombre les puso nombre a todos
-        los animales domésticos, a todas las aves, y a todos los animales
+        >«Luego, Dios el Señor dijo: “No es bueno que el hombre este solo. Le
+        voy a hacer alguien que sea una ayuda adecuada para él”. Y Dios, el
+        Señor formó de la tierra todos los animales y todas las aves, y se los
+        llevó al hombre para que les pusiera nombre. El hombre les puso nombre a
+        todos los animales domésticos, a todas las aves, y a todos los animales
         salvajes, y ese nombre se les quedó, sin embargo, ninguno de ellos
         resultó la ayuda adecuada para él. Entonces Dios, el Señor hizo caer al
         hombre en un sueño profundo y, mientras dormía, le sacó una de las
