--- a/src/16-obediencia.html
+++ b/src/16-obediencia.html
@@ -31,8 +31,8 @@
     <h3>- Dinámica:</h3>
     <p>Es el momento propicio para esta consigna porque:</p>
     <p>
-      Los Rastreadores-Hogueras presentan dificultades a la hora de cumplir
-      consignas.
+      Los Rastreadores&ndash;Hogueras presentan dificultades a la hora de
+      cumplir consignas.
     </p>
     <p>
       Es habitual que tengan dificultades de relación con sus padres, docentes o
@@ -148,7 +148,7 @@
       dentro del Batallón, la Comunidad, nuestra familia, etc; tabién nosotros
       nos vemos sumergidos en el rol de obediencia. La coherencia y nuestro
       ejemplo siempre es fundante frente a lo queremos buscar en nuestros
-      Rastreadores-Hogueras.
+      Rastreadores&ndash;Hogueras.
     </p>
     <h2>ALGUNAS COSAS CLARAS</h2>
     <ul>
@@ -164,8 +164,8 @@
         como servicio. La búsqueda del bien común y una organizada convivencia.
         Evita injusticias y desigualdades. Señala los límtes, pero frena los
         abusos. Solamente cuando el animador ejerce una autoridad de estas
-        características, merece ser obedecido. Obediencia lograda por el
-        respeto mutuo, jamás por el miedo.
+        características, merece ser obedecido. Obediencia lograda por el respeto
+        mutuo, jamás por el miedo.
       </li>
     </ul>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
@@ -197,8 +197,8 @@
       escuela, sociedad. Está en una edad de opsición contra los padres,
       maestros, adultos y las personas mayores en general. Pero sin ebargo
       necesita identificarse con "modelos" y personas mayores creíbles y
-      confiables. Es fudamental la relación de confianza que tenga con sus padres
-      o con alguna otra persona mayor que los pueda contener, asesorar y
+      confiables. Es fudamental la relación de confianza que tenga con sus
+      padres o con alguna otra persona mayor que los pueda contener, asesorar y
       acompañar.
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
@@ -226,8 +226,8 @@
     <h3>ACTIVIDAD N° 1: SEÑORES FEUDALES</h3>
     <h3>- Orientación:</h3>
     <p>
-      La actividad busca que los Rastreadores-Hogueras vivan, mediante el juego,
-      las dificultades que presenta la dicotomía Autoridad-Obediencia.
+      La actividad busca que los Rastreadores&ndash;Hogueras vivan, mediante el
+      juego, las dificultades que presenta la dicotomía Autoridad-Obediencia.
     </p>
     <h3>- Actividad:</h3>
     <ol>
@@ -253,8 +253,7 @@
       </li>
       <li>
         <strong>6.</strong> En su interior, cada uno asume un papel de acuerdo a
-        la estructura feudal y debe interpretarlo a lo largo de toda la
-        jornada.
+        la estructura feudal y debe interpretarlo a lo largo de toda la jornada.
       </li>
       <li>
         <strong>7.</strong> Insistir que si bien se trata de una simulación, el
@@ -329,8 +328,8 @@
     </p>
     <p>
       <strong>Criado:</strong> Usted es un criado y debe transmitir a los
-      siervos las órdenes de sus señores sin discutirlas. No puede participar
-      en ninguna actividad a menos que el rey o los señores lo autoricen.
+      siervos las órdenes de sus señores sin discutirlas. No puede participar en
+      ninguna actividad a menos que el rey o los señores lo autoricen.
     </p>
     <p>
       <strong>Siervo:</strong> Usted es un siervo y debe inclinarse ante su
@@ -386,8 +385,8 @@
         mi cáliz. En cuanto a sentarse a mi derecha o a mi izquierda, no me toca
         a mí concederlo, sino que esos puestos son para quienes se los ha
         destinado mi Padre”. Al oír esto, los otros diez se indignaron contra
-        los dos hermanos. Pero Jesús los llamó y les dijo: “Ustedes saben que los
-        jefes de las naciones dominan sobre ellas y los poderosos les hacen
+        los dos hermanos. Pero Jesús los llamó y les dijo: “Ustedes saben que
+        los jefes de las naciones dominan sobre ellas y los poderosos les hacen
         sentir su autoridad. Entre ustedes no debe suceder así. Al contrario, el
         que quiera ser grande, que se haga servidor de ustedes; y el que quiera
         ser el primero que se haga su esclvo: como el Hijo del hombre, que no
@@ -398,8 +397,8 @@
     <h3>ACTIVIDAD N° 2: DIALOGO FAMILIAR</h3>
     <h3>- Orientación:</h3>
     <p>
-      La actividad busca que el Rastreador-Hoguera reflexione sobre sus propias
-      relaciones familiares y las dificultades que conlleva la
+      La actividad busca que el Rastreador&ndash;Hoguera reflexione sobre sus
+      propias relaciones familiares y las dificultades que conlleva la
       autoridad-obediencia en dicho ambiente.
     </p>
     <h3>- Actividad:</h3>
@@ -483,11 +482,11 @@
     </p>
     <h3>- Reflexión:</h3>
     <p>
-      <strong>Crisis de amor:</strong> Existe una crisis de obediencia, hay hijos
-      que les cuesta obedecer, prefieren cortarse solos y hacer la suya, sin
-      escuchar ni dejarse acompañar por sus padres. Existe también una crisis de
-      autoridad: hay padres que no saben mandar, educar, dialogar o hcerse
-      obedecer, porque a veces lo hacen autoritariamente o demasiado
+      <strong>Crisis de amor:</strong> Existe una crisis de obediencia, hay
+      hijos que les cuesta obedecer, prefieren cortarse solos y hacer la suya,
+      sin escuchar ni dejarse acompañar por sus padres. Existe también una
+      crisis de autoridad: hay padres que no saben mandar, educar, dialogar o
+      hcerse obedecer, porque a veces lo hacen autoritariamente o demasiado
       permisivamente. La atoridad mal usada y la obediencia mal hecha no son
       actos de amor. Nos encontramos con estas situaciones se producen por no
       saber expresar ese amor, porque sufrimos una crisis de amor. Para que esta
@@ -567,8 +566,8 @@
       autoridad solidaria acepta el hecho que somos educados por nuestros
       propios educandos? El explorador es corresponsable en su educación, ¿Cómo
       se relaciona esto con lo que nos dice Freire? Finalmente leemos la
-      siguiente afirmación de María Mazzarello: “Corregid, advertid siempre, pero
-      compadeced de corazón y usad caridad con todas” (C25, 2) ¿En que se
+      siguiente afirmación de María Mazzarello: “Corregid, advertid siempre,
+      pero compadeced de corazón y usad caridad con todas” (C25, 2) ¿En que se
       relaciona con el Sistema Preventivo de Don Bosco? ¿A que se refiere con
       caridad?
     </p>
