--- a/src/17-solidaridad.html
+++ b/src/17-solidaridad.html
@@ -33,7 +33,7 @@
     <h3>- Dinámica:</h3>
     <p>Es el momento propicio para esta consigna porque:</p>
     <p>
-      Los Rastreadores-Hogueras se encuentran reticientes a participar en
+      Los Rastreadores&ndash;Hogueras se encuentran reticientes a participar en
       actividades que se
     </p>
     <p>
@@ -62,8 +62,9 @@
     <p>
       En el comienzo del camino exploradoril, la “Buena Acción” representa la
       síntesis, concreta y sencilla, de la actividad solidaria. Ya en
-      Rastreadores-Hogueras el desafio debe ser de mayor madurez: “Colaborando
-      con la construcción de un mundo mejor en su comunidad”. Intentar
+      Rastreadores&ndash;Hogueras el desafio debe ser de mayor madurez:
+      “Colaborando con la construcción de un mundo mejor en su comunidad”.
+      Intentar
     </p>
     <p>
       romper con la apatía e individualismo, ser partícipe, siguiendo los
@@ -78,8 +79,8 @@
     <h3>- Dinámica:</h3>
     <p>
       Intentá hacer el ejercicio de enumerar las buenas acciones que realizaste
-      en las últimas semanas en las siguientes areas, según correspondan o no
-      a tu vida actual:
+      en las últimas semanas en las siguientes areas, según correspondan o no a
+      tu vida actual:
     </p>
     <ul>
       <li>- Familia -Pareja</li>
@@ -98,20 +99,20 @@
     <p>“Un día fue a visitar al Padre Cottolengo el Padre Juan Bosco.</p>
     <ul>
       <li>
-        -Padre Cottolengo -dijo el joven Bosco- vengo a pedirle un consejo: ¿qué
-        remedio debo recmendar a las personas que vienen a contar que están
-        aburridas de la vida, desesperadas y llenas de mal genio por la pobreza,
-        por las enfermedades o por el mal trato que les dan los demás?- Mira,
-        Bosco -respondió Cottolengo. El mal de aburrimiento y de la
-        desesperación es el mal moderno más común de todos. Para combatirlo, nos
-        ha mandado Dios un gran remedio siepre antiguo y siempre nuevo: pensar
-        en el cielo que nos espera. No olvides nunca que: un pedacito de cielo
-        lo arregla todo.” Como dijo el Padre Cottolengo, hay que pensar en un
-        cielo que nos espera. Sin embargo, avazando un poco más, el sacerdote
-        terminó su respuesta aclarando que un pedacito de cielo lo arregla todo.
-        Es importante considerar que todos tenemos un pedazito del Reino de los
-        Cielos en nosotros. Todos somos materal e instrumento de esta
-        construcción en Tierra. Es nuestra
+        &mdash;Padre Cottolengo &mdash;dijo el joven Bosco&mdash; vengo a
+        pedirle un consejo: ¿qué remedio debo recmendar a las personas que
+        vienen a contar que están aburridas de la vida, desesperadas y llenas de
+        mal genio por la pobreza, por las enfermedades o por el mal trato que
+        les dan los demás?&mdash; Mira, Bosco &mdash;respondió Cottolengo. El
+        mal de aburrimiento y de la desesperación es el mal moderno más común de
+        todos. Para combatirlo, nos ha mandado Dios un gran remedio siepre
+        antiguo y siempre nuevo: pensar en el cielo que nos espera. No olvides
+        nunca que: un pedacito de cielo lo arregla todo.” Como dijo el Padre
+        Cottolengo, hay que pensar en un cielo que nos espera. Sin embargo,
+        avazando un poco más, el sacerdote terminó su respuesta aclarando que un
+        pedacito de cielo lo arregla todo. Es importante considerar que todos
+        tenemos un pedazito del Reino de los Cielos en nosotros. Todos somos
+        materal e instrumento de esta construcción en Tierra. Es nuestra
       </li>
     </ul>
     <p>
@@ -123,14 +124,15 @@
     <p>
       <strong>La solidaridad exploradoril-salesiana:</strong> La solidaridad
       exploradoril, y por ende salesiana, supone a la vez una acción de
-      compasión ante el prójimo y una búsqueda de eficacia en el compartir con el
-      otro. Se nos propone que nos integremos en la realidad social que nos toca
-      vivir, que sepamos dar respuesta a las distintas situaciones que día a día
-      vivimos, tomando actitudes concretas ante nuestros hermanos. Respuesta y
-      actitud que no es un sentimiento de "lástima" sino un solidario ponerse en
-      los pies del que padece, amarlo como a uno mismo (que se sienta amado),
-      compartir lo que tengo (¡que puede ser tu tiempo! ¡tu escucha!); ayudarlo
-      a superarse en la situación de despojo en que se encuentra.
+      compasión ante el prójimo y una búsqueda de eficacia en el compartir con
+      el otro. Se nos propone que nos integremos en la realidad social que nos
+      toca vivir, que sepamos dar respuesta a las distintas situaciones que día
+      a día vivimos, tomando actitudes concretas ante nuestros hermanos.
+      Respuesta y actitud que no es un sentimiento de "lástima" sino un
+      solidario ponerse en los pies del que padece, amarlo como a uno mismo (que
+      se sienta amado), compartir lo que tengo (¡que puede ser tu tiempo! ¡tu
+      escucha!); ayudarlo a superarse en la situación de despojo en que se
+      encuentra.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- Santiago 2 14-18 “La fe con obras”</h3>
@@ -168,8 +170,8 @@
     <p>
       La solidaridad muchas veces se encuentra entre pares del mismo grupo de
       amigos o de refrencia (como ampliación del compañerismo), con cierta
-      aislación en los propios conflictos de este grupo y una despreocupación por
-      los demás.
+      aislación en los propios conflictos de este grupo y una despreocupación
+      por los demás.
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <ul>
@@ -260,8 +262,8 @@
       individualismo domina muchas veces nuestras acciones y esfuerzos, debemos
       por lo tanto sensibilizar nuestros corazones y renunciando a nosotros,
       llegar a los demás. Es necesario descubrir la realidad en la que vivimos
-      para que sea posible hacer algo para modficarla, debemos ser conscientes de
-      que en todos los lugares en que nos movemos existen personas que
+      para que sea posible hacer algo para modficarla, debemos ser conscientes
+      de que en todos los lugares en que nos movemos existen personas que
       necesitan de nuestra solidaridad y que siempre podemos hacer algo más por
       alguien.
     </p>
