--- a/src/18-santidad.html
+++ b/src/18-santidad.html
@@ -18,8 +18,8 @@
         <strong>58.</strong>
         <em
           >La educación exploradoril no es sólo una técnica; es una verdadera
-          pedagogía, encaminada a la creación de un tipo de hombre que aspira
-          a la perfección.</em
+          pedagogía, encaminada a la creación de un tipo de hombre que aspira a
+          la perfección.</em
         >
       </li>
       <li>
@@ -65,10 +65,10 @@
       <li>
         <strong>66. b)</strong>
         <em
-          >Por eso, el/la Explorador/a aprende a seguir el camino del sacrificio,
-          voluntario y credor, y del amor concreto al prójimo, realizado en el
-          ambiente en que le toca vivir. Ama a su Patria y promueve activamente
-          el bien común.</em
+          >Por eso, el/la Explorador/a aprende a seguir el camino del
+          sacrificio, voluntario y credor, y del amor concreto al prójimo,
+          realizado en el ambiente en que le toca vivir. Ama a su Patria y
+          promueve activamente el bien común.</em
         >
       </li>
     </ol>
@@ -85,22 +85,22 @@
       <strong>Marcá las frases que reflejan la realidad de tu grupo:</strong>
     </p>
     <p>
-      Los rastreadores-hogueras creen que ser santo implica seguir un camino de
-      vida aburrido que tiene que ver con rezar todo el día.
+      Los rastreadores&ndash;hogueras creen que ser santo implica seguir un
+      camino de vida aburrido que tiene que ver con rezar todo el día.
     </p>
     <p>
-      Los rastreadores-hogueras entienden que los santos son sus amigos y que
-      pueden confiar en ellos para que intercedan ante Dios cuando tengan alguna
-      necesidad.
+      Los rastreadores&ndash;hogueras entienden que los santos son sus amigos y
+      que pueden confiar en ellos para que intercedan ante Dios cuando tengan
+      alguna necesidad.
     </p>
     <p>
-      Los rastreadores-hogueras piensan que en esta época ya no se puede ser
-      santo, sino que eso es cosa del pasado.
+      Los rastreadores&ndash;hogueras piensan que en esta época ya no se puede
+      ser santo, sino que eso es cosa del pasado.
     </p>
     <p>
-      Los rastreadores-hogueras tienen una mirada fantasiosa sobre los santos,
-      donde los rcuerdos más fuertes tienen que ver con hechos sobrenaturales
-      que los muestran como semidioses o milagreros.
+      Los rastreadores&ndash;hogueras tienen una mirada fantasiosa sobre los
+      santos, donde los rcuerdos más fuertes tienen que ver con hechos
+      sobrenaturales que los muestran como semidioses o milagreros.
     </p>
     <h3>- Orientación:</h3>
     <p>
@@ -146,8 +146,8 @@
       <li>
         - ¿Con qué frecuencia nos confesamos, como signo de reconciliación con
         Dios para retomar fuerzas, empezar de nuevo y alcanzar los ideales que
-        nos proponemos? ¿Cómo “buenos cristianos” creemos que la
-        Reconciliación y la Eucaristía van de la mano?
+        nos proponemos? ¿Cómo “buenos cristianos” creemos que la Reconciliación
+        y la Eucaristía van de la mano?
       </li>
     </ul>
     <ul>
@@ -241,17 +241,17 @@
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <ul>
       <li>
-        - Los rastreadores-hogueras entendieron que ser santo, significa ser
-        "distinguido", "destacado" y que todos están llamados a distinguirse
+        - Los rastreadores&ndash;hogueras entendieron que ser santo, significa
+        ser "distinguido", "destacado" y que todos están llamados a distinguirse
         de la mediocridad.
       </li>
       <li>
-        - Los rastreadores-hogueras lograron descubrir en la vida de los santos
-        un ejemplo a seguir posible, atractivo, concreto, novedoso que los llama
-        a ser felices viviendo un estilo de vida que refleja a Jesús.
+        - Los rastreadores&ndash;hogueras lograron descubrir en la vida de los
+        santos un ejemplo a seguir posible, atractivo, concreto, novedoso que
+        los llama a ser felices viviendo un estilo de vida que refleja a Jesús.
       </li>
       <li>
-        - Los rastreadores-hogueras comenzaron a aceptar que los propios
+        - Los rastreadores&ndash;hogueras comenzaron a aceptar que los propios
         defectos y fragilidades no
       </li>
     </ul>
@@ -261,9 +261,9 @@
     </p>
     <ul>
       <li>
-        - Los rastreadores-hogueras empezaron a desear alcanzar la santidad
-        desde el lugar en el que cada uno vive, superando la tentación de la
-        comodidad, la mediocridad y el individualismo.
+        - Los rastreadores&ndash;hogueras empezaron a desear alcanzar la
+        santidad desde el lugar en el que cada uno vive, superando la tentación
+        de la comodidad, la mediocridad y el individualismo.
       </li>
     </ul>
     <h2>ACTIVIDADES</h2>
@@ -416,10 +416,10 @@
     <h3>ACTIVIDAD N° 2- OFICIOS Y TAREAS</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende ubicar a los rastreadores-hogueras en la situación
-      de construir su satidad de manera cotidiana, para ello busca que a través
-      de actividades y representaciones sobre su futuro puedan reflexionar acerca
-      de cómo se desempeñan.
+      La actividad pretende ubicar a los rastreadores&ndash;hogueras en la
+      situación de construir su satidad de manera cotidiana, para ello busca que
+      a través de actividades y representaciones sobre su futuro puedan
+      reflexionar acerca de cómo se desempeñan.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -433,7 +433,8 @@
       ¿Qué pensaban de las que hacían los otros? Leer el texto completo de "Los
       santos del siglo XXI" y relacionar los oficios de cada uno con las
       actividades realizadas. Buscar también anécdotas de cada uno o ejemplos de
-      personas conocidas en relación a los oficios de los otros santos del texto.
+      personas conocidas en relación a los oficios de los otros santos del
+      texto.
     </p>
     <p>
       <strong>Los santos del siglo XXI</strong> Breves reseñas de vidas de
@@ -441,9 +442,9 @@
     </p>
     <p>
       <strong>San «Taquito» López:</strong> Jugador de futbol. Su vida está
-      llena de milagros. El mejor de todos fue el gol que metió en una final, gol
-      recordado como el milagro del siglo. Pero lo más milagroso de todo fue la
-      recidumbre con que jugaba sin descontroles y la honestidad con que
+      llena de milagros. El mejor de todos fue el gol que metió en una final,
+      gol recordado como el milagro del siglo. Pero lo más milagroso de todo fue
+      la recidumbre con que jugaba sin descontroles y la honestidad con que
       aceptaba las sanciones del árbitro, y que pedía disculpas cuando le
       pateaba los tobillos a los rivales.
     </p>
@@ -504,12 +505,12 @@
         deje de robar y se ponga a trabajar honestamente con sus manos, para
         poder ayudar al que está necesitado. No profieran palabras
         inconvenientes; al contrario, que sus palabras sean siempre buenas, para
-        que resulten edificantes cuando sea necesario y hagan bien a aquellos que
-        las escuchan. No entristezcan al Espíritu Santo de Dios, que los ha
+        que resulten edificantes cuando sea necesario y hagan bien a aquellos
+        que las escuchan. No entristezcan al Espíritu Santo de Dios, que los ha
         marcado con un sello para el día de la redención. Eviten la amargura,
         los arrebatos, la ira, los gritos, los insultos y toda clase de maldad.
-        Por el contrario, sean mutuamente buenos y compasivos, perdonándose
-        los unos a los otros como Dios los ha perdonado en Cristo.»</em
+        Por el contrario, sean mutuamente buenos y compasivos, perdonándose los
+        unos a los otros como Dios los ha perdonado en Cristo.»</em
       >
     </p>
     <p>
@@ -606,8 +607,8 @@
       Jesús las virtudes que lo ayuden a mejorar en este camino. Al terminar de
       escribir dejan el papel en el medio de la ronda al pie de la cruz. Cuando
       todos terminan, cada uno toma un papel del centro de la ronda (que no sea
-      el suyo) y lee la oración en voz alta. De esta manera llegamos al final del
-      encuentro rezando los unos por los otros. Cerramos con la oración del
+      el suyo) y lee la oración en voz alta. De esta manera llegamos al final
+      del encuentro rezando los unos por los otros. Cerramos con la oración del
       explorador o cantando la canción “El ideal”
     </p>
     <p>
