--- a/src/19-testimonio.html
+++ b/src/19-testimonio.html
@@ -36,8 +36,8 @@
       <li>
         <em
           >33 No se hace sólo con las palabras, sino sobre todo con el
-          testimonio y el ejemplo de la vida que se manifiesta en la aceptación y
-          respeto del otro, tanto de parte de los Jefes/as como de los
+          testimonio y el ejemplo de la vida que se manifiesta en la aceptación
+          y respeto del otro, tanto de parte de los Jefes/as como de los
           Exploradores/ras entre sí.</em
         >
       </li>
@@ -114,8 +114,8 @@
       </li>
       <li>
         - ¿Son capaces de mantenerse en lo que creen, a pesar que no le sean
-        favorables las consecuencias?- ¿Qué ídolos tienen nuestros/as
-        chicos/as? ¿Qué valores y antivalores imitan de ellos?
+        favorables las consecuencias?- ¿Qué ídolos tienen nuestros/as chicos/as?
+        ¿Qué valores y antivalores imitan de ellos?
       </li>
       <li>
         - Cuando tenías su edad, ¿quiénes eran tus ídolos? (bandas de música,
@@ -151,8 +151,8 @@
         pero después lo comprenderás”. “No, le dijo Pedro, ¡tú jamás me lavarás
         los pies a mí!”. Jesús le respondió: “Si yo no te lavo, no podrás
         compartir mi suerte”. (…) Después de haberles lavado los pies, se puso
-        el manto, volvió a la mesa y les dijo: “¿comprenden lo que acabo de hacer
-        con ustedes? Ustedes me llaman Maestro y Señor, y tienen razón,
+        el manto, volvió a la mesa y les dijo: “¿comprenden lo que acabo de
+        hacer con ustedes? Ustedes me llaman Maestro y Señor, y tienen razón,
         porque</em
       >
     </p>
@@ -432,8 +432,8 @@
       el Emanuel, que significa “Dios con nosotros”. Jesús quiere cambiar las
       realidades que nos duelen “con nosotros”. Esta actividad invita a los
       Rastreadores / Hogueras a saberse trabajadores del Reino de Dios que se
-      construye con el trabajo cotidiano, que como la levadura crece en
-      silencio sin que nadie lo perciba.
+      construye con el trabajo cotidiano, que como la levadura crece en silencio
+      sin que nadie lo perciba.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -465,9 +465,9 @@
       a nuestras comunidades, la masa se eleva y crece en silencio; sino lo
       hacemos, queda igual. Diariamente contribuimos a construir una vida mejor
       en nuestras comunidades (casa, escula, etc.) con nuestro pequeño esfuerzo
-      de todos los días, con actitudes de servicio que manfiestan el Amor de Dios
-      corriendo por nuestras venas. Somos instrumentos de Dios al servicio de
-      los demás. Diariamente amasamos el Reino de Dios en nuestro corazón,
+      de todos los días, con actitudes de servicio que manfiestan el Amor de
+      Dios corriendo por nuestras venas. Somos instrumentos de Dios al servicio
+      de los demás. Diariamente amasamos el Reino de Dios en nuestro corazón,
       “construyendo” con el Amor de Jesús un mundo mejor. Nosotros ponemos
       nuestra predisposición y nos hacmos cargo de que nuestras comunidades
       crezcan en el Amor generoso que Jesús nos invita a vivir, porque el
@@ -678,10 +678,10 @@
       testimonio y comentarlo entre todos.
     </p>
     <p>
-      Que cada uno elija la frase de Angelelli que más le haya llegado y la ponga
-      en común como oración comunitaria. Si se hizo la cartelera, seleccionar
-      alguna de las frases y escribirla en ella. Terminar cantando "Hay que
-      seguir andando"
+      Que cada uno elija la frase de Angelelli que más le haya llegado y la
+      ponga en común como oración comunitaria. Si se hizo la cartelera,
+      seleccionar alguna de las frases y escribirla en ella. Terminar cantando
+      "Hay que seguir andando"
     </p>
     <h3>- Se reza y se celebra:</h3>
     <p>
@@ -748,8 +748,8 @@
       empezó a formar una Iglesia consciente de esto, luchadora de los derechos
       humanos. No se contentó con anunciar el Evangelio, sino también se dedicó
       a denunciar la injusticia: la denuncia social la proclamó constitutiva del
-      seguimiento de Jesucristo, de la Iglesia de Jesucristo. Quería una
-      Iglesia libre, servidora y pobre.
+      seguimiento de Jesucristo, de la Iglesia de Jesucristo. Quería una Iglesia
+      libre, servidora y pobre.
     </p>
     <p>Era consciente de que estaba sentenciado, no solo amenazado:</p>
     <p>
