--- a/src/20-corresponsabilidad.html
+++ b/src/20-corresponsabilidad.html
@@ -40,7 +40,8 @@
     <h3>- Dinámica:</h3>
     <p>Es el momento propicio para esta consigna porque:</p>
     <p>
-      Los Rastreadores-Hogueras tienen muchas dificultades al trabajar en equipo
+      Los Rastreadores&ndash;Hogueras tienen muchas dificultades al trabajar en
+      equipo
     </p>
     <p>
       Se dejan de lado entre ellos o a otro miembro de la comunidad,
@@ -109,7 +110,7 @@
         “Trabajo” en la adolescencia pude estar orientada al “estudio”. La
         participación activa en la escuela es responsabilidad del adolescente.
         Así como existe el trabajo digno, el estudio debe ser formado en su
-        dignidad por el mismo Rastreador-Hoguera.
+        dignidad por el mismo Rastreador&ndash;Hoguera.
       </li>
     </ul>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
@@ -131,12 +132,12 @@
         las cuentas con sus servidores. El que había recibido los cinco talentos
         se adelantó y le presentó otros cinco. "Señor, le dijo, me has confiado
         cinco talentos: aquí están los otros cinco que he ganado". "Está bien,
-        servidor bueno y fiel, le dijo su señor, ya que respondiste fielmente en lo
-        poco, te encargaré de mucho más: entra a participar del gozo de tu
-        señor". Llegó luego el que había recibido dos talentos y le dijo: "Señor,
-        me has confiado dos talentos: aquí están los otros dos que he ganado".
-        "Está bien, servidor bueno y fiel, ya que respondiste fielmente en lo
-        poco, te encargaré de mucho más: entra a participar del gozo de tu
+        servidor bueno y fiel, le dijo su señor, ya que respondiste fielmente en
+        lo poco, te encargaré de mucho más: entra a participar del gozo de tu
+        señor". Llegó luego el que había recibido dos talentos y le dijo:
+        "Señor, me has confiado dos talentos: aquí están los otros dos que he
+        ganado". "Está bien, servidor bueno y fiel, ya que respondiste fielmente
+        en lo poco, te encargaré de mucho más: entra a participar del gozo de tu
         señor". Llegó luego el que había recibido un solo talento. "Señor, le
         dijo, sé que eres un hombre exigente: cosechas donde no has sembrado y
         recoges donde no has esparcido. Por eso tuve miedo y fui a enterrar tu
@@ -157,10 +158,10 @@
       siendo corresponsables con el otro, no buscamos la supración de nuestra
       comunidad hacia un bien común. El Explorador “se siente corresponsable”:
       en su familia, en su escuela, en su trabajo y en su Comunidad. ¿Estoy
-      dando lo mejor de mí frente a mi grupo de Rastreadores-Hogueras? ¿Soy
-      responsable para y con ellos? Finalmente: ¿los ayudo a que descubran sus
-      propios dones? Cada uno debe ser protagonista de su propia historia, no
-      protagonista de los demás. Que cada uno de los chicos desarrolle sus
+      dando lo mejor de mí frente a mi grupo de Rastreadores&ndash;Hogueras?
+      ¿Soy responsable para y con ellos? Finalmente: ¿los ayudo a que descubran
+      sus propios dones? Cada uno debe ser protagonista de su propia historia,
+      no protagonista de los demás. Que cada uno de los chicos desarrolle sus
       diversas cualidades que les den el buen lugar que merecen en su propia
       vida.
     </p>
@@ -317,8 +318,8 @@
     <h3>ACTIVIDAD N° 2: CONSTRUCCIÓN CONJUNTA</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que los Rastreadores-Hogueras se den cuenta de la
-      importancia que tiene la corresponsabilidad para el saludable
+      Esta actividad busca que los Rastreadores&ndash;Hogueras se den cuenta de
+      la importancia que tiene la corresponsabilidad para el saludable
       funcionamiento del grupo
     </p>
     <h3>- Actividad:</h3>
@@ -392,10 +393,10 @@
       de largo o esconderse son respuestas equivocadas. La coherencia personal
       en las pqueñas cosas de cada día es la que nos hace ser personas integras,
       libres y realizadas. Vivir una vida así es toda una responsabilidad, un
-      verdadero compromiso que pide creatividad, reflexión, constancia. El camino
-      a transformación de la realidad y una auténtica liberación y promoción
-      humana. Las relaciones dentro del grupo se fortalecen con la actitud de
-      servicio responsable de cada uno con los demás.
+      verdadero compromiso que pide creatividad, reflexión, constancia. El
+      camino a transformación de la realidad y una auténtica liberación y
+      promoción humana. Las relaciones dentro del grupo se fortalecen con la
+      actitud de servicio responsable de cada uno con los demás.
     </p>
     <h3>Palabra de Dios: El cuerpo y los miembros (1 Corintios 12, 12-27)</h3>
     <h3>ACTIVIDAD N° 3: TEATRO DE SOMBRAS</h3>
@@ -463,8 +464,9 @@
       familia campesina de mejor posición, que trabajaban de sol a sollabrando
       sus tierras, viñedos y campos y cuidando bueyes y vacas. El trabajo de
       Juan, mozo de cuadra, no tenía nada de humillante ni de excepcional. Por
-      las granjas de los alrededores, a fines de marzo, habría decenas de "mozos"
-      como él. Era el camino normal para los muchachos de las familias pobres.
+      las granjas de los alrededores, a fines de marzo, habría decenas de
+      "mozos" como él. Era el camino normal para los muchachos de las familias
+      pobres.
     </p>
     <p>
       <strong><em>Modista y mucho más:</em></strong> Una idea brilla en la mente
@@ -472,8 +474,8 @@
       intento de encontrar nuevo sistema de vida. Invita a su amiga Petronila,
       invitándola a asociarse a ella ''Apenas estemos en condiciones de trabajar
       por nuestra cuenta abriremos un pequeño taller para las niñas del pueblo y
-      les enseñaremos a coser. La finalidad principal será enseñarles a conocer y
-      amaral Señor, hacerlas buenas y librarlas de los peligros, pero desde
+      les enseñaremos a coser. La finalidad principal será enseñarles a conocer
+      y amaral Señor, hacerlas buenas y librarlas de los peligros, pero desde
       ahora pongamos la intención de que cada puntada sea un acto de amor a
       Dios".
     </p>
@@ -642,8 +644,8 @@
       <em
         >Los verdeos son indispensables. Mantienen la vida, la aceleran, apuran
         su término. Su sentdo está en lo inmediato. Su término es simplemente su
-        fin. Se agota su sentido en el presente que lo realiza. Y su final será el
-        haber sido útil a la vida.</em
+        fin. Se agota su sentido en el presente que lo realiza. Y su final será
+        el haber sido útil a la vida.</em
       >
     </p>
     <p>
