--- a/src/21-naturaleza.html
+++ b/src/21-naturaleza.html
@@ -151,8 +151,8 @@
         horizonte sobre el océano, cuando condensaba las nubes en lo alto,
         cuando infundía poder a las fuentes del océano, cuando fijaba su límite
         al mar para que las aguas no transgredieran sus bordes, cuando afirmaba
-        los cimientos de la tierra, yo estaba a su lado como un hijo querido y lo
-        deleitaba día tras día, recreándome delante de él en todo tiempo,
+        los cimientos de la tierra, yo estaba a su lado como un hijo querido y
+        lo deleitaba día tras día, recreándome delante de él en todo tiempo,
         recreándome sobre la faz de la tierra, y mi delicia era estar con los
         hijos de los hombres. Y ahora, hijos, escúchenme: ¡felices los que
         observan mis caminos!»</em
@@ -186,7 +186,7 @@
       del tiempo como algunos de los momentos más alegres de sus vidas.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
-    <p>Que los rastreadores-hogueras puedan:</p>
+    <p>Que los rastreadores&ndash;hogueras puedan:</p>
     <ul>
       <li>
         - Descubrir en la naturaleza la presencia de Dios y el espacio necesario
@@ -272,13 +272,13 @@
     </p>
     <p>
       El hombre se pregunta por Dios y lo busca en su vida. El que grita con
-      tono desafiante: "¿Dóde está Dios? iQue me muestre su existencia!". Ese, no
-      encontrará a Dios. El que desee encontrar a Dios, debe buscarlo.
+      tono desafiante: "¿Dóde está Dios? iQue me muestre su existencia!". Ese,
+      no encontrará a Dios. El que desee encontrar a Dios, debe buscarlo.
     </p>
     <p>
       Esto presupone, en primer lugar, estar atento; y no puede estarlo el que
-      vive superficialmete y envuelto en ruidos. Es preciso saber hacer silencio.
-      Por otra parte, es necesario saber escuchar y tener paciencia.
+      vive superficialmete y envuelto en ruidos. Es preciso saber hacer
+      silencio. Por otra parte, es necesario saber escuchar y tener paciencia.
     </p>
     <p>
       Además, el que quiera encontrar a Dios, tiene que ajustarse a sus
@@ -292,8 +292,8 @@
     <p>
       Pero una cosa es cierta también aquí: muchos hombres que no creían en la
       realidad de Dios, más tarde confesaron "Yo he encontrado a Dios". Esto
-      debe animarnos a todos. Porque sabemos que Dios existe y está presente
-      en medio nuestro.
+      debe animarnos a todos. Porque sabemos que Dios existe y está presente en
+      medio nuestro.
     </p>
     <p>
       Al comprender la naturaleza podemos llegar más a las personas. Desde su
@@ -353,12 +353,13 @@
     <p>
       <strong>Las plantas:</strong> Es impresionante la variedad de formas,
       colores, perfumes, texturas, tamaños. En ellas se puede ver también la
-      variedad de formas en las que Dios actúa en medio nuestro: desde la firmeza
-      de los troncos hasta la ternura de una flor. Las plantas nos hablan de
-      paciecia, constancia, esperanza y proyectos a largo plazo. Brindan
-      generosamente sus flores y frtos que han producido con su trabajo y que
-      encierran la vida nueva que promete la semilla. Corre por dentro suyo
-      una sabia que comunica, alimenta y da fuerzas, como un Espíritu de vida.
+      variedad de formas en las que Dios actúa en medio nuestro: desde la
+      firmeza de los troncos hasta la ternura de una flor. Las plantas nos
+      hablan de paciecia, constancia, esperanza y proyectos a largo plazo.
+      Brindan generosamente sus flores y frtos que han producido con su trabajo
+      y que encierran la vida nueva que promete la semilla. Corre por dentro
+      suyo una sabia que comunica, alimenta y da fuerzas, como un Espíritu de
+      vida.
     </p>
     <p>
       Los exploradores nos caracterizamos por hacer de la naturaleza un espacio
@@ -472,8 +473,8 @@
         ti que les des la comida a su tiempo: se la das, y ellos la recogen;
         abres tu mano, y quedan saciados. Si escondes tu rostro, se espantan; si
         les quitas el aliento, expiran y vuelven al polvo. Si envías tu aliento,
-        son creados, y renuevas la superficie de la tierra. ¡Gloria al Señor para
-        siempre, alégrese el Señor por sus obras! El mira, y la tierra se
+        son creados, y renuevas la superficie de la tierra. ¡Gloria al Señor
+        para siempre, alégrese el Señor por sus obras! El mira, y la tierra se
         estremece; toca las montañas, y echan humo. Cantaré al Señor toda mi
         vida; mientras yo exista, celebraré a mi Dios: que mi canto le sea
         agradable, y yo me alegraré en el Señor. Que los pecadores desaparezcan
@@ -509,8 +510,8 @@
     <p>
       Son actividades varias que se mencionan como sugerencia y que dependen de
       los elementos de la naturaleza del lugar de campamento. A cada uno de
-      ellos se le pueden buscar simbolismos, comparaciones y un sentido para
-      el grupo.
+      ellos se le pueden buscar simbolismos, comparaciones y un sentido para el
+      grupo.
     </p>
     <p>
       Mientras se va caminando, mientras se contempla un amanecer o el atardecer
@@ -553,9 +554,9 @@
       Como relatos alternativos pueden recuperarse hechos trascendentes que
       tuvieron que ver con reclamos populares (la asamblea ambiental de
       Gualeguaychú –Entre Ríos- y su reclamo contra las papeleras desde el 2003,
-      los reclamos del pueblo de Famatina –la Rioja- contra la megaminería
-      desde el 2004, la historia de Chico Méndez como defensor de la selva
-      amazónica, etc.)
+      los reclamos del pueblo de Famatina –la Rioja- contra la megaminería desde
+      el 2004, la historia de Chico Méndez como defensor de la selva amazónica,
+      etc.)
     </p>
     <p>
       Imaginarse las caminatas del santo por la selva y compararlas con el
@@ -580,9 +581,9 @@
       Antes de terminar el campamento o una salida al aire libre, reunirse y
       leer el cuento "El antgénesis":La tierra era bella y fértil, la luz
       brillaba en las montañas y en los mares y el espíritu de Dios llenaba el
-      universo. Y el hombre dijo: "Que posea yo lodo el poder en el cielo y en la
-      tierra." Y vió que el poder era bueno. Y puso el nombre de “jefes” a los
-      que tenían el poder y llamó “desgraciados” a los que buscaban la
+      universo. Y el hombre dijo: "Que posea yo lodo el poder en el cielo y en
+      la tierra." Y vió que el poder era bueno. Y puso el nombre de “jefes” a
+      los que tenían el poder y llamó “desgraciados” a los que buscaban la
       reconciliación. Y así fue el sexto día antes del fin.
     </p>
     <p>
@@ -620,8 +621,8 @@
     <p>
       El hombre dijo: "Hagamos a Dios a nuestra imagen y semejanza, que actúe
       como actuamos nosotros, que mate como matamos nosotros". El hombre creó un
-      dios a medida, y lo bendijo diciendo: "Muéstrate a nosotros y pon la tierra
-      a nuestros pies: No te faltará nada si haces siempre nuestra propia
+      dios a medida, y lo bendijo diciendo: "Muéstrate a nosotros y pon la
+      tierra a nuestros pies: No te faltará nada si haces siempre nuestra propia
       voluntad". Y así fue. El hombre vió que todo lo que había hecho y estaba
       muy satisfecho de ello. Así fue el día antes del fin.
     </p>
@@ -698,8 +699,8 @@
     </p>
     <p>
       Mi amor por vos es más profundo que los océanos y más grande que cualquier
-      pena o necesidad que tenga tu corazón. Si tan solo me buscaras tu carga
-      se aliviaría.
+      pena o necesidad que tenga tu corazón. Si tan solo me buscaras tu carga se
+      aliviaría.
     </p>
     <p>
       Yo ya sé lo dura que es la vida acá, por eso quiero que ayudarte y quiero
