--- a/src/22-vida.html
+++ b/src/22-vida.html
@@ -56,17 +56,17 @@
     </p>
     <p>Elegiste esta consigna porque…</p>
     <p>
-      Los rastreadores-hogueras suelen atravesar crisis de sentido donde se
-      cuestionan el porqué de su propia vida.
+      Los rastreadores&ndash;hogueras suelen atravesar crisis de sentido donde
+      se cuestionan el porqué de su propia vida.
     </p>
     <p>
-      Los rastreadores-hogueras no suelen tener una mirada agradecida ante todas
-      las cosas buenas que suceden en su propia vida, ni de los esfuerzos que
-      los demás hacen por ellos.
+      Los rastreadores&ndash;hogueras no suelen tener una mirada agradecida ante
+      todas las cosas buenas que suceden en su propia vida, ni de los esfuerzos
+      que los demás hacen por ellos.
     </p>
     <p>
-      Los rastreadores-hogueras suelen estar expuestos a mensajes de tristeza y
-      muerte que
+      Los rastreadores&ndash;hogueras suelen estar expuestos a mensajes de
+      tristeza y muerte que
     </p>
     <p>
       van en contra del estilo de vida cristiano y exploradoril que eligieron en
@@ -77,23 +77,23 @@
       La propia inercia de las obligaciones cotidianas sumada a la crisis de la
       adolescencia suele adormecer el sentido de búsqueda y el desafío de ser
       felices que todos llevamos dentro. Tener autoconciencia del don de la
-      propia vida es fundamental para que los rastreadores-hogueras continúen su
-      formación como exploradores que se encaminan a ser futuros animadores y,
-      por lo tanto, prepararse para tener en sus manos la responsabilidad y el
-      cuidado de muchas vidas. Al mirar a sus hogares, es un buen momento para
-      ver con agradecimiento los esfuerzos que los adultos hicieron por ellos a
-      lo largo de su crecimiento y poder dimensionar el regalo que Dios nos ha
-      hecho a través de ellos. Es un momento de agradecimiento pero también un
-      tiepo para asumir el compromiso con el cuidado de la propia vida y la vida
-      de los demás, ante los riesgos que existen. Será muy importante trabajar
-      fuertemente sobre las adicciones, los tratornos alimenticios y el cuidado
-      del cuerpo, en la medida de los posible se sugiere convocar a
-      profesionales (médicos, psicólogos, acompañantes terapéuticos, etc.) que
-      conozcan sobre la temática y sus consecuencias, para poder sacarles dudas
-      a los chicos y así intercambiar palbras con gente que hable desde su
-      experiencia en este tema. Ya no se trata de ser preventivos, sino de
-      reconocer que las drogas entran en todos lados y nuestros patios no son
-      ajenos a eso.
+      propia vida es fundamental para que los rastreadores&ndash;hogueras
+      continúen su formación como exploradores que se encaminan a ser futuros
+      animadores y, por lo tanto, prepararse para tener en sus manos la
+      responsabilidad y el cuidado de muchas vidas. Al mirar a sus hogares, es
+      un buen momento para ver con agradecimiento los esfuerzos que los adultos
+      hicieron por ellos a lo largo de su crecimiento y poder dimensionar el
+      regalo que Dios nos ha hecho a través de ellos. Es un momento de
+      agradecimiento pero también un tiepo para asumir el compromiso con el
+      cuidado de la propia vida y la vida de los demás, ante los riesgos que
+      existen. Será muy importante trabajar fuertemente sobre las adicciones,
+      los tratornos alimenticios y el cuidado del cuerpo, en la medida de los
+      posible se sugiere convocar a profesionales (médicos, psicólogos,
+      acompañantes terapéuticos, etc.) que conozcan sobre la temática y sus
+      consecuencias, para poder sacarles dudas a los chicos y así intercambiar
+      palbras con gente que hable desde su experiencia en este tema. Ya no se
+      trata de ser preventivos, sino de reconocer que las drogas entran en todos
+      lados y nuestros patios no son ajenos a eso.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos que te pasa con este tema?”</p>
@@ -136,11 +136,11 @@
         serán consolados. Felices los que tienen hambre y sed de justicia,
         porque serán saciados. Felices los misericordiosos, porque obtendrán
         misericordia. Felices los que tienen el corazón puro, porque verán a
-        Dios. Felices los que trabajan por la paz, porque serán llamados hijos de
-        Dios. Felices los que son perseguidos por practicar la justicia, porque
-        a ellos les pertenece el Reino de los Cielos. Felices ustedes, cuando
-        sean insultados y perseguidos, y cuando se los calumnie en toda forma a
-        causa de mí.</em
+        Dios. Felices los que trabajan por la paz, porque serán llamados hijos
+        de Dios. Felices los que son perseguidos por practicar la justicia,
+        porque a ellos les pertenece el Reino de los Cielos. Felices ustedes,
+        cuando sean insultados y perseguidos, y cuando se los calumnie en toda
+        forma a causa de mí.</em
       >
     </p>
     <p>
@@ -168,13 +168,13 @@
     </p>
     <h2>ENTENDIÉNDOLOS</h2>
     <p>
-      En esta edad los rastreadores-hogueras se encuentran constantemente en
-      medio de situciones donde se ven y se experimentan muchos hechos de muerte
-      u ofertas seductoras que los invitan a consumir cosas para recibir una
-      identidad o sentir pertenencia a un grupo social. (ej. fumo porque me hace
-      más grande, tomo alcohol porque me ayuda a encarar cuando salgo a bailar,
-      tomo droga porque mis amigos lo hacen y me hace olvidar de las cosas malas
-      que
+      En esta edad los rastreadores&ndash;hogueras se encuentran constantemente
+      en medio de situciones donde se ven y se experimentan muchos hechos de
+      muerte u ofertas seductoras que los invitan a consumir cosas para recibir
+      una identidad o sentir pertenencia a un grupo social. (ej. fumo porque me
+      hace más grande, tomo alcohol porque me ayuda a encarar cuando salgo a
+      bailar, tomo droga porque mis amigos lo hacen y me hace olvidar de las
+      cosas malas que
     </p>
     <p>
       me pasan). La sociedad demanda “tener” para “ser” (tener la mejor marca de
@@ -185,8 +185,8 @@
     </p>
     <p>
       Ante las propuestas de muerte que aparecen a su alrededor es común la
-      negación, la evasión, el darle poca importancia y no reconocer los
-      riesgos que traen aparejados.
+      negación, la evasión, el darle poca importancia y no reconocer los riesgos
+      que traen aparejados.
     </p>
     <p>
       Al mismo tiempo suelen alternar momentos de alegría eufórica y tristeza,
@@ -194,12 +194,12 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
-      Los rastreadores-hogueras lograron valorar la vida propia y la de los
-      demás, entendiéndola como lo más grande que Dios les regaló.
+      Los rastreadores&ndash;hogueras lograron valorar la vida propia y la de
+      los demás, entendiéndola como lo más grande que Dios les regaló.
     </p>
     <p>
-      Los rastreadores-hogueras adoptaron la capacidad de distinguir entre los
-      hechos de vida y muerte que aparecen en su realidad cotidiana.
+      Los rastreadores&ndash;hogueras adoptaron la capacidad de distinguir entre
+      los hechos de vida y muerte que aparecen en su realidad cotidiana.
     </p>
     <h2>ACTIVIDADES</h2>
     <ol>
@@ -213,8 +213,8 @@
       problemas que mchas veces los adolescentes ocultan porque les generan
       dolor. Estos problemas son los motvos que buscan una salida en las
       adicciones. Adicción significa no hablar. Por eso el ejercicio de poner en
-      palabras las situaciones conflictivas para esta edad resulta algo sumamente
-      sanador y necesario.
+      palabras las situaciones conflictivas para esta edad resulta algo
+      sumamente sanador y necesario.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -351,9 +351,9 @@
     </p>
     <p>
       la adicción tiene mucho de no poder expresarse, comunicarse, ni compartir
-      con los demás. La misma palabra “adicción” significa que existe algo que no
-      se dice. Quien tiene buenos amigos, una buena relación con su familia y un
-      diálogo fluido y sincero, difícilmente necesite buscar "protección" o
+      con los demás. La misma palabra “adicción” significa que existe algo que
+      no se dice. Quien tiene buenos amigos, una buena relación con su familia y
+      un diálogo fluido y sincero, difícilmente necesite buscar "protección" o
       "contención" en estas "drogas".
     </p>
     <p>
@@ -463,12 +463,12 @@
       que cada uno pueda pensar en los Jesuses que cotidianamente atraviesan
       estas situaciones de muerte que fueron viendo.«Al mediodía, se oscureció
       toda la tierra hasta las tres de la tarde; y a esa hora, Jesús exclmó en
-      alta voz: “Eloi, Eloi, lamá sabactani”, que significa: “Dios mío, Dios mío,
-      ¿por qué me has abandonado?”.
+      alta voz: “Eloi, Eloi, lamá sabactani”, que significa: “Dios mío, Dios
+      mío, ¿por qué me has abandonado?”.
     </p>
     <p>
-      Algunos de los que se encontraban allí, al oírlo, dijeron: “Está llamando a
-      Elías”.
+      Algunos de los que se encontraban allí, al oírlo, dijeron: “Está llamando
+      a Elías”.
     </p>
     <p>
       Uno corrió a mojar una esponja en vinagre y, poniéndola en la punta de una
@@ -524,13 +524,13 @@
       has llevado, dime dónde lo has puesto y yo iré a buscarlo”.
     </p>
     <p>
-      Jesús le dijo: “¡María!”. Ella lo reconoció y le dijo en hebreo: “¡Raboní!”,
-      es decir “¡Maestro!”.
+      Jesús le dijo: “¡María!”. Ella lo reconoció y le dijo en hebreo:
+      “¡Raboní!”, es decir “¡Maestro!”.
     </p>
     <p>
       Jesús le dijo: “No me retengas, porque todavía no he subido al Padre. Ve a
-      decir a mis hermanos: ´Subo a mi Padre, el Padre de ustedes; a mi Dios,
-      el Dios de ustedes´”.
+      decir a mis hermanos: ´Subo a mi Padre, el Padre de ustedes; a mi Dios, el
+      Dios de ustedes´”.
     </p>
     <p>
       María Magdalena fue a anunciar a los discípulos que había visto al Señor y
@@ -539,8 +539,8 @@
     <p>
       Al atardecer de ese mismo día, el primero de la semana, estando cerradas
       las puertas del lugar donde se encontraban los discípulos, por temor a los
-      judíos, llegó Jesús y poniéndose en medio de ellos, les dijo: “¡La paz esté
-      con ustedes!”.
+      judíos, llegó Jesús y poniéndose en medio de ellos, les dijo: “¡La paz
+      esté con ustedes!”.
     </p>
     <p>
       Mientras decía esto, les mostró sus manos y su costado. Los discípulos se
@@ -574,10 +574,10 @@
     <p>
       La resurrección de Jesús es el punto central de nuestra Fe y motivo
       principal de la alegría. ¿Qué mayor felicidad que tener una vida más
-      fuerte que la muerte? Y la fiesta de la resurreción empieza ya acá, en esta
-      tierra. En Jesús, nosotros también tenemos que "resucitar" los signos de
-      muerte en nuestra vida terrenal y comenzar a celebrar aquí esa felicidad
-      que se hará plena en la Vida eterna.
+      fuerte que la muerte? Y la fiesta de la resurreción empieza ya acá, en
+      esta tierra. En Jesús, nosotros también tenemos que "resucitar" los signos
+      de muerte en nuestra vida terrenal y comenzar a celebrar aquí esa
+      felicidad que se hará plena en la Vida eterna.
     </p>
     <p>
       Si solo anunciamos la cruz sin la resurrección, acabaremos por magnificar
@@ -613,8 +613,8 @@
       notamos en que esas solidaridades se entrelazan, en que cuando encuentran
       límites y frenos vuelven a surgir de manera distintas; lo notamos en que
       podemos unirnos para celebrar y expresar alegrías profundas; lo notamos en
-      que a la sangre de nuestros mártires la sentirnos viva dentro de
-      nosotros, nos emociona y nos da fuerza para seguir adelante.
+      que a la sangre de nuestros mártires la sentirnos viva dentro de nosotros,
+      nos emociona y nos da fuerza para seguir adelante.
     </p>
     <p>
       La vida siempre renace. Tenemos esperanza y seguridad de una vida que
@@ -626,10 +626,10 @@
       hechos de muerte. Es propio de un Jesús
     </p>
     <p>
-      Resucitado el que la vida no quede encerrada y ahogada indefinidamente y el
-      que siempre pueda haber soluciones nuevas. El triunfo de la vida sobre la
-      muerte, se manifiesta en el crazón de nuestra vida grupal. La búsqueda de
-      unidad, diálogo, el ir creciendo en confianza y amistad en el grupo son
+      Resucitado el que la vida no quede encerrada y ahogada indefinidamente y
+      el que siempre pueda haber soluciones nuevas. El triunfo de la vida sobre
+      la muerte, se manifiesta en el crazón de nuestra vida grupal. La búsqueda
+      de unidad, diálogo, el ir creciendo en confianza y amistad en el grupo son
       signos de vida frente a los problemas que tenemos. También creemos en la
       fuerza de la vida que se manifiesta en la posibilidad de alternativas
       sociales, políticas y económicas. Sentimos como una mentira cuando se nos
@@ -712,12 +712,12 @@
     <h3>- Se comparte:</h3>
     <p>
       Cada uno va poniendo en común algo por lo que quiere dar gracias de su
-      vida, pasa al centro de la ronda y quita una de las figuras de encima de la
-      figura del chico y el reloj que estaban cubiertos con botellas, jeringas,
-      etc. Preguntar: Nosotros que nos decimos cristianos, ¿Cómo vivimos
-      realmente? ¿Nuestros rostros anuncian la Vida o la muerte? Buscar un
-      compromiso para realizar y ofrecerlo pidiendo a Dios fuerzas para hacerlo
-      realidad.
+      vida, pasa al centro de la ronda y quita una de las figuras de encima de
+      la figura del chico y el reloj que estaban cubiertos con botellas,
+      jeringas, etc. Preguntar: Nosotros que nos decimos cristianos, ¿Cómo
+      vivimos realmente? ¿Nuestros rostros anuncian la Vida o la muerte? Buscar
+      un compromiso para realizar y ofrecerlo pidiendo a Dios fuerzas para
+      hacerlo realidad.
     </p>
     <h3>- Se reza y se celebra:</h3>
     <p>Terminamos el encuentro cantando Todo en esta vida.</p>
