--- a/src/23-esperanza.html
+++ b/src/23-esperanza.html
@@ -17,8 +17,8 @@
       <strong>Inc. 27</strong>
       <em
         >El/La Explorador/a, lleno de confianza y optimismo, imprime a todos los
-        aspectos de la vida, una nota de fiesta, iluminando a todos con su cálido
-        testimonio, fruto de esperanza cristiana, porque hace suya la
+        aspectos de la vida, una nota de fiesta, iluminando a todos con su
+        cálido testimonio, fruto de esperanza cristiana, porque hace suya la
         exhortación de San Pablo: “Estad siempre alegres” (Tes. 5, 16;
         Filipenses 4, 4).</em
       >
@@ -75,9 +75,9 @@
     <p>
       <em
         >«Nuestra alma espera en el Señor; él es nuestra ayuda y nuestro escudo.
-        Nuestro corazón se regocija en él: nosotros confiamos en su santo Nombre.
-        Señor, que tu amor descienda sobre nosotros, conforme a la esperanza que
-        tenemos en ti.»</em
+        Nuestro corazón se regocija en él: nosotros confiamos en su santo
+        Nombre. Señor, que tu amor descienda sobre nosotros, conforme a la
+        esperanza que tenemos en ti.»</em
       >
     </p>
     <h3>- Reflexión:</h3>
@@ -102,13 +102,14 @@
       tenga una relación segura con un adulto que lo cuide y lo apoye, ahí
       entramos todos, padres, familiares, referetes, ¡y sí hasta nosotros!, por
       eso es tan importante acompañarlos, escucharlos y guiarlos en sus
-      decisiones, pero para eso debemos hacernos ganarnos su confianza y corazón.
+      decisiones, pero para eso debemos hacernos ganarnos su confianza y
+      corazón.
     </p>
     <p>
-      En esta etapa los adolescentes se sienten identificados con grandes ideales
-      y esperanzas que descubren en la sociedad. Tienen actitudes exaltadas y
-      vivas que los llevan a preocuparse por lo inmediato. Les cuesta tomar
-      las cosas con una mirada a largo plazo.
+      En esta etapa los adolescentes se sienten identificados con grandes
+      ideales y esperanzas que descubren en la sociedad. Tienen actitudes
+      exaltadas y vivas que los llevan a preocuparse por lo inmediato. Les
+      cuesta tomar las cosas con una mirada a largo plazo.
     </p>
     <p>
       En sumatoria la esperanza tiene dimensiones tanto espirituales como
@@ -117,8 +118,8 @@
       vista de la Psicología, la esperanza se relaciona con las metas y el
       sentido de formación personal. Se define como un conjunto de ideas y
       creencias que nos ayudan a encontrar caminos para alcanzar nuestras metas
-      y nos dan confianza en que tenemos la capacidad para lograrlas, por eso
-      la gran importancia de que los adolescentes cuenten
+      y nos dan confianza en que tenemos la capacidad para lograrlas, por eso la
+      gran importancia de que los adolescentes cuenten
     </p>
     <p>
       con guías y referencias de otros jóvenes y adultos que le demuestren que
@@ -146,9 +147,9 @@
         Reino de Dios que ya se está construyendo y del cual forma parte.
       </li>
       <li>
-        - Los rastreadores Hogueras lograron Identificarse con un proyecto grupal
-        que se construye paso a paso, aprendiendo a no pretender todo de golpe
-        ni detener sus esfuerzos.
+        - Los rastreadores Hogueras lograron Identificarse con un proyecto
+        grupal que se construye paso a paso, aprendiendo a no pretender todo de
+        golpe ni detener sus esfuerzos.
       </li>
     </ul>
     <h2>ACTIVIDADES</h2>
@@ -166,15 +167,16 @@
     <p>
       Esta actividad busca reconocer que todos los días se nos presentan
       opciones y señales de vida de Cristo que nos interpela para que seamos
-      parte de su proyecto dándonos suficientes motivos para vivir con esperanza.
+      parte de su proyecto dándonos suficientes motivos para vivir con
+      esperanza.
     </p>
     <h3>- Actividad:</h3>
     <p>
       Que cada uno dibuje su mano sobre una hoja y escribe brevemente en ella la
       razón por la que le pusieron ese nombre, o lo que significa, si es que lo
       sabe. (Se puede conseguir también uno de esos libros tipo "1000 nombres
-      para su bebé" y que los chicos se vayan fijando y copiando el significado).
-      Lo importante es que no pongan el nombre.
+      para su bebé" y que los chicos se vayan fijando y copiando el
+      significado). Lo importante es que no pongan el nombre.
     </p>
     <p>
       Cuando todos terminan, poner las manos de papel en el centro dadas
@@ -204,7 +206,9 @@
       que cuentan las historias de cristianos muertos en la época de la
       dictadura.
     </p>
-    <p><strong>Ellos murieron en la Esperanza- Mártires argentinos</strong></p>
+    <p>
+      <strong>Ellos murieron en la Esperanza &mdash;Mártires argentinos</strong>
+    </p>
     <ul>
       <li>
         <strong><em>- Mónica Mignone</em></strong> Mónica y sus compañeros son
@@ -277,12 +281,12 @@
         más compromtidas en favor del pueblo. Tal entrega no le impide ser la
         esposa y la compañera de un hombre igualmente comprometido. Estando
         embarazada es detenida y encarcelada. Marta da a luz con las manos
-        esposadas y su Mayor dolor es no poder amamantar a su hijo que le retiran
-        recién nacido. Dos meses después Marta es sacada de la cárcel para ser
-        fusilada, pese al comunicado militar que informa que muere en un
-        enfrentamiento con civiles que interceptan su vehículo. Sobre su tumba
-        se lee la frase del profeta Isaías: "Tus muertos revivirán y en el país
-        de las sombras darán luz" (+1976).
+        esposadas y su Mayor dolor es no poder amamantar a su hijo que le
+        retiran recién nacido. Dos meses después Marta es sacada de la cárcel
+        para ser fusilada, pese al comunicado militar que informa que muere en
+        un enfrentamiento con civiles que interceptan su vehículo. Sobre su
+        tumba se lee la frase del profeta Isaías: "Tus muertos revivirán y en el
+        país de las sombras darán luz" (+1976).
       </li>
     </ul>
     <h3>- Reflexión:</h3>
@@ -647,9 +651,9 @@
         Medellín, porque fue un paso revolucionario de Dios por nuestras
         tierras. De todo el contnido, cabe resaltar el énfasis puesto en la
         pobreza de la Iglesia, que se va a expresar en la preferente, solidaria,
-        efectiva opción por los pobres. Opción que va a explicitar Puebla a fines
-        de los 70 y que retomará Santo Domingo en el año 92. "Que se presente
-        cada vez más nítido en América Latina el rostro de una Iglesia
+        efectiva opción por los pobres. Opción que va a explicitar Puebla a
+        fines de los 70 y que retomará Santo Domingo en el año 92. "Que se
+        presente cada vez más nítido en América Latina el rostro de una Iglesia
         auténticmente pobre, misionera y pascual, desligada de todo poder
         temporal y audazmente comprmetida en la liberación de todo el hombre y
         de todos los hombres". Sin miedo, sin estar a la defensiva, y al decir
@@ -727,24 +731,24 @@
         parecía tan bella.... Más hermosa que las casas nuevas y recién pintadas
         frente a la plaza del pueblo. Un jardín inundado de flores invitaba a
         quedarse. Hasta la brisa de la tarde, como una enamorada, se mecía entre
-        ellas, y no quería irse. El hombre quedó fascinado. Todas las flores eran
-        lindas. Pero había una más hermosa que todas, más blanca que las nubes
-        del verano, y le pareció que eran tiernas como los labios de su pequeña
-        hija. Pensó para él... ¿Compraría un ramo?... Pero no... El dueño no las
-        va a vender. ¿Le pediría una o dos, entonces?... Para llevarlas conmigo
-        a casa... Pero no... Se deshojarían por el camino, o se marchitarían
-        pronto en el florero. Tal vez lo mejor sea cultivaras en mi tierra.
-        Entonces le pido una ramita, un gajo. Y fue a hablar con el dueño del
-        jardín...
+        ellas, y no quería irse. El hombre quedó fascinado. Todas las flores
+        eran lindas. Pero había una más hermosa que todas, más blanca que las
+        nubes del verano, y le pareció que eran tiernas como los labios de su
+        pequeña hija. Pensó para él... ¿Compraría un ramo?... Pero no... El
+        dueño no las va a vender. ¿Le pediría una o dos, entonces?... Para
+        llevarlas conmigo a casa... Pero no... Se deshojarían por el camino, o
+        se marchitarían pronto en el florero. Tal vez lo mejor sea cultivaras en
+        mi tierra. Entonces le pido una ramita, un gajo. Y fue a hablar con el
+        dueño del jardín...
       </li>
     </ol>
     <ol>
       <li>
         <strong>2° Parte: La siembra</strong> ¿Así que no sabe su nombre? -
-        preguntó el visitante. No, señor. Solo sé que es la flor más linda que he
-        visto. Me gustaría plantarlas en mi casa. Le puedo dar flores secas. Pero
-        tiene que esperar que se seque la flor. Y esperar. Enterrar luego la
-        semilla. Y esperar. Después regar. Y esperar.
+        preguntó el visitante. No, señor. Solo sé que es la flor más linda que
+        he visto. Me gustaría plantarlas en mi casa. Le puedo dar flores secas.
+        Pero tiene que esperar que se seque la flor. Y esperar. Enterrar luego
+        la semilla. Y esperar. Después regar. Y esperar.
       </li>
     </ol>
     <p>
@@ -817,26 +821,26 @@
         vecinos cada mañana empezaba una lucha. Y cada tarde volvía la
         esperanza. En uno esperanza de semilla hundida. En otro ilusión de gajo
         trasplantado, - Se me secó un gajo - dijo - Pero me quedan tres todavía.
-        ¿Y usted? - Nada, tampoco, por ahora nada. Pero espero a la flor, Creo en
-        el tiempo, en la tierra y en mis manos.El vecino que no sabía esperar, a
-        la tarde siguiente, más triste y lentamente fue a contarle que se había
-        secado otro gajo. Y no vio brotes no flores en el jardín del vecino que
-        sabía esperar. Solo sintió el olor húmedo de la tierra recién regada.
-        Pasaron varias veces el sol y las estrellas, cuando el hombre de las
-        semillas notó que el vistante de los gajos no había vuelto. Decidió él
-        entonces visitarlo. Al entrar vio en el jardín los dos gajos secos, los
-        que quedaban. Se entristeció y se fue sin decirle palabra. Volvió a su
-        jardín y pensó... ¡Qué dura es la vida sin esperanza! Cuando ya no se
-        puede esperar ninguna flor. Cuando no hay nada para regar ni cuidar. El
-        tenía esperanza. Lo nuevo puede
+        ¿Y usted? - Nada, tampoco, por ahora nada. Pero espero a la flor, Creo
+        en el tiempo, en la tierra y en mis manos.El vecino que no sabía
+        esperar, a la tarde siguiente, más triste y lentamente fue a contarle
+        que se había secado otro gajo. Y no vio brotes no flores en el jardín
+        del vecino que sabía esperar. Solo sintió el olor húmedo de la tierra
+        recién regada. Pasaron varias veces el sol y las estrellas, cuando el
+        hombre de las semillas notó que el vistante de los gajos no había
+        vuelto. Decidió él entonces visitarlo. Al entrar vio en el jardín los
+        dos gajos secos, los que quedaban. Se entristeció y se fue sin decirle
+        palabra. Volvió a su jardín y pensó... ¡Qué dura es la vida sin
+        esperanza! Cuando ya no se puede esperar ninguna flor. Cuando no hay
+        nada para regar ni cuidar. El tenía esperanza. Lo nuevo puede
       </li>
     </ol>
     <p>
-      ser mañana o ahora - se dijo – Hoy puede ser la hora de la flor. Pero cuánto
-      cuesta espera que la flor se marchite, se seque, se rompa la semilla y
-      enterrada resucite la nueva flor. Estaba cansado, hacía veinte noches que
-      no dormía. Se había olvidado de soñar. Que cada chico busque un recipiente
-      grande.
+      ser mañana o ahora - se dijo – Hoy puede ser la hora de la flor. Pero
+      cuánto cuesta espera que la flor se marchite, se seque, se rompa la
+      semilla y enterrada resucite la nueva flor. Estaba cansado, hacía veinte
+      noches que no dormía. Se había olvidado de soñar. Que cada chico busque un
+      recipiente grande.
     </p>
     <p>Llenarlo de agua limpia.</p>
     <p>Regar lentamente las macetas.</p>
@@ -857,7 +861,7 @@
     <ul>
       <li>
         - ¡Sí, sí, muchas veces sí! - Había brotado la primera semilla. Gritó
-        tan fuerte que sol esa ma- ñana se despertó más temprano que nunca.
+        tan fuerte que sol esa mañana se despertó más temprano que nunca.
       </li>
       <li>
         - y vio la savia en ese brote. Y en esa savia la flor. Y más y nuevas
@@ -886,17 +890,17 @@
     <h3>Reflexión:</h3>
     <p>
       <strong>Vale la pena esperar:</strong> Tanto la semilla como el gajo con
-      flores vienen de la mima planta, tienen un origen común, pero les espera un
-      destino muy distinto. Seguramente las flores son mucho más lindas y
+      flores vienen de la mima planta, tienen un origen común, pero les espera
+      un destino muy distinto. Seguramente las flores son mucho más lindas y
       atrayentes, pero no duran mucho. Al poco tiepo, por más que se planten o
       se pongan en agua se marchitan. Por más que aparenten vida, en realidad
       están muertas, ya no corre savia en su tallo y no queda nada que esperar
       de ellas. En cambio una semilla es fea, pequeña y parece muerta, pero
       dentro tiene mucha vida. Así como se la ve, si se la entierra y se la
-      atiende, se transforma en una nueva planta con motones de flores. Y no sólo
-      unas flores, sino que da más semillas que darán nuevamente más flores y más
-      semillas. Claro que demorará su tiempo, pero vale la pena esperar. Lo
-      mismo pasa en nuestro grupo y en nuestra vida. Muchas veces se nos
+      atiende, se transforma en una nueva planta con motones de flores. Y no
+      sólo unas flores, sino que da más semillas que darán nuevamente más flores
+      y más semillas. Claro que demorará su tiempo, pero vale la pena esperar.
+      Lo mismo pasa en nuestro grupo y en nuestra vida. Muchas veces se nos
       presentan ofertas vistosas y atrayentes pero que es en realidad son
       pasajeras y sin vida. También tenemos prpuestas que son más lentos y
       requieren esfuerzo, pero sabemos que conducen a lugar seguro. Tenemos la
@@ -942,9 +946,9 @@
       que pasa con la semilla que crece. Tenemos un objetivo que lo lograremos
       en la medida que cada uno aporte su granito de arena que le dé "bases
       sólidas" a la patrulla. La patrulla va creciendo a lo largo del tiempo con
-      esfuerzo y sacrificio. La esperanza de llegar a ser un grupo unido y maduro
-      permite seguir intentándolo. Siempre la alegría de haber logrado la meta
-      es mayor que las dificultades previas.
+      esfuerzo y sacrificio. La esperanza de llegar a ser un grupo unido y
+      maduro permite seguir intentándolo. Siempre la alegría de haber logrado la
+      meta es mayor que las dificultades previas.
     </p>
     <h3>Palabra de Dios: (Mc. 4, 30-31) Parábola de la semilla de mostaza</h3>
     <p>
