--- a/src/24-servicio.html
+++ b/src/24-servicio.html
@@ -92,8 +92,8 @@
         <strong>98 5.</strong>
         <em
           >La elección de la B.A. que se ha de realizar es algo absolutamente
-          personal y cada Explorador/a se siente satisfecho de encontrar
-          siempre una nueva manera de hacerla.</em
+          personal y cada Explorador/a se siente satisfecho de encontrar siempre
+          una nueva manera de hacerla.</em
         >
       </li>
       <li>
@@ -223,7 +223,7 @@
       postura de sumisión o rebelión, hay un rechazo por el "mundo adulto".
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
-    <p>Que los rastreadores-hogueras hayan podido:</p>
+    <p>Que los rastreadores&ndash;hogueras hayan podido:</p>
     <p>» Descubrir que el servicio es la forma concreta de ser cristiano.</p>
     <p>
       » Valorar el espíritu de servicio y colaboración de María en la misión de
@@ -273,8 +273,8 @@
     <p>
       Veamos cuáles son los límites egoístas que ie ponemos a nuestro sí para
       tratar de vencerlos. María ante la propuesta de Dios da un sí profundo,
-      humilde y comprometido, poniéndose totalmente en sus manos. Estuvo
-      siempre lista a lo que el Señor le pidió respondiendo con alegría.
+      humilde y comprometido, poniéndose totalmente en sus manos. Estuvo siempre
+      lista a lo que el Señor le pidió respondiendo con alegría.
     </p>
     <p>
       Ojalá nuestro "sí" fuera cada vez más grande, cuando se trata de servir a
@@ -339,18 +339,19 @@
         >«El Angel entró en su casa y la saludó, diciendo: “¡Alégrate!, llena de
         gracia, el Señor está contigo”. Al oír estas palabras, ella quedó
         desconcertada y se preguntaba qué podía significar ese saludo. Pero el
-        Angel le dijo: “No temas, María, porque Dios te ha favorecido. Concebirás
-        y darás a luz un hijo, y le pondrás por nombre Jesús; él será grande y
-        será llamdo Hijo del Altísimo. El Señor Dios le dará el trono de David,
-        su padre, reinará sobre la casa de Jacob para siempre y su reino no
-        tendrá fin”. María dijo al Angel: “¿Cómo puede ser eso, si yo no tengo
-        relaciones con ningún hombre?”. El Angel le respondió: “El Espíritu
-        Santo descenderá sobre ti y el poder del Altísimo te cubrrá con su
-        sombra. Por eso el niño será Santo y será llamado Hijo de Dios. También
-        tu parienta Isabel concibió un hijo a pesar de su vejez, y la que era
-        considerada estéril, ya se encuentra en su sexto mes, porque no hay nada
-        imposible para Dios”. María dijo entonces: “Yo soy la servidora del
-        Señor, que se cumpla en mí lo que has dicho”. Y el Angel se alejó. »</em
+        Angel le dijo: “No temas, María, porque Dios te ha favorecido.
+        Concebirás y darás a luz un hijo, y le pondrás por nombre Jesús; él será
+        grande y será llamdo Hijo del Altísimo. El Señor Dios le dará el trono
+        de David, su padre, reinará sobre la casa de Jacob para siempre y su
+        reino no tendrá fin”. María dijo al Angel: “¿Cómo puede ser eso, si yo
+        no tengo relaciones con ningún hombre?”. El Angel le respondió: “El
+        Espíritu Santo descenderá sobre ti y el poder del Altísimo te cubrrá con
+        su sombra. Por eso el niño será Santo y será llamado Hijo de Dios.
+        También tu parienta Isabel concibió un hijo a pesar de su vejez, y la
+        que era considerada estéril, ya se encuentra en su sexto mes, porque no
+        hay nada imposible para Dios”. María dijo entonces: “Yo soy la servidora
+        del Señor, que se cumpla en mí lo que has dicho”. Y el Angel se alejó.
+        »</em
       >
     </p>
     <h3>La visita de María a su prima Isabel (Lc. 1, 36.39-56)</h3>
@@ -365,9 +366,9 @@
         bendito es el fruto de tu vientre! ¿Quién soy yo, para que la madre de
         mi Señor venga a visitarme? Apenas oí tu saludo, el niño saltó de
         alegría en mi seno. Feliz de ti por haber creído que se cumplirá lo que
-        te fue anunciado de parte del Señor”. María dijo entonces: “Mi alma canta
-        la grandeza del Señor, y mi espíritu se estremece de gozo en Dios, mi
-        salvador, porque el miró con bondad la pequeñez de tu servidora. En
+        te fue anunciado de parte del Señor”. María dijo entonces: “Mi alma
+        canta la grandeza del Señor, y mi espíritu se estremece de gozo en Dios,
+        mi salvador, porque el miró con bondad la pequeñez de tu servidora. En
         adlante todas las generaciones me llamarán feliz, porque el Todopoderoso
         he hecho en mí grandes cosas: ¡su Nombre es santo! Su misericordia se
         extiende de generación en generción sobre aquellos que lo temen.
@@ -440,9 +441,9 @@
     </p>
     <p>Estas hermosas palabras manifiestan la hermosa experiencia de María.</p>
     <p>
-      Aceptó tener un hijo porque así servía a la humanidad. Ella misma se define
-      de esa manera cuando acepta ser madre. "Soy la servidora del Señor" Ese es
-      e! sentido de su vida y su vocación más profunda.
+      Aceptó tener un hijo porque así servía a la humanidad. Ella misma se
+      define de esa manera cuando acepta ser madre. "Soy la servidora del Señor"
+      Ese es e! sentido de su vida y su vocación más profunda.
     </p>
     <p>
       Es una mujer servicial y servidora, no se contenta con palabras
@@ -463,8 +464,8 @@
     </p>
     <p>
       Que cada uno haga un dibujo de María según como se la imagine, tratando
-      que se pueda entender que es María, pero sin copiarse de otras imágenes
-      ya conocidas ni utilizar símbolos clásicos.
+      que se pueda entender que es María, pero sin copiarse de otras imágenes ya
+      conocidas ni utilizar símbolos clásicos.
     </p>
     <p>
       Si a los chicos no se les ocurre, se puede sugerir que cada uno se dibuje
@@ -474,8 +475,8 @@
     </p>
     <p>
       Reunirse y que cada uno muestre su dibujo mientras el resto va
-      descubriendo en el los gestos, actitudes o demás características
-      dibujadas que relacionen con María.
+      descubriendo en el los gestos, actitudes o demás características dibujadas
+      que relacionen con María.
     </p>
     <p>
       No entrar a debatir si el que lo dibujó pensó realmente en eso o no, dejar
@@ -483,8 +484,8 @@
     </p>
     <p>
       Una vez comentados todos los dibujos, buscar las coincidencias y
-      características más representativas.De entre todas, destacar la actitud
-      de servicio preguntando:
+      características más representativas.De entre todas, destacar la actitud de
+      servicio preguntando:
     </p>
     <p>¿De qué forma fue su servicio?</p>
     <p>¿En qué hechos de su vida los vemos?</p>
