--- a/src/25-experiencia-del-agua.html
+++ b/src/25-experiencia-del-agua.html
@@ -85,15 +85,16 @@
       de vida y de fecudidad. El pueblo de Israel en particular encontró en ella
       el signo de la presencia amorosa de Dios providente, generoso, sabio,
       omnipotente, liberador. . Desde la creación misma el Espíritu Divino
-      sobrevolaba el "agua", coincidiendo curiosamente con muchos científicos que
-      indican este ambiente como el lugar del origen de la vida vegetal y animal
-      (Génesis 1, 2). El marco que ciñe la creación del hombre y delimita sus
-      primeros pasos en el paraíso terrenal está dado por cuatro ríos (Génesis
-      2, 10-14). Desde que Moisés es salvado de las aguas del Nilo (Éxodo 2,
-      1-10) se pronuncia la salvación de todo el pueblo que cruzará el mar Rojo
-      y lgrará la liberación (Éxodo 14 y 15). El paso de otro río, el Jordán,
-      abre las puertas de la tierra prometida (Josué 3). En ese mismo río Juan
-      el Bautista invita a la conversión y señala al mesías redentor (Lucas 3,
+      sobrevolaba el "agua", coincidiendo curiosamente con muchos científicos
+      que indican este ambiente como el lugar del origen de la vida vegetal y
+      animal (Génesis 1, 2). El marco que ciñe la creación del hombre y delimita
+      sus primeros pasos en el paraíso terrenal está dado por cuatro ríos
+      (Génesis 2, 10-14). Desde que Moisés es salvado de las aguas del Nilo
+      (Éxodo 2, 1-10) se pronuncia la salvación de todo el pueblo que cruzará el
+      mar Rojo y lgrará la liberación (Éxodo 14 y 15). El paso de otro río, el
+      Jordán, abre las puertas de la tierra prometida (Josué 3). En ese mismo
+      río Juan el Bautista invita a la conversión y señala al mesías redentor
+      (Lucas 3,
     </p>
     <ol>
       <li>
@@ -229,8 +230,8 @@
       </li>
       <li>
         <strong>2) Agua disponible:</strong> Generosa, servicial, gratuita,
-        regalo. Se sirven todos, no se niega, siempre dispuesta. Se adapta y
-        no rechaza a nadie.
+        regalo. Se sirven todos, no se niega, siempre dispuesta. Se adapta y no
+        rechaza a nadie.
       </li>
       <li>
         <strong>3) Agua que limpia:</strong> Lava, limpia, purifica, saca la
@@ -473,8 +474,8 @@
     </p>
     <h3>- Actividad:</h3>
     <p>
-      Motivar sobre la necesidad de preparar un lugar de reflexión para compartir
-      momentos importantes de la experiencia.
+      Motivar sobre la necesidad de preparar un lugar de reflexión para
+      compartir momentos importantes de la experiencia.
     </p>
     <p>
       Preparar un lugar de reflexión que sea cómodo y agradable. Construir allí
@@ -492,7 +493,8 @@
     <p>¿Cómo es de dispuesta?</p>
     <p>
       ¿Estamos disponibles como ella? Colocar el agua que recogió cada uno en el
-      recipiente de la gruta y bendecirla. Reflexionar a partir de las preguntas:
+      recipiente de la gruta y bendecirla. Reflexionar a partir de las
+      preguntas:
     </p>
     <p>¿Qué significa el agua bendita?</p>
     <p>¿Cuáles son sus usos?</p>
@@ -550,9 +552,9 @@
       Acompañando, Pureza, Transparencia, no disimula su temor. Disponible,
       Servidora, Humilde. El nombre de inmaculada (sin mancha, purísima,
       castísima, virgen, limpia) nos recuerda la consigna: "ser, no aparentar"
-      (ser transparentes, ser hijos de Dios por el bautismo; bautismo alianza).La
-      virgen nos recuerda que debemos ser fieles a esa consigna, a nuestra
-      alianza. María es modelo de "Siempre Lista" para todo explorador.
+      (ser transparentes, ser hijos de Dios por el bautismo; bautismo
+      alianza).La virgen nos recuerda que debemos ser fieles a esa consigna, a
+      nuestra alianza. María es modelo de "Siempre Lista" para todo explorador.
     </p>
     <p>
       Reunirse todos nuevamente, poner en común lo tratado en el grupo y
@@ -590,9 +592,9 @@
         sobre ti, y el poder del Dios altísimo se posara sobre ti. Por eso, el
         niño que va a nacer será llamado Santo e Hijo de Dios. También tu
         parienta Isabel va a tener un hijo, a pesar de que es anciana; la que
-        decían que no podía tener hijos, está encinta desde hace seis meses. Para
-        Dios no hay nada imposible.” Entonces María dijo: “Yo soy esclava del
-        Señor; que Dios haga conmigo como me has dicho.”Con esto el ángel se
+        decían que no podía tener hijos, está encinta desde hace seis meses.
+        Para Dios no hay nada imposible.” Entonces María dijo: “Yo soy esclava
+        del Señor; que Dios haga conmigo como me has dicho.”Con esto el ángel se
         fue.»</em
       >
     </p>
@@ -604,14 +606,14 @@
     </p>
     <h3>- Actividad:</h3>
     <p>
-      Explicar la técnica de armado del filtro de agua u otras formas de purificar
-      agua. Armar grupos pequeños y que cada uno haga su filtro o método similar.
-      No utilizarlo todavía, dejar todo preparado y listo para usar más
-      adelante. Reunirse en el lugar de reflexión sentados en ronda, en torno al
-      recipiente con el agua bendita. Traer barro de la orilla del arroyo, lo
-      más sucio, podrido y con feo olor posible y ponerlo en un recipiente en el
-      centro de la ronda junto al recipiente del agua. Ambientar cantando
-      ''Transparencia''.
+      Explicar la técnica de armado del filtro de agua u otras formas de
+      purificar agua. Armar grupos pequeños y que cada uno haga su filtro o
+      método similar. No utilizarlo todavía, dejar todo preparado y listo para
+      usar más adelante. Reunirse en el lugar de reflexión sentados en ronda, en
+      torno al recipiente con el agua bendita. Traer barro de la orilla del
+      arroyo, lo más sucio, podrido y con feo olor posible y ponerlo en un
+      recipiente en el centro de la ronda junto al recipiente del agua.
+      Ambientar cantando ''Transparencia''.
     </p>
     <p>
       <strong>TRANSPARENCIA</strong> Dame tu transparencia, oh fuente de todo,
@@ -627,8 +629,8 @@
     </p>
     <p>
       dame tu transparencia, oh fuente de amor, fuente de la gracia; dame tu
-      transparencia, recta la intención, y fiel la palabra. Devuelve la inocencia
-      que robo el pecado, la estable certeza de saberme amado, dame tu
+      transparencia, recta la intención, y fiel la palabra. Devuelve la
+      inocencia que robo el pecado, la estable certeza de saberme amado, dame tu
       presencia, agua viva que limpia mi barro. (2)
     </p>
     <p>Leer algún esquema de examen de conciencia.</p>
@@ -681,40 +683,40 @@
       <strong>El pecado nos ensucia:</strong> En nuestra vida de fe nos
       ensuciamos: hacemos el mal a los demás: el pecado. Al pecar nos alejamos
       de Dios y de nuestros hermanos, vamos ensuciándonos unos a otros. Nuestras
-      relaciones se tornan dificultosas, desagradables (como cuando nos saludamos
-      con las manos sucias).
+      relaciones se tornan dificultosas, desagradables (como cuando nos
+      saludamos con las manos sucias).
     </p>
     <p>
-      <strong>Agua que limpia:</strong> Lava, limpia, purifica, saca la suciedad,
-      libera, cambia las cosas. Devuelve la belleza original. Símbolo de pureza.
-      El agua libera a las cosas de todo lo accesorio que con el tiempo se ha
-      ido acumulando y devuelve la belleza original. Borra las inmundicias y
-      rejuvenece nuestro cuerpo. El hombre se lava y purifica exteriormente, pero
-      es Dios quien purifica y lava los corazones. Cristo es, en la nueva
-      alianza, el que nos purifica de nuestros pecados y nos regala su Gracia. El
-      vino a salvarnos y a ofrecernos la conversión. Para purificarnos del mal
-      que hacemos, tenemos la confesión. Después de haber revisado el corazón y
-      de reconocernos pecadores personal y grupalmente, daremos un paso más; le
-      pediremos perdón a Dios. Iremos a confesarnos para reencontrarmos con Dios
-      que nos libra del pecado, a través del sacerdote que nos lavará las manos.
-      Como dice el profeta Ezequiel, Dios nos limpia (nos lava) de nuestros
-      pecados en la confesión. Convierte nuestro corazón, nos da un corazón
-      nuevo, nos hace volver a ser sus hijos, nos hace renovar la Alianza del
-      bautismo.
+      <strong>Agua que limpia:</strong> Lava, limpia, purifica, saca la
+      suciedad, libera, cambia las cosas. Devuelve la belleza original. Símbolo
+      de pureza. El agua libera a las cosas de todo lo accesorio que con el
+      tiempo se ha ido acumulando y devuelve la belleza original. Borra las
+      inmundicias y rejuvenece nuestro cuerpo. El hombre se lava y purifica
+      exteriormente, pero es Dios quien purifica y lava los corazones. Cristo
+      es, en la nueva alianza, el que nos purifica de nuestros pecados y nos
+      regala su Gracia. El vino a salvarnos y a ofrecernos la conversión. Para
+      purificarnos del mal que hacemos, tenemos la confesión. Después de haber
+      revisado el corazón y de reconocernos pecadores personal y grupalmente,
+      daremos un paso más; le pediremos perdón a Dios. Iremos a confesarnos para
+      reencontrarmos con Dios que nos libra del pecado, a través del sacerdote
+      que nos lavará las manos. Como dice el profeta Ezequiel, Dios nos limpia
+      (nos lava) de nuestros pecados en la confesión. Convierte nuestro corazón,
+      nos da un corazón nuevo, nos hace volver a ser sus hijos, nos hace renovar
+      la Alianza del bautismo.
     </p>
     <p>
       <strong>Perdonarnos mutuamente:</strong> Así como al "limpiarnos" logramos
       sentirnos mejor, también nos lleva a hacer sentir mejor al que tengo a mi
       lado. La reconciliación nos acerca a Dios y nos lleva a reconciliarnos con
-      el prójimo.Con el filtro seguimos purificando el agua que utilizamos todos,
-      como signo que queremos seguir purificándonos y perdonando mutuamente. Esa
-      agua fue utilizada por todos como sino del perdón que nos regaló Dios.
-      Tenemos que extender y profundizar ese perdón a todos nuestros compañeros,
-      haciendo que el agua sea cada vez más pura. Sabemos que somos débiles y
-      que ante Dios no podemos aparentar, sino pedirle que nos ayude a serle
-      fieles, Para eso es necesario continuar purificándonos, como lo hacemos con
-      el filtro de agua. El filtro saca todo lo superficial, lo inservible, dejando
-      el agua limpia, transparente y pura.
+      el prójimo.Con el filtro seguimos purificando el agua que utilizamos
+      todos, como signo que queremos seguir purificándonos y perdonando
+      mutuamente. Esa agua fue utilizada por todos como sino del perdón que nos
+      regaló Dios. Tenemos que extender y profundizar ese perdón a todos
+      nuestros compañeros, haciendo que el agua sea cada vez más pura. Sabemos
+      que somos débiles y que ante Dios no podemos aparentar, sino pedirle que
+      nos ayude a serle fieles, Para eso es necesario continuar purificándonos,
+      como lo hacemos con el filtro de agua. El filtro saca todo lo superficial,
+      lo inservible, dejando el agua limpia, transparente y pura.
     </p>
     <p>
       <strong>La alegría del perdón:</strong> Nos ponemos contentos de estar de
@@ -723,8 +725,8 @@
       provocar un cambio en nuestra vida.
     </p>
     <h3>
-      Palabra de Dios: Ezequiel 36, 24-29. Agua purificadora Jn. 9, 1-7. El ciego
-      de nacimiento
+      Palabra de Dios: Ezequiel 36, 24-29. Agua purificadora Jn. 9, 1-7. El
+      ciego de nacimiento
     </h3>
     <h3>Salmo 51. Piedad de Mi Señor</h3>
     <p>
@@ -814,8 +816,8 @@
     </p>
     <p>
       <em
-        >“Ve a lavarte al estanque Siloe (que significa ‘Enviado’)”. El ciego fue
-        y se lavó, y cuando regresó ya podía ver. »</em
+        >“Ve a lavarte al estanque Siloe (que significa ‘Enviado’)”. El ciego
+        fue y se lavó, y cuando regresó ya podía ver. »</em
       >
     </p>
     <p>
@@ -944,15 +946,16 @@
       para vivir: donde hay agua, hay vida y la muerte sobreviene cuando falta.
       Cristo nos trae el agua de la vida: Él mismo es este agua vivificadora. Él
       es la fuente de la vida. Nos da una vida nueva. La vida merece vivirse, es
-      alegre. Jesús nos regala un rostro lleno de alegría: debemos contagiar
-      esa vida recibida de Jesús.
+      alegre. Jesús nos regala un rostro lleno de alegría: debemos contagiar esa
+      vida recibida de Jesús.
     </p>
     <p>
       <strong>El bautismo:</strong> En el bautismo pasamos de la muerte a la
       vida, del pecado a la gracia por medio de las aguas, como el pueblo hebreo
       al cruzar el Mar Rojo. Y entonces realizamos una alianza con Dios, lo
       aceptamos, es una promesa. En el bautismo, Dios nos regala la gracia de
-      ser sus hijos, nos recibe como sus hijos y nos hace nacer a una nueva vida,
+      ser sus hijos, nos recibe como sus hijos y nos hace nacer a una nueva
+      vida,
     </p>
     <p>
       <strong>Renovaciones:</strong> Cuando nos bautizaron éramos pequeños y
@@ -1052,8 +1055,8 @@
       ¿Qué va a pasar conmigo? El río tiene su meta. Dios es mi meta, soy su
       hijo, debo acabar en su casa, en su familia. Los ríos san como las
       personas: agresivos, pasivos, alegres, activos, arrasadores, "pura pinta".
-      Cada uno tiene su ritmo, su personalidad; cada uno es constructor, artífice
-      de su vida y protagonista.
+      Cada uno tiene su ritmo, su personalidad; cada uno es constructor,
+      artífice de su vida y protagonista.
     </p>
     <h3>
       Palabra de Dios: Isaías 41, 17-20. Isaías 35, 5-8. Ríos y vertientes
@@ -1075,7 +1078,9 @@
       >
     </p>
     <h3>Isaías 41, 17-20</h3>
-    <p><em>«Los afligidos y los necesitados buscan agua, pero no la hay,</em></p>
+    <p>
+      <em>«Los afligidos y los necesitados buscan agua, pero no la hay,</em>
+    </p>
     <p><em>su lengua está reseca de sed.</em></p>
     <p><em>Yo, el Señor, les responderé,</em></p>
     <p><em>yo, el Dios de Israel, no los abandonaré.</em></p>
@@ -1152,8 +1157,8 @@
         mucho.
       </li>
       <li>
-        -¿Oyes? -dijo el principito-. Hemos despertado al pozo y canta. No quería
-        que el principito hiciera el menor esfuerzo y le dije:
+        -¿Oyes? -dijo el principito-. Hemos despertado al pozo y canta. No
+        quería que el principito hiciera el menor esfuerzo y le dije:
       </li>
       <li>
         -Déjame a mí, es demasiado pesado para ti. Lentamente subí el cubo hasta
@@ -1340,14 +1345,14 @@
         caminos, Como si fueran un pueblo que hace el bien y que no descuida mis
         leyes; Me piden leyes justas y se muestran felices de acercarse a mí, y,
         sin embargo, dicen: “¿Para qué ayunar, si Dios no lo ve? ¿Para qué
-        sacrificarnos, si él no se da cuenta?” El día de ayuno lo dedican ustedes
-        a hacer negocios Y a explotar a sus trabajadores; el día de ayuno lo
-        pasan en disputas y peleas y dando golpes criminales con los puños. Un
-        día de ayuno así, no puede lograr que yo escuche sus oraciones. ¿Creen
-        que el ayuno que me agrada consiste en afligirse, En agachar la cabeza
-        como un junco Y en acostarse con ásperas ropas sobre la ceniza? ¿Eso es
-        lo que ustedes llaman “ayuno” y “día agradable al Señor”? Pues no lo
-        es.</em
+        sacrificarnos, si él no se da cuenta?” El día de ayuno lo dedican
+        ustedes a hacer negocios Y a explotar a sus trabajadores; el día de
+        ayuno lo pasan en disputas y peleas y dando golpes criminales con los
+        puños. Un día de ayuno así, no puede lograr que yo escuche sus
+        oraciones. ¿Creen que el ayuno que me agrada consiste en afligirse, En
+        agachar la cabeza como un junco Y en acostarse con ásperas ropas sobre
+        la ceniza? ¿Eso es lo que ustedes llaman “ayuno” y “día agradable al
+        Señor”? Pues no lo es.</em
       >
     </p>
     <p>
@@ -1470,9 +1475,9 @@
         a Italia, y nos hizo embarcar en él. Durante varios días, navegamos
         lentamente y, a duras penas, llegamos a la altura de Cnido. Como el
         viento era desfavorable, navegamos al resguardo de la isla de Creta
-        hacia el cabo Salmoné, y después de haberlo bordeado con gran dificultad,
-        llegamos a un punto llamado Buenos Puertos, cerca de la ciudad de
-        Lasea.</em
+        hacia el cabo Salmoné, y después de haberlo bordeado con gran
+        dificultad, llegamos a un punto llamado Buenos Puertos, cerca de la
+        ciudad de Lasea.</em
       >
     </p>
     <p>
@@ -1664,11 +1669,11 @@
     <p>
       <strong>Ofrecer el agua:</strong> En toda la experiencia fuimos
       aprendiendo a ser auténticos y no aparentar cosas falsas. A lo largo de la
-      experiencia Jesús nos dijo muchas cosas a través del agua. María nos invita
-      a hacer lo que Jesús nos dice. Todo lo que vivimos y aprendimos del agua
-      lo ofrecemos a Jesús. "Pongamos nuestra agua en las tinajas." Pongamos
-      todo lo que realmente somos y vivimos en la experiencia, dejando de lado
-      las apariencias.
+      experiencia Jesús nos dijo muchas cosas a través del agua. María nos
+      invita a hacer lo que Jesús nos dice. Todo lo que vivimos y aprendimos del
+      agua lo ofrecemos a Jesús. "Pongamos nuestra agua en las tinajas."
+      Pongamos todo lo que realmente somos y vivimos en la experiencia, dejando
+      de lado las apariencias.
     </p>
     <p>
       <strong>Transformarnos y transformar:</strong> Jesús utilizó esa agua para
@@ -1703,8 +1708,8 @@
     <h3>Segunda parte: Jn 2, 8-11 Las bodas de Caná</h3>
     <p>
       <em
-        >«Y Jesús les dijo: “Ahora saquen un poco y llévenselo al encargado de la
-        fiesta”. Así lo hiciron. El encargado de la fiesta probó el agua
+        >«Y Jesús les dijo: “Ahora saquen un poco y llévenselo al encargado de
+        la fiesta”. Así lo hiciron. El encargado de la fiesta probó el agua
         convertida en vino, sin saber de dónde había salido; solo los sirvientes
         lo sabían, pues ellos habían sacado el agua. Asique el encargado llamó
         al novio y le dijo: “Todo el mundo sirve primero el mejor vino, y cuando
@@ -1768,10 +1773,10 @@
     </p>
     <p>por su generosidad para sostener la vida.</p>
     <p>
-      Oh agua, en tu misteriosa belleza haces florecer al desierto. Una minúscula
-      gota, reunida con miles de gotas, riega las semillas y las futuras
-      cosechas para alimentarnos nosotros y todas las criaturas. Una minúscula
-      gota multiplicada, sacia nuestra ardiente sed.
+      Oh agua, en tu misteriosa belleza haces florecer al desierto. Una
+      minúscula gota, reunida con miles de gotas, riega las semillas y las
+      futuras cosechas para alimentarnos nosotros y todas las criaturas. Una
+      minúscula gota multiplicada, sacia nuestra ardiente sed.
     </p>
     <p>
       Más de tres cuartas partes de nuestros cuerpos, como el cuerpo de la
