--- a/src/26-renovacion.html
+++ b/src/26-renovacion.html
@@ -8,12 +8,12 @@
     <h1>DE LA PROMESA</h1>
     <p>
       Ya se han realizado todas las consignas y la experiencia del agua. Los
-      rastreadores-hogueras están esperando el momento de la Renovación de la
-      Promesa. La celebración es un momento de alegría para compartir con las
+      rastreadores&ndash;hogueras están esperando el momento de la Renovación de
+      la Promesa. La celebración es un momento de alegría para compartir con las
       familias y con toda la comunidad.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
-    <p>Que los rastreadores-hogueras puedan:</p>
+    <p>Que los rastreadores&ndash;hogueras puedan:</p>
     <p>
       Apreciar resumido todo lo realizado durante la meta, rescatando las
       lecciones más importantes.
@@ -110,8 +110,8 @@
     </p>
     <p>
       Continuar con el viaje hasta dejar unos seis valores, que serán aquéllos
-      que el grupo considera como los más importantes, sin los cuales nada
-      tiene sentido.
+      que el grupo considera como los más importantes, sin los cuales nada tiene
+      sentido.
     </p>
     <p>Redondear preguntando:</p>
     <p>¿Cómo queremos continuar?</p>
@@ -165,8 +165,9 @@
         Nazaret, ciudad de Galilea, y se dirigió a Belén de Judea, la ciudad de
         David, para inscribirse con María, su esposa, que estaba embarazada.
         Mientras se encontraban en Belén, le llegó el tiempo de ser madre; y
-        María dio a luz a su Hijo primogénito, lo envolvió en pañales y lo acostó
-        en un pesebre, porque no había lugar para ellos en el albergue.»</em
+        María dio a luz a su Hijo primogénito, lo envolvió en pañales y lo
+        acostó en un pesebre, porque no había lugar para ellos en el
+        albergue.»</em
       >
     </p>
     <h3>ACTIVIDAD N° 2 – HUELLAS EN EL CAMINO</h3>
@@ -256,7 +257,9 @@
     </p>
     <p>Comentar sobre los nuevos desafíos que les esperan</p>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1 <strong>.</strong></li>
+      <li>
+        <strong>- Reflexión:</strong> Ver actividad N°1 <strong>.</strong>
+      </li>
       <li>
         <strong><em>- Palabra de Dios:</em></strong> Ver actividad N°1.
       </li>
@@ -274,9 +277,9 @@
     </p>
     <p>
       celebración.Si en la misma celebración hay también promesas, otras
-      renovaciones o reafirmaciones no hace falta repetir las explicaciones y los
-      signos ya utilizados o los que se utilizarán próxmamente, sino unirlos en
-      una sola celebración en la que se va transitando, representando y
+      renovaciones o reafirmaciones no hace falta repetir las explicaciones y
+      los signos ya utilizados o los que se utilizarán próxmamente, sino unirlos
+      en una sola celebración en la que se va transitando, representando y
       explicando todo el camino exploradoril.
     </p>
     <p>
