--- a/src/27-las-aventuras-de-bui-camey.html
+++ b/src/27-las-aventuras-de-bui-camey.html
@@ -128,8 +128,8 @@
     </p>
     <p>
       – A ver veamos mi BUI CAMEY. Si no he observado mal, los he visto a todos
-      juntos jugar a la pelota, arreglando el refugio, colaborando en la
-      colecta y en el cumpleaños de NENEO, ¿no es así?
+      juntos jugar a la pelota, arreglando el refugio, colaborando en la colecta
+      y en el cumpleaños de NENEO, ¿no es así?
     </p>
     <p>– Así es Abuelo, pero …</p>
     <p>
@@ -302,8 +302,8 @@
     </p>
     <p>
       Siempre, el comienzo de las caminatas llama al entusiasmo de poder
-      descubrir lo que el horizonte les mostrará allí, donde los ojos no
-      llegan a ver que hay entre el cielo y la tierra.
+      descubrir lo que el horizonte les mostrará allí, donde los ojos no llegan
+      a ver que hay entre el cielo y la tierra.
     </p>
     <p>
       Siempre tras su bandera, siempre en formación, siempre charlando y
@@ -336,8 +336,8 @@
     </p>
     <p>
       Matecocido y pan fue el desayuno para retomar la marcha, mas antes de
-      hacerlo BUI CAMEY aprovechando la pasividad que brinda la mañana les dijo a
-      sus amigos:
+      hacerlo BUI CAMEY aprovechando la pasividad que brinda la mañana les dijo
+      a sus amigos:
     </p>
     <p>
       – Propongo que nos encomendemos al Señor antes de emprender nuevamente la
@@ -390,8 +390,8 @@
     <p>
       En verdad la caminata se hizo pesada, tanto que nadie hablaba ahora
       ahorrando todas las energías. En las llanuras pueden verse a lo lejos las
-      arboledas, que en cierta forma en la larga caminata, marcan como el fin del
-      camino pero que no son más que un pequeño bastión logrado y que apenas
+      arboledas, que en cierta forma en la larga caminata, marcan como el fin
+      del camino pero que no son más que un pequeño bastión logrado y que apenas
       traspuesto hay otro muy lejano que alcanzar.
     </p>
     <p>
@@ -410,8 +410,8 @@
     <p>
       Llegaba el mediodía y esta vez había que cocinar. No fue problema pues la
       Patrulla sabía cómo hacerlo y estaban organizados y adiestrados para ello.
-      Cada uno sabía lo que le correspondía y así fue que no tardaron en
-      prender el fuego, cocinar y almorzar.
+      Cada uno sabía lo que le correspondía y así fue que no tardaron en prender
+      el fuego, cocinar y almorzar.
     </p>
     <p>
       En aquellas zonas de la Patria, el verano trae lluvias inesperadas, tal
@@ -440,8 +440,8 @@
       casa por casa a buscarlos, nos reunimos allí.
     </p>
     <p>
-      – Bueno (dijo TREVELIN tratando de justificar a todos) es que cada uno tiene
-      lo suyo y a veces no podemos ir, eso es todo.
+      – Bueno (dijo TREVELIN tratando de justificar a todos) es que cada uno
+      tiene lo suyo y a veces no podemos ir, eso es todo.
     </p>
     <p>
       La serenidad de aquel mediodía los había atrapado en la charla, en la que
@@ -496,10 +496,10 @@
     </p>
     <ul>
       <li>
-        - Todo lo que dijeron son circunstancias personales por cierto valederas.
-        ¿pero no han pensdo en compartirlas? Somos una Patrulla no solo para
-        competir o salir de aventuras, sino para preocuparnos unos de los
-        problemas de los otros o para compartir aquello que nos gusta.
+        - Todo lo que dijeron son circunstancias personales por cierto
+        valederas. ¿pero no han pensdo en compartirlas? Somos una Patrulla no
+        solo para competir o salir de aventuras, sino para preocuparnos unos de
+        los problemas de los otros o para compartir aquello que nos gusta.
       </li>
     </ul>
     <p>
@@ -605,8 +605,8 @@
     <p>
       Era un montañés de unos 45 años, eso creo, porque la juventud que
       traslucía su mirada se contradecía con las arrugas profundas en su frente
-      y en su rostro, su cabello si bien abundante y ondulado, tenía ya un
-      tenue color grisáceo.
+      y en su rostro, su cabello si bien abundante y ondulado, tenía ya un tenue
+      color grisáceo.
     </p>
     <p>
       No dejó de sonreír en todo el momento que le demando mirar a cada uno,
@@ -657,8 +657,7 @@
     </p>
     <p>
       – Ah, veo que algo saben de lo que he dicho. Pero veamos, a ver si me
-      entienden mejor. ¿Saben ustedes como hacen las abejas para producir
-      miel?
+      entienden mejor. ¿Saben ustedes como hacen las abejas para producir miel?
     </p>
     <p>
       –La verdad que no señor, nuestro Abuelo Líder nos enseñó a hablar como si
@@ -714,8 +713,8 @@
       Observe cada uno la conducta de sus compañeros, lo que hay de mejor
       procure imitarlo. De uno aprenderá a ser humilde y a no hablar tanto de si
       mismo, si ve a otro que es de los primros en la escuela aprenda de él a
-      cumplir con exactitud todos sus deberes. Veo a un compañero que es bueno
-      y devoto y yo sigo ese buen ejemplo.
+      cumplir con exactitud todos sus deberes. Veo a un compañero que es bueno y
+      devoto y yo sigo ese buen ejemplo.
     </p>
     <p>
       Así, en uno resplandecerá la bondad, en otro la fortaleza de espíritu, en
@@ -729,8 +728,8 @@
     </p>
     <p>
       Aquel montañés, hablaba casi con la misma sabiduría del Abuelo Líder
-      MACHINCO. Los jovencitos exploradores, lo ayudaron a poner todo en
-      orden, curiosamente en silencio.
+      MACHINCO. Los jovencitos exploradores, lo ayudaron a poner todo en orden,
+      curiosamente en silencio.
     </p>
     <p>
       Mientras lo hacían miraban de reojo a otro compañero ¿estarían tratando de
@@ -824,8 +823,7 @@
     </p>
     <p>
       Si quieren ustedes ser mejores, deben mostrarse impasibles y muertos como
-      aquellas tumbas a cuantas injurias y a cuantas alabanzas puedan
-      hacerles.
+      aquellas tumbas a cuantas injurias y a cuantas alabanzas puedan hacerles.
     </p>
     <p>
       Alguna vez se ve a un niño que logró hacer bien su trabajo y obtener una
@@ -878,8 +876,8 @@
       Ya a los pies de las primeras montañas, BUI CAMEY entendió que había que
       separarse para que de esa manera pudieran abarcar una mayor extensión, y
       así fue que cada uno se separó del otro aproximadamente unos veinte
-      metros, y en esa larga formación avanzaron lentamente, esperanzados en
-      ver a DIN, el pequeño lobo solitario.
+      metros, y en esa larga formación avanzaron lentamente, esperanzados en ver
+      a DIN, el pequeño lobo solitario.
     </p>
     <p>
       Avanzaron como se lo habían propuesto, pero la sinuosidad y la vegetación
@@ -1001,8 +999,8 @@
     </p>
     <p>
       laban seguían apretando los dientes, esforzándose por recuperar los
-      segundos perdidos. Por fin llegó el fin de la subida, allí estaban en lo mas
-      alto de la montaña. Alocadamente, miraban aquí y allá.
+      segundos perdidos. Por fin llegó el fin de la subida, allí estaban en lo
+      mas alto de la montaña. Alocadamente, miraban aquí y allá.
     </p>
     <p>Allí, allí, por aquel campo gritaron.</p>
     <p>
@@ -1058,8 +1056,7 @@
     <p>– ¡Baje esa arma del demonio! (le grito HUECHU)</p>
     <p>
       – Ya le han hecho bastante daño al pobre, y no permitiremos que sigan
-      lastimándolo (lo increpó BUI CAMEY, poniéndose delante del pobre
-      animal).
+      lastimándolo (lo increpó BUI CAMEY, poniéndose delante del pobre animal).
     </p>
     <p>
       El cazador lo miró, hasta pensó en volver a disparar, pero viéndolos tan
