--- a/src/09-perdon.html
+++ b/src/09-perdon.html
@@ -25,8 +25,8 @@
         <em
           >Señal de maduración de la persona es su apertura hacia los demás. La
           amistad Fraterna es considerada, por eso mismo, como una meta en la
-          vida de toda comunidad exploradoril y como fruto de una auténtica
-          vida de familia.</em
+          vida de toda comunidad exploradoril y como fruto de una auténtica vida
+          de familia.</em
         >
       </li>
       <li>
@@ -51,20 +51,20 @@
     <p>“¿Es ahora el momento adecuado para esta consigna?”</p>
     <p>Elegiste esta consigna porque observo que:</p>
     <p>
-      Los rastreadores-hogueras se encuentran divididos entre ellos en
-      subgrupos. Esos sugrupos reflejan el rencor, la rivalidad, el maltrato y la
-      falta de perdón entre algunos exploradores debido a heridas del pasado
+      Los rastreadores&ndash;hogueras se encuentran divididos entre ellos en
+      subgrupos. Esos sugrupos reflejan el rencor, la rivalidad, el maltrato y
+      la falta de perdón entre algunos exploradores debido a heridas del pasado
       que no fueron sanadas.
     </p>
     <p>
       La Cuaresma o el Adviento pueden ser dos buenos momentos del año para que
-      los rastredores-hogueras y sus animadores hagan un autoexamen de su
+      los rastredores&ndash;hogueras y sus animadores hagan un autoexamen de su
       corazón, limen asperezas con otros exploradores y puedan celebrar el
       sacramento de la Reconciliación camino a la Pascua, la Navidad o la fiesta
       de Corpus Christi.
     </p>
     <p>
-      Los rastreadores-hogueras suelen tener una “mirada justiciera” (o
+      Los rastreadores&ndash;hogueras suelen tener una “mirada justiciera” (o
       vengativa) más asciada al “ojo por ojo y diente por diente” que, a la
       propuesta de la oración del explorador, “siempre listo a perdonar”.
     </p>
@@ -79,10 +79,10 @@
       perdonado es hermosa, nos fortalece como familia, por eso creemos que el
       perdón es un reglo de Dios que entre hermanos debemos multiplicarlo. La
       virtud fundamental para alcanzar el perdón será la humildad, que nos
-      permite admitir los errores propios y ser lo suficientemente conscientes de
-      que no somos jueces sino hermanos entre nosotros e hijos de un mismo Dios
-      que nos ama, no abraza y nos perdona. La alegría de sentirnos perdonados y
-      perdonar siempre nos traen la paz.
+      permite admitir los errores propios y ser lo suficientemente conscientes
+      de que no somos jueces sino hermanos entre nosotros e hijos de un mismo
+      Dios que nos ama, no abraza y nos perdona. La alegría de sentirnos
+      perdonados y perdonar siempre nos traen la paz.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos que te pasa con este tema?”</p>
@@ -174,21 +174,21 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
-      Los rastreadores-hogueras descubrieron el valor del perdón como base para
-      vivir relaciones humanas profundas.
+      Los rastreadores&ndash;hogueras descubrieron el valor del perdón como base
+      para vivir relaciones humanas profundas.
     </p>
     <p>
-      Los rastreadores-hogueras recuperaron el sentido del sacramento de la
-      reconciliación como signo de arrepentimiento, perdón y ternura de un Dios
-      que los ama.
+      Los rastreadores&ndash;hogueras recuperaron el sentido del sacramento de
+      la reconciliación como signo de arrepentimiento, perdón y ternura de un
+      Dios que los ama.
     </p>
     <p>
-      Los rastreadores-hogueras comenzaron a crecer en humildad para reconocer
-      los propios
+      Los rastreadores&ndash;hogueras comenzaron a crecer en humildad para
+      reconocer los propios
     </p>
     <p>errores, pedir disculpas y cambiar sus actitudes.</p>
     <p>
-      Los rastreadores-hogueras comenzaron a perdonar con mayor facilidad,
+      Los rastreadores&ndash;hogueras comenzaron a perdonar con mayor facilidad,
       aceptando que los demás también pueden equivocarse y cambiar.
     </p>
     <h2>ACTIVIDADES</h2>
@@ -201,9 +201,10 @@
     <h3>ACTIVIDADES N° 1 – CAMBIAR LA VIDA</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende que los rastreadores-hogueras puedan experimentar la
-      necesidad de perdón con sus sentidos y puedan encontrar el amor de Dios a
-      través del sacramento de la Reconciliación y el abrazo de sus compañeros.
+      La actividad pretende que los rastreadores&ndash;hogueras puedan
+      experimentar la necesidad de perdón con sus sentidos y puedan encontrar el
+      amor de Dios a través del sacramento de la Reconciliación y el abrazo de
+      sus compañeros.
     </p>
     <h3>- Actividad:</h3>
     <p>Poner en el medio una imagen de Jesús, que todos la vean.</p>
@@ -235,7 +236,7 @@
       saber a sus compañeras la razón de por qué se sentía alegre como pájaro en
       primavera.
     </p>
-    <p>¿Saben? - dijo: He hecho mi confesión general.</p>
+    <p>¿Saben? &mdash; dijo: He hecho mi confesión general.</p>
     <p>¿Por qué no la hacen también ustedes?</p>
     <p>
       María desvió la conversación hacia otros temas. Este le quemaba y se
@@ -244,24 +245,25 @@
     <p>a las compañeras para no prestarle atención.</p>
     <ul>
       <li>
-        - Si la hacen ellas - pensaba - también tendré que hacerla yo. Y se
-        convence a sí misma "La confesión general para algunos es necesaria,
-        para otros es indiferente y para otros es perjudicial"
+        &mdash; Si la hacen ellas &mdash; pensaba &mdash; también tendré que
+        hacerla yo. Y se convence a sí misma "La confesión general para algunos
+        es necesaria, para otros es indiferente y para otros es perjudicial"
       </li>
       <li>
-        - Muy bien - dijo entonces María - para mi es perjudicial, por tanto, no
-        la haré. Cuando decide insinuárselo a Don Pestarino, él le dijo:
+        &mdash; Muy bien &mdash; dijo entonces María &mdash; para mi es
+        perjudicial, por tanto, no la haré. Cuando decide insinuárselo a Don
+        Pestarino, él le dijo:
       </li>
       <li>
-        - Exactamente: para algunos es perjudicial. Pero para ti es necesaria.
-        Conviene que la hagas.
+        &mdash; Exactamente: para algunos es perjudicial. Pero para ti es
+        necesaria. Conviene que la hagas.
       </li>
-      <li>- ¿Cuándo?- Ahora mismo.</li>
-      <li>- Pero no estoy preparada - puso como excusa.</li>
+      <li>&mdash; ¿Cuándo?&mdash; Ahora mismo.</li>
+      <li>&mdash; Pero no estoy preparada &mdash; puso como excusa.</li>
       <li>
-        - Yo te preparare - fue la respuesta En pocos minutos, hizo la confesión
-        general que tanto temía y se volvió muy contenta a su casa, pensando lo
-        tonta que había sido de no haberla hecho antes.
+        &mdash; Yo te preparare &mdash; fue la respuesta En pocos minutos, hizo
+        la confesión general que tanto temía y se volvió muy contenta a su casa,
+        pensando lo tonta que había sido de no haberla hecho antes.
       </li>
     </ul>
     <p>
@@ -273,7 +275,8 @@
     <p>¿Y ahora qué?</p>
     <p>¿Qué nos produce el perdón?</p>
     <p>
-      Leer la última parte del Evangelio del "Hijo pródigo" (Lc. 15, 22 - 24; 32)
+      Leer la última parte del Evangelio del "Hijo pródigo" (Lc. 15, 22 - 24;
+      32)
     </p>
     <p>Ver contenidos: El perdón trae alegría</p>
     <p>
@@ -322,8 +325,8 @@
       prójimo.
     </p>
     <p>
-      El perdón es motivo de alegría, de fiesta, nos devuelve la paz. Dios nos da
-      su abrazo de Padre. Nuestras manos sirven para reconciliarnos y
+      El perdón es motivo de alegría, de fiesta, nos devuelve la paz. Dios nos
+      da su abrazo de Padre. Nuestras manos sirven para reconciliarnos y
       abrazarnos nuevamente.
     </p>
     <p>
@@ -373,14 +376,14 @@
     <p>
       Los que no tienen amor no son capaces de perdonar, y no sienten deseos de
       mejorar una amistad deteriorada. Si guardás en tu corazón rencores o
-      venganzas es porque tenés que crecer en el amor. De otra forma, en vez
-      de acercarse, se alimentan las divisiones y se aumentan
+      venganzas es porque tenés que crecer en el amor. De otra forma, en vez de
+      acercarse, se alimentan las divisiones y se aumentan
     </p>
     <p>las distancias.</p>
     <p>
       Si sos capaz de reconocer que te equivocás y alguna vez supiste pedir
-      perdón, entendé también que los otros pueden equivocarse y que desean
-      que los perdones sinceramente.
+      perdón, entendé también que los otros pueden equivocarse y que desean que
+      los perdones sinceramente.
     </p>
     <p>
       No hay amor posible sin frecuentes perdones mutuos. Así es entre los
@@ -438,8 +441,8 @@
         >«Por eso, el Reino de los Cielos se parece a un rey que quiso arreglar
         las cuentas con sus servidores.Comenzada la tarea, le presentaron a uno
         que debía diez mil talentos. Como no podía pagar, el rey mandó que fuera
-        vendido junto con su mujer, sus hijos y todo lo que tenía, para saldar la
-        deuda.</em
+        vendido junto con su mujer, sus hijos y todo lo que tenía, para saldar
+        la deuda.</em
       >
     </p>
     <p>
@@ -463,8 +466,8 @@
     <h3>El hijo pródigo (Lc, 15, 11-32)</h3>
     <p>
       <em
-        >«Jesús dijo también: “Un hombre tenía dos hijos. El menor de ellos dijo a
-        su padre: `Padre, dame la parte de herencia que me corresponde´. Y el
+        >«Jesús dijo también: “Un hombre tenía dos hijos. El menor de ellos dijo
+        a su padre: `Padre, dame la parte de herencia que me corresponde´. Y el
         padre les repartió sus bienes. Pocos días después, el hijo menor recogió
         todo lo que tenía y se fue a un país lejano, donde malgastó sus bienes
         en una vida licenciosa. Ya había gastado todo, cuando sobrevino mcha
@@ -496,12 +499,13 @@
     <p>
       <em
         >`Hace tantos años que te sirvo sin haber desobedecido jamás ni una sola
-        de tus órdenes, y nunca me diste un cabrito para hacer una fiesta con mis
-        amigos. ¡Y ahora que ese hijo tuyo ha vuelto, después de haber gastado
-        tus bienes con mujeres, haces matar para él el ternero engordado! ´.
-        Pero el padre le dijo: `Hijo mío, tú estás siempre conmigo, y todo lo mío
-        es tuyo. Es justo que haya fiesta y alegría, porque tu hermano estaba
-        muerto y ha vuelto a la vida, estaba perdido y ha sido encontrado´».</em
+        de tus órdenes, y nunca me diste un cabrito para hacer una fiesta con
+        mis amigos. ¡Y ahora que ese hijo tuyo ha vuelto, después de haber
+        gastado tus bienes con mujeres, haces matar para él el ternero
+        engordado! ´. Pero el padre le dijo: `Hijo mío, tú estás siempre
+        conmigo, y todo lo mío es tuyo. Es justo que haya fiesta y alegría,
+        porque tu hermano estaba muerto y ha vuelto a la vida, estaba perdido y
+        ha sido encontrado´».</em
       >
     </p>
     <h3>Los heridos y agobiados (Mt. 11, 28-30)</h3>
@@ -587,14 +591,14 @@
       nuestros hermanos.
     </p>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
-      <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
+      <li><strong>Reflexión:</strong> Ver actividad N°1.</li>
+      <li><strong>Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDADES N° 3 – EL PUENTE</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende que los rastreadores-hogueras tomen la iniciativa a
-      la hora de reconciliarse con otras personas.
+      La actividad pretende que los rastreadores&ndash;hogueras tomen la
+      iniciativa a la hora de reconciliarse con otras personas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -644,14 +648,14 @@
       o reestablecer su amistad con alguien en particular.
     </p>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
-      <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
+      <li><strong>Reflexión:</strong> Ver actividad N°1.</li>
+      <li><strong>Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDADES N° 4 – PERDONÁNDOSE MUTUAMENTE</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende que los rastreadores-hogueras tomen la iniciativa a
-      la hora de reconciliarse con otras personas.
+      La actividad pretende que los rastreadores&ndash;hogueras tomen la
+      iniciativa a la hora de reconciliarse con otras personas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -682,8 +686,8 @@
       dar una nueva oportunidad.
     </p>
     <ul>
-      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
-      <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
+      <li><strong>Reflexión:</strong> Ver actividad N°1.</li>
+      <li><strong>Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h2>EVALUACIÓN</h2>
     <p>
